jameel noori nastaleeq

--- a/tex/electronicsDifferencePair.tex
+++ b/tex/electronicsDifferencePair.tex
@@ -362,15 +362,15 @@ i_{C2}&=I_{C} - g_m \frac{v_d}{2}
 یہاں رک کر شکل \حوالہ{شکل_باریک_تفرقی_اشارے_پر_صورت_حال}  میں دکھائے \عددی{i_{C1}} اور \عددی{i_{C2}} کا مساوات \حوالہ{مساوات_تفرقی_پہلی_رو_تسلسل_کے_دو_جز} میں حاصل کئے گئے قیمتوں کے ساتھ موازنہ کریں۔آپ دیکھ سکتے ہیں کہ  \عددی{\alpha \Delta I = \frac{\alpha I}{V_T}\frac{v_d}{2}}ہے۔باریک داخلی اشارے پر  مساوات \حوالہ{مساوات_تفرقی_اشاراتی_رو}  کی مدد سے  تفرقی جوڑے میں برقی رو \عددی{i_c}  حاصل کی جا سکتی ہے۔یہ ایک اہم نتیجہ ہے جس پر اگلے حصے میں تبصرہ کیا جائے گا۔
 
 
-\جزوحصہ{برقی رو کا حصول بذریعہ ٹرانزسٹر ماڈل}
+\جزوحصہ{برقی رو کا حصول بذریعہ ٹرانزسٹر ریاضی نمونہ}
  گزشتہ حصہ میں مساوات \حوالہ{مساوات_تفرقی_اشاراتی_رو}  حاصل کی گئی جس کے مدد سے تفرقی جوڑے میں برقی رو  \عددی{i_c}  حاصل کی جا سکتی ہے۔آئیں اسی مساوات کو انتہائی سادہ طریقہ سے  حاصل کریں۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{differencePairUsingModel}
-\caption{تفرقی برقی رو کا حصول بذریعہ ماڈل}
+\caption{تفرقی برقی رو کا حصول بذریعہ ریاضی نمونہ}
 \label{شکل_تفرقی_رو_بذریعہ_ماڈل}
 \end{figure}
-شکل \حوالہ{شکل_تفرقی_رو_بذریعہ_ماڈل} ب میں تفرقی جوڑے کا مساوی بدلتی رو شکل دکھایا گیا ہے جہاں تمام یک سمتی منبع برقی دباو کو قصر دور  اور تمام یک سمتی منبع برقی رو کو کھلے سرے  کیا گیا ہے۔شکل \حوالہ{شکل_تفرقی_رو_بذریعہ_ماڈل} الف میں ٹرانزسٹر کے ٹی-ماڈل استعمال کر کے اسی کا مساوی دور بنایا گیا ہے جہاں سے صاف ظاہر ہے کہ
+شکل \حوالہ{شکل_تفرقی_رو_بذریعہ_ماڈل} ب میں تفرقی جوڑے کا مساوی بدلتی رو شکل دکھایا گیا ہے جہاں تمام یک سمتی منبع برقی دباو کو قصر دور  اور تمام یک سمتی منبع برقی رو کو کھلے سرے  کیا گیا ہے۔شکل \حوالہ{شکل_تفرقی_رو_بذریعہ_ماڈل} الف میں ٹرانزسٹر کے ٹی-ریاضی نمونہ استعمال کر کے اسی کا مساوی دور بنایا گیا ہے جہاں سے صاف ظاہر ہے کہ
 \begin{align}
 i_e=\frac{v_{b1}-v_{b2}}{2 r_e}=\frac{v_d}{2 r_e}
 \end{align}
@@ -384,7 +384,7 @@ i_c = \alpha i_e = g_m \frac{v_d}{2}
 \end{align}
 اس طرح نہایت آسانی سے اس مساوات کو حاصل کیا گیا۔
 
-یہ مساوات حاصل کرتے وقت ماڈل بنانا ضروری نہیں۔ شکل \حوالہ{شکل_تفرقی_رو_بذریعہ_ماڈل} ب میں ایمٹر سرے کے مزاحمت \عددی{r_e} کو تفرقی جوڑے کے اندر جانب دکھایا گیا ہے۔یہ ایک تصوراتی شکل ہے جسے دیکھ کر آپ مساوت  لکھ سکتے ہیں۔
+یہ مساوات حاصل کرتے وقت ریاضی نمونہ بنانا ضروری نہیں۔ شکل \حوالہ{شکل_تفرقی_رو_بذریعہ_ماڈل} ب میں ایمٹر سرے کے مزاحمت \عددی{r_e} کو تفرقی جوڑے کے اندر جانب دکھایا گیا ہے۔یہ ایک تصوراتی شکل ہے جسے دیکھ کر آپ مساوت  لکھ سکتے ہیں۔
 
 ان دونوں اشکال کو دیکھ کر خارجی برقی دباو \عددی{v_o}حاصل کیا جا سکتا ہے یعنی
 \begin{align}
@@ -424,7 +424,7 @@ A_d&=\frac{v_o}{v_d}=+\frac{\alpha R_C}{r_e+R_E} \approx +\frac{R_C}{r_e+R_E}
 \caption{تفرقی جوڑے کی داخلی تفرقی مزاحمت}
 \label{شکل_تفرقی_جوڑے_کی_داخلی_مزاحمت}
 \end{figure}
-تفرقی جوڑے میں دونوں ٹرانزسٹر کے \عددی{\pi}  ماڈل استعمال کرتے شکل \حوالہ{شکل_تفرقی_جوڑے_کی_داخلی_مزاحمت} ب حاصل ہوتا ہے جس سے اس کی داخلی برقی رو \عددی{i_b} 
+تفرقی جوڑے میں دونوں ٹرانزسٹر کے \عددی{\pi}  ریاضی نمونہ استعمال کرتے شکل \حوالہ{شکل_تفرقی_جوڑے_کی_داخلی_مزاحمت} ب حاصل ہوتا ہے جس سے اس کی داخلی برقی رو \عددی{i_b} 
 \begin{align}
 i_b=\frac{v_{b1}-v_{b2}}{2 r_{be}}=\frac{v_d}{2 r_{be}}
 \end{align}
@@ -432,7 +432,7 @@ i_b=\frac{v_{b1}-v_{b2}}{2 r_{be}}=\frac{v_d}{2 r_{be}}
 \begin{align}
 R_{id}=\frac{v_b}{i_b}=2 r_{be}
 \end{align}
-یہی دو جوابات مکمل ماڈل بنانے کے بغیر بھی حاصل کئے جا سکتے ہیں جیسے شکل \حوالہ{شکل_تفرقی_جوڑے_کی_داخلی_مزاحمت} الف میں دکھایا گیا ہے جہاں دونوں ٹرانزسٹر کے داخلی مزاحمت \عددی{r_{be}}  کو  ان کے داخلی جانب دکھا کر واضح کیا گیا ہے۔
+یہی دو جوابات مکمل ریاضی نمونہ بنانے کے بغیر بھی حاصل کئے جا سکتے ہیں جیسے شکل \حوالہ{شکل_تفرقی_جوڑے_کی_داخلی_مزاحمت} الف میں دکھایا گیا ہے جہاں دونوں ٹرانزسٹر کے داخلی مزاحمت \عددی{r_{be}}  کو  ان کے داخلی جانب دکھا کر واضح کیا گیا ہے۔
 
 اسی طریقے کو شکل \حوالہ{شکل_اشاراتی_برقی_رو_کے_سادہ_طریقے_کی_ایک_اور_مثال}  میں دکھائے تفرقی جوڑے کے لئے استعمال کرتے ہیں۔چونکہ اس شکل میں
 \begin{align}
@@ -446,7 +446,7 @@ i_b=\frac{i_e}{\beta+1}=\frac{1}{\beta+1} \left(\frac{v_d}{2 r_e +2 R_E} \right 
 \begin{align}
 R_{id}=\frac{v_d}{i_b}=\left(\beta+1 \right ) \left(2 r_e+2 R_E \right )
 \end{align}
-اب تک ہم تصور کرتے رہے ہیں کہ تفرقی ایمپلیفائر میں استعمال کئے جانے والے یک سمتی  منبع رو کی اندرونی مزاحمت لامحدود ہوتی ہے۔حقیقت میں پائے جانے والے یک سمتی  منبع رو کی اندرونی مزاحمت نہایت زیادہ مگر محدود ہوتی ہے۔شکل \حوالہ{شکل_باریک_اشاراتی_مزاحمت_کو_زیر_نظر} الف میں یک سمتی  منبع رو کا مساوی \اصطلاح {نارٹن دور}\حاشیہب{Norton equivalent} استعمال کرتے ہوئے اس کے اندرونی باریک اشاراتی مزاحمت  \عددی{R} کو بھی شامل کیا گیا ہے۔اس شکل میں ٹرانزسٹر کا اندرونی مزاحمت  \عددی{r_e} کو تفرقی جوڑے کے اندر جانب فرضی طور دکھایا گیا ہے۔شکل \حوالہ{شکل_باریک_اشاراتی_مزاحمت_کو_زیر_نظر} ب میں اس ایمپلیفائر کے داخلی جانب کا باریک اشاراتی ماڈل دکھایا گیا ہے۔
+اب تک ہم تصور کرتے رہے ہیں کہ تفرقی ایمپلیفائر میں استعمال کئے جانے والے یک سمتی  منبع رو کی اندرونی مزاحمت لامحدود ہوتی ہے۔حقیقت میں پائے جانے والے یک سمتی  منبع رو کی اندرونی مزاحمت نہایت زیادہ مگر محدود ہوتی ہے۔شکل \حوالہ{شکل_باریک_اشاراتی_مزاحمت_کو_زیر_نظر} الف میں یک سمتی  منبع رو کا مساوی \اصطلاح {نارٹن دور}\حاشیہب{Norton equivalent} استعمال کرتے ہوئے اس کے اندرونی باریک اشاراتی مزاحمت  \عددی{R} کو بھی شامل کیا گیا ہے۔اس شکل میں ٹرانزسٹر کا اندرونی مزاحمت  \عددی{r_e} کو تفرقی جوڑے کے اندر جانب فرضی طور دکھایا گیا ہے۔شکل \حوالہ{شکل_باریک_اشاراتی_مزاحمت_کو_زیر_نظر} ب میں اس ایمپلیفائر کے داخلی جانب کا باریک اشاراتی ریاضی نمونہ دکھایا گیا ہے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{differencePairInputResistanceA}
@@ -461,7 +461,7 @@ R_{id}=\frac{v_d}{i_b}=\left(\beta+1 \right ) \left(2 r_e+2 R_E \right )
 \begin{align}\label{مساوات_تفرقی_جوڑا_تفرقی_اشارے_کے_لئے_جوڑے_کی_مخارج_برقی_زمین_ہے}
 v_e=0
 \end{align}
-اس نتیجے کے مطابق باریک تفرقی اشارہ \عددی{v_d}  کا \عددی{v_e} پر کوئی اثر نہیں ہوتا اور \عددی{v_e}   ہر وقت صفر وولٹ یعنی برقی زمین پر رہتا ہے۔اس حقیقت کو مدِ نظر رکھتے ہوئے شکل \حوالہ{شکل_باریک_اشاراتی_مزاحمت_کو_زیر_نظر} الف  کا (باریک تفرقی اشارہ کے لئے) مساوی سادہ دور شکل \حوالہ{شکل_تفرقی_جوڑا_بطور_مخارج_جڑے_ایمپلیفائر} الف میں دکھایا گیا ہے۔اس شکل میں تفرقی ایمپلیفائر کو دو عدد \اصطلاح {مشترک-ایمٹر ایمپلیفائر}\فرہنگ{مشترک-مخارج}\فرہنگ{CE amplifier}  تصور کرنا دکھایا گیا ہے جہاں بائیں ہاتھ کے ایمپلیفائر کا داخلی اشارہ \عددی{+\frac{v_d}{2}} اور اس کا خارجی اشارہ \عددی{v_{c1}} ہے جبکہ دائیں ایمپلیفائر کا داخلی اشارہ \عددی{-\frac{v_d}{2}} اور اس کا خارجی اشارہ \عددی{v_{c2}} ہے۔شکل  ب میں بائیں ہاتھ کے ایمپلیفائر کا باریک اشاراتی ماڈل دکھایا گیا ہے جہاں ٹرانزسٹر کے اندرونی \اصطلاح {خارجی مزاحمت} \عددی{r_o} کے اثر کو بھی شامل کیا گیا ہے۔اس  ماڈل سے آدھے دور کا \اصطلاح {داخلی باریک اشاراتی مزاحمت} \عددی{r_{be}}  کے برابر حاصل ہوتا ہے۔تفرقی ایمپلیفائر کا داخلی باریک اشاراتی مزاحمت اس کا دگنا ہو گا یعنی
+اس نتیجے کے مطابق باریک تفرقی اشارہ \عددی{v_d}  کا \عددی{v_e} پر کوئی اثر نہیں ہوتا اور \عددی{v_e}   ہر وقت صفر وولٹ یعنی برقی زمین پر رہتا ہے۔اس حقیقت کو مدِ نظر رکھتے ہوئے شکل \حوالہ{شکل_باریک_اشاراتی_مزاحمت_کو_زیر_نظر} الف  کا (باریک تفرقی اشارہ کے لئے) مساوی سادہ دور شکل \حوالہ{شکل_تفرقی_جوڑا_بطور_مخارج_جڑے_ایمپلیفائر} الف میں دکھایا گیا ہے۔اس شکل میں تفرقی ایمپلیفائر کو دو عدد \اصطلاح {مشترک-ایمٹر ایمپلیفائر}\فرہنگ{مشترک-مخارج}\فرہنگ{CE amplifier}  تصور کرنا دکھایا گیا ہے جہاں بائیں ہاتھ کے ایمپلیفائر کا داخلی اشارہ \عددی{+\frac{v_d}{2}} اور اس کا خارجی اشارہ \عددی{v_{c1}} ہے جبکہ دائیں ایمپلیفائر کا داخلی اشارہ \عددی{-\frac{v_d}{2}} اور اس کا خارجی اشارہ \عددی{v_{c2}} ہے۔شکل  ب میں بائیں ہاتھ کے ایمپلیفائر کا باریک اشاراتی ریاضی نمونہ دکھایا گیا ہے جہاں ٹرانزسٹر کے اندرونی \اصطلاح {خارجی مزاحمت} \عددی{r_o} کے اثر کو بھی شامل کیا گیا ہے۔اس  ریاضی نمونہ سے آدھے دور کا \اصطلاح {داخلی باریک اشاراتی مزاحمت} \عددی{r_{be}}  کے برابر حاصل ہوتا ہے۔تفرقی ایمپلیفائر کا داخلی باریک اشاراتی مزاحمت اس کا دگنا ہو گا یعنی
 \begin{align}
 R_{id}=2 r_{be}
 \end{align}
@@ -1283,7 +1283,7 @@ I_{\textrm{عکس}} R_E=V_T \ln \left(\frac{I_{\textrm{حوالہ}}}{I_{\textrm{
 
 آئیں وائڈلر منبع برقی رو کی خارجی مزاحمت \عددیء{R_o} حاصل کریں۔ایسا کرنے کی خاطر \عددی{Q_2} کے کلکٹر پر \عددیء{v_t} برقی دباو مہیا کرتے ہوئے \عددیء{i_t} کا حساب لگا کر \عددیء{\tfrac{v_t}{i_t}} معلوم کیا جا سکتا ہے جو کہ \عددیء{R_o} کی قیمت ہو گی۔
 
-وائڈلر منبع برقی رو میں \عددیء{Q_1} کے کلکٹر اور بیس آپس میں جڑے ہیں۔یوں یہ بطور ڈایوڈ کردار ادا کرتا ہے۔صفحہ \حوالہصفحہ{مساوات_ٹرانزسٹر_ڈایوڈ_جڑے_ٹرانزسٹر_کی_مزاحمت} پر مساوات \حوالہ{مساوات_ٹرانزسٹر_ڈایوڈ_جڑے_ٹرانزسٹر_کی_مزاحمت} ایسے ٹرانزسٹر کی مزاحمت \عددیء{r_e} دیتا ہے۔وائڈلر منبع رو کی خارجی مزاحمت حاصل کرنے کی خاطر \عددیء{Q_2} کا پائے ماڈل استعمال کرتے ہیں جبکہ \عددیء{Q_1} کی جگہ اس کا باریک اشاراتی مساوی مزاحمت \عددیء{r_e} نسب کرتے ہیں۔ایسا کرتے ہوئے شکل \حوالہ{شکل_تفرقی_وائڈلر_پیداکار_برقی_رو_مساوی} الف حاصل ہوتا ہے۔آپ جانتے ہیں کہ \عددیء{r_{be}=r_e\left(\beta+1 \right)} ہوتا ہے۔یوں \عددیء{r_{be}\gg r_e} ہے لہٰذا سلسلہ وار جڑے \عددیء{r_{be}} اور \عددیء{r_e} میں \عددیء{r_e} کو نظرانداز کیا جا سکتا ہے۔ایسا کرنے سے شکل  ب حاصل ہوتا ہے جہاں سے صاف ظاہر ہے کہ \عددیء{R_E} اور \عددیء{r_{be}} متوازی جڑے ہیں۔\عددیء{R_E \mathbin{\|} r_{be}} کو \عددیء{R_E'} لکھتے ہوئے اس میں برقی رو کو \عددیء{\tfrac{v_{be}}{R_E'}} لکھا جا سکتا ہے۔
+وائڈلر منبع برقی رو میں \عددیء{Q_1} کے کلکٹر اور بیس آپس میں جڑے ہیں۔یوں یہ بطور ڈایوڈ کردار ادا کرتا ہے۔صفحہ \حوالہصفحہ{مساوات_ٹرانزسٹر_ڈایوڈ_جڑے_ٹرانزسٹر_کی_مزاحمت} پر مساوات \حوالہ{مساوات_ٹرانزسٹر_ڈایوڈ_جڑے_ٹرانزسٹر_کی_مزاحمت} ایسے ٹرانزسٹر کی مزاحمت \عددیء{r_e} دیتا ہے۔وائڈلر منبع رو کی خارجی مزاحمت حاصل کرنے کی خاطر \عددیء{Q_2} کا پائے ریاضی نمونہ استعمال کرتے ہیں جبکہ \عددیء{Q_1} کی جگہ اس کا باریک اشاراتی مساوی مزاحمت \عددیء{r_e} نسب کرتے ہیں۔ایسا کرتے ہوئے شکل \حوالہ{شکل_تفرقی_وائڈلر_پیداکار_برقی_رو_مساوی} الف حاصل ہوتا ہے۔آپ جانتے ہیں کہ \عددیء{r_{be}=r_e\left(\beta+1 \right)} ہوتا ہے۔یوں \عددیء{r_{be}\gg r_e} ہے لہٰذا سلسلہ وار جڑے \عددیء{r_{be}} اور \عددیء{r_e} میں \عددیء{r_e} کو نظرانداز کیا جا سکتا ہے۔ایسا کرنے سے شکل  ب حاصل ہوتا ہے جہاں سے صاف ظاہر ہے کہ \عددیء{R_E} اور \عددیء{r_{be}} متوازی جڑے ہیں۔\عددیء{R_E \mathbin{\|} r_{be}} کو \عددیء{R_E'} لکھتے ہوئے اس میں برقی رو کو \عددیء{\tfrac{v_{be}}{R_E'}} لکھا جا سکتا ہے۔
 %
 \begin{figure}
 \centering
@@ -1421,7 +1421,7 @@ I_{\textrm{عکس}} \approx \left[\frac{1}{1+\frac{2}{\beta^2 }} \right] I_{\tex
 \label{شکل_تفرقی_ولسن_آئینے_کی_خارجی_مزاحمت}
 \end{figure}
 
-آئیں آئینے کی خارجی مزاحمت حاصل کریں۔ایسا کرنے کی خاطر \عددیء{Q_3} کے کلکٹر پر \عددیء{v_t} لاگو کرتے ہوئے \عددیء{i_t} کا حساب لگاتے ہیں۔\عددیء{\tfrac{v_t}{i_t}} خارجی مزاحمت \عددیء{R_o} ہو گا۔\عددیء{Q_3} کا پائے ماڈل استعمال کرتے ہوئے ولسن آئینے کو شکل \حوالہ{شکل_تفرقی_ولسن_آئینے_کی_خارجی_مزاحمت} میں دکھایا گیا ہے۔نقطہ دار دائرے سے  دو جگہ \عددیء{i_c} برقی رو خارج اور ایک جگہ \عددیء{i_t} داخلی ہو رہی ہے۔یوں کرچاف کے قانون برائے برقی رو کی مدد سے ہم لکھ سکتے ہیں
+آئیں آئینے کی خارجی مزاحمت حاصل کریں۔ایسا کرنے کی خاطر \عددیء{Q_3} کے کلکٹر پر \عددیء{v_t} لاگو کرتے ہوئے \عددیء{i_t} کا حساب لگاتے ہیں۔\عددیء{\tfrac{v_t}{i_t}} خارجی مزاحمت \عددیء{R_o} ہو گا۔\عددیء{Q_3} کا پائے ریاضی نمونہ استعمال کرتے ہوئے ولسن آئینے کو شکل \حوالہ{شکل_تفرقی_ولسن_آئینے_کی_خارجی_مزاحمت} میں دکھایا گیا ہے۔نقطہ دار دائرے سے  دو جگہ \عددیء{i_c} برقی رو خارج اور ایک جگہ \عددیء{i_t} داخلی ہو رہی ہے۔یوں کرچاف کے قانون برائے برقی رو کی مدد سے ہم لکھ سکتے ہیں
 \begin{align}\label{مساوات_تفرقی_ولسن_ٹیست_برقی_رو}
 i_t=2 i_c
 \end{align}
@@ -1911,14 +1911,14 @@ V_{OS}&=\frac{V_O}{A_d}=- 2 \Delta V_t
 \عددیء{\Delta R_S} اور \عددی{\Delta \left(\tfrac{W}{L} \right)} کی وجہ سے پیدا \عددیء{V_{OS}} کو کم رکھنے کی خاطر ماسفیٹ کو کم سے کم \عددیء{\left(V_{GS}-V_t \right)} پر چلایا جاتا ہے۔دو جوڑ ٹرانزسٹر کے تفرقی جوڑے میں داخلی انحرافی برقی دباو دونوں بازووں  کے \عددی{R_C} میں فرق اور دونوں ٹرانزسٹروں کے \عددی{I_S} میں فرق کی بنا پر پیدا ہوتا ہے۔ماسفیٹ کے تفرقی جوڑے میں داخلی انحرافی برقی دباو پیدا کرنے کی تیسری وجہ \عددی{V_t} بھی پائی جاتی ہے۔
 %===================
 \حصہ{ماسفیٹ آئینہ برقی رو}
-شکل \حوالہ{شکل_تفرقی_سادہ_آئینے_کی_خارجی_مزاحمت} میں ماسفیٹ کا سادہ آئینہ برقی رو دکھایا گیا ہے جس کو دیکھتے ہی ہم کہہ سکتے ہیں کہ \عددیء{R_o=r_{o2}} کے برابر ہے۔آئیں یہی نتیجہ ماسفیٹ ماڈل استعمال کرتے ہوئے حاصل کریں۔خارجی مزاحمت حاصل کرنے کی خاطر \عددیء{Q_2} کے ڈرین پر باریک اشاراتی \عددیء{v_t} لاگو کرتے ہوئے \عددیء{i_t} کا تخمینہ لگا کر \عددیء{\tfrac{v_t}{i_t}} سے خارجی مزاحمت \عددیء{R_o} حاصل کیا جا سکتا ہے۔
+شکل \حوالہ{شکل_تفرقی_سادہ_آئینے_کی_خارجی_مزاحمت} میں ماسفیٹ کا سادہ آئینہ برقی رو دکھایا گیا ہے جس کو دیکھتے ہی ہم کہہ سکتے ہیں کہ \عددیء{R_o=r_{o2}} کے برابر ہے۔آئیں یہی نتیجہ ماسفیٹ ریاضی نمونہ استعمال کرتے ہوئے حاصل کریں۔خارجی مزاحمت حاصل کرنے کی خاطر \عددیء{Q_2} کے ڈرین پر باریک اشاراتی \عددیء{v_t} لاگو کرتے ہوئے \عددیء{i_t} کا تخمینہ لگا کر \عددیء{\tfrac{v_t}{i_t}} سے خارجی مزاحمت \عددیء{R_o} حاصل کیا جا سکتا ہے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{mosfetSimpleCurrentMirror}
 \caption{سادہ آئینے کی خارجی مزاحمت}
 \label{شکل_تفرقی_سادہ_آئینے_کی_خارجی_مزاحمت}
 \end{figure}
-شکل \حوالہ{شکل_تفرقی_سادہ_آئینے_کی_خارجی_مزاحمت} میں دونوں ٹرانزسٹر کے ماڈل استعمال کرتے ہوئے مساوی باریک اشاراتی مساوی دور بھی دکھایا گیا ہے۔\عددیء{v_t} کی عدم موجودگی میں دونوں ٹرانزسٹر کے \عددیء{v_{be}=\SI{0}{\volt}} رہتے ہیں جس  کی بنا پر دونوں کے \عددیء{g_m v_{be}=\SI{0}{\ampere}} ہوں گے۔\عددیء{v_t} لاگو کرنے سے دونوں ٹرانزسٹروں کے \عددیء{v_{be}} پر برقی دباو تبدیل نہیں ہوتا لہٰذا اب بھی دونوں کے \عددیء{g_m v_{be}=\SI{0}{\ampere}}  ہی ہوں گے۔اس طرح \عددیء{i_t=\tfrac{v_t}{r_{02}}} ہو گا جس سے \عددیء{R_o=r_{02}} حاصل ہوتا ہے۔
+شکل \حوالہ{شکل_تفرقی_سادہ_آئینے_کی_خارجی_مزاحمت} میں دونوں ٹرانزسٹر کے ریاضی نمونہ استعمال کرتے ہوئے مساوی باریک اشاراتی مساوی دور بھی دکھایا گیا ہے۔\عددیء{v_t} کی عدم موجودگی میں دونوں ٹرانزسٹر کے \عددیء{v_{be}=\SI{0}{\volt}} رہتے ہیں جس  کی بنا پر دونوں کے \عددیء{g_m v_{be}=\SI{0}{\ampere}} ہوں گے۔\عددیء{v_t} لاگو کرنے سے دونوں ٹرانزسٹروں کے \عددیء{v_{be}} پر برقی دباو تبدیل نہیں ہوتا لہٰذا اب بھی دونوں کے \عددیء{g_m v_{be}=\SI{0}{\ampere}}  ہی ہوں گے۔اس طرح \عددیء{i_t=\tfrac{v_t}{r_{02}}} ہو گا جس سے \عددیء{R_o=r_{02}} حاصل ہوتا ہے۔
 
 جیسے آپ جانتے ہیں کہ آئینے کی خارجی مزاحمت جتنی زیادہ ہو اتنا بہتر ہے۔آئیں ماسفیٹ کے ولسن آئینے پر غور کریں اور دیکھیں کہ اس کی خارجی مزاحمت کتنی حاصل ہوتی ہے۔
 \begin{figure}
@@ -1953,7 +1953,7 @@ R_{o1} \approx \frac{1}{g_{m1}}
 \label{شکل_تفرقی_ماسفیٹ_بطور_ڈایوڈ}
 \end{figure}
 
-شکل \حوالہ{شکل_تفرقی_ماسفیٹ_ولسن_آئینے_کی_خارجی_مزاحمت} الف میں \عددیء{Q_1} کی جگہ مزاحمت \عددیء{\tfrac{1}{g_{m1}}} جبکہ بقایا ٹرانزسٹروں کے ماڈل استعمال کرتے ہوئے شکل \حوالہ{شکل_تفرقی_ماسفیٹ_ولسن_مساوی_دور} حاصل ہوتا ہے۔یہاں رک کر تسلی کر لیں کہ یہی مساوی دور ہے۔ 
+شکل \حوالہ{شکل_تفرقی_ماسفیٹ_ولسن_آئینے_کی_خارجی_مزاحمت} الف میں \عددیء{Q_1} کی جگہ مزاحمت \عددیء{\tfrac{1}{g_{m1}}} جبکہ بقایا ٹرانزسٹروں کے ریاضی نمونہ استعمال کرتے ہوئے شکل \حوالہ{شکل_تفرقی_ماسفیٹ_ولسن_مساوی_دور} حاصل ہوتا ہے۔یہاں رک کر تسلی کر لیں کہ یہی مساوی دور ہے۔ 
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{mosfetWilsonCurrentMirrorEquivalent}
@@ -1965,7 +1965,7 @@ R_{o1} \approx \frac{1}{g_{m1}}
 \begin{align}\label{مساوات_تفرقی_ولسن_پہلا_ماسفیٹ}
 v_{gs2}=v_{1}=\frac{i_t}{g_{m1}}
 \end{align}
-لکھا جا سکتا ہے۔یوں \عددیء{Q_2} کے ماڈل میں
+لکھا جا سکتا ہے۔یوں \عددیء{Q_2} کے ریاضی نمونہ میں
 \begin{align*}
 g_{m2} v_{gs2}=\frac{g_{m2} i_t}{g_{m1}}
 \end{align*}
@@ -2061,7 +2061,7 @@ R=\frac{\sqrt{2}}{\sqrt{k_{n2} I_{D2}}} \left[ \sqrt{\frac{\left(\frac{W}{L} \ri
 \label{شکل_تفرقی_ماسفیٹ_کیسکوڈ}
 \end{figure}
 
-شکل \حوالہ{شکل_تفرقی_ماسفیٹ_کیسکوڈ_مزاحمت} میں کیسکوڈ ایمپلیفائر کا مطلوبہ حصہ دکھایا گیا ہے۔ساتھ ہی دونوں ماسفیٹ کے باریک اشاراتی ماڈل استعمال کرتے ہوئے مساوی دور بھی بنایا گیا ہے جہاں تفرقی داخلی اشارہ \عددیء{v_d=0} رکھا گیا ہے۔چونکہ \عددیء{Q_{a2}} کا سورس اور گیٹ دونوں برقی زمین پر ہیں لہٰذا \عددیء{v_{gs2}=0} ہے۔یوں \عددیء{g_{m2} v_{gs2}=0} ہو گا۔اس طرح \عددیء{Q_{a2}} کی جگہ صرف \عددیء{r_{o2}} نسب کیا جا سکتا تھا۔آپ دیکھ سکتے ہیں کہ \عددیء{i_t} تمام کی تمام \عددیء{r_{o2}} سے گزرتی ہے لہٰذا \عددیء{v_1=i_t r_{o2}} کے برابر ہے۔شکل سے صاف ظاہر ہے کہ \عددیء{v_{gs4}=-v_1} ہے یوں
+شکل \حوالہ{شکل_تفرقی_ماسفیٹ_کیسکوڈ_مزاحمت} میں کیسکوڈ ایمپلیفائر کا مطلوبہ حصہ دکھایا گیا ہے۔ساتھ ہی دونوں ماسفیٹ کے باریک اشاراتی ریاضی نمونہ استعمال کرتے ہوئے مساوی دور بھی بنایا گیا ہے جہاں تفرقی داخلی اشارہ \عددیء{v_d=0} رکھا گیا ہے۔چونکہ \عددیء{Q_{a2}} کا سورس اور گیٹ دونوں برقی زمین پر ہیں لہٰذا \عددیء{v_{gs2}=0} ہے۔یوں \عددیء{g_{m2} v_{gs2}=0} ہو گا۔اس طرح \عددیء{Q_{a2}} کی جگہ صرف \عددیء{r_{o2}} نسب کیا جا سکتا تھا۔آپ دیکھ سکتے ہیں کہ \عددیء{i_t} تمام کی تمام \عددیء{r_{o2}} سے گزرتی ہے لہٰذا \عددیء{v_1=i_t r_{o2}} کے برابر ہے۔شکل سے صاف ظاہر ہے کہ \عددیء{v_{gs4}=-v_1} ہے یوں
 \begin{gather}
 \begin{aligned}\label{مساوات_تفرقی_ماسفیٹ_کیسکوڈ_خارجی_مزاحمت}
 v_1&=i_t r_{o2}\\
