--- a/tex/electronicsDiode.tex
+++ b/tex/electronicsDiode.tex
@@ -863,8 +863,7 @@ V_{D_2}=V_T \ln \frac{I_{D_2}}{I_S}=-0.025 \times \ln \left ( \frac{0.9612233 \t
 \begin{align*}
 I_{D_3}=\frac{V_B-V_{D_2}}{R}=\frac{15-0.58168261}{15000}=\SI{0.9612211}{\milli \ampere}
 \end{align*}
-حاصل ہوتا ہے۔ہم دیکھتے ہیں کہ گزشتہ دو حاصل جواب یعنی\عددی{I_{D_2}=\SI{0.9612233}{\milli \ampere}}  اور \عددی{I_{D_3}=\SI{0.9612211}{\milli \ampere}} تقریباً برابر ہیں۔ایسا ہونا اس بات کی نشانی ہے کہ جواب اصل جواب کے بہت قریب ہے اور یوں \عددی{I_{D_4}=\SI{0.96122}{\milli \ampere}} کو ہم درست جواب تسلیم کر لیتے ہیں۔
-
+حاصل ہوتا ہے۔ہم دیکھتے ہیں کہ گزشتہ دو حاصل جواب یعنی\عددی{I_{D_2}}  اور \عددی{I_{D_3}} تقریباً برابر ہیں۔ایسا ہونا اس بات کی نشانی ہے کہ جواب اصل جواب کے بہت قریب ہے اور یوں \عددی{I_{D_4}=\SI{0.96122}{\milli \ampere}} کو ہم درست جواب تسلیم کر لیتے ہیں۔
 \انتہا{مثال}
 
 %=======
@@ -934,7 +933,8 @@ $ x_0 $ & $ x_1 $ & $ x_2 $ & $\cdots$ & $ x_n $ \\
 \end{LTR}
 \end{table}
 
-جدول \حوالہ{جدول_ایکس_بالمقابل_ٹی} میں دئے \عددی{x} پر شکل \حوالہ{شکل_وقت_کے_ساتھ_تبدیل_ہوتے_متغیرات} ب سے \عددی{y} کے قیمتیں حاصل کریں۔یوں آپ کے پاس \عددی{y_0,y_1,y_2,\dots y_n} حاصل ہوں گے۔ان قیمتوں کو استعمال کرتے ہوئے \عددی{y(t)} بالمقابل \عددی{t} کا جدول \حوالہ{جدول_وائے_بالمقابل_ٹی} حاصل ہو گا جسے شکل \حوالہ{شکل_وقت_کے_ساتھ_تبدیل_ہوتے_متغیرات} پ کی طرح گراف کریں۔
+جدول \حوالہ{جدول_ایکس_بالمقابل_ٹی} میں دئے \عددی{x} پر شکل \حوالہ{شکل_وقت_کے_ساتھ_تبدیل_ہوتے_متغیرات} ب سے \عددی{y} کے قیمتیں حاصل کریں۔یوں حاصل \عددی{y_0,y_1,y_2,\dots y_n}  کو استعمال کرتے ہوئے \عددی{y(t)} بالمقابل \عددی{t} کا جدول \حوالہ{جدول_وائے_بالمقابل_ٹی} حاصل ہو گا جسے شکل \حوالہ{شکل_وقت_کے_ساتھ_تبدیل_ہوتے_متغیرات} پ کی طرح گراف کریں۔
+
 \begin{table} [h]
 \caption{\عددی{y(t)} بالمقابل \عددی{t}  کا جدول}
 \label{جدول_وائے_بالمقابل_ٹی}
@@ -1172,7 +1172,7 @@ r_d =\frac{25 \times 10^{-3}}{25 \times 10^{-6}}=\SI{1000}{\ohm}
 \حصہ{طبیعیاتِ نیم موصل اشیاء}
  ڈایوڈ \اصطلاح {نیم موصل}\فرہنگ{نیم موصل}\فرہنگ{semiconductor}\حاشیہب{semiconductor} مواد سے بنائے جاتے ہیں۔اس حصہ میں نیم موصل اشیاء کی طبیعیات پر غور کیا جائے گا۔اگرچہ برقیاتی پرزہ جات جرمینیم یا سلیکان دونوں سے بنائے جا سکتے ہیں، حقیقت میں سلیکان کی عمدہ خوبیوں کی بدولت برقیاتی پرزہ جات زیادہ تر سلیکان سے ہی بنایا جاتا ہے۔اسی وجہ سے اس کتاب میں صرف سلیکان پر بات کی جائے گی۔
 
-کیمیائی \اصطلاح {دوری جدول}\فرہنگ{کیمیائی دوری جدول}\حاشیہب{periodic table}  کے چوتھے قطار یعنی چوتھے جماعت\فرہنگ{جماعت}\حاشیہب{group}  میں کاربن\عددی{\ce{C}}\حاشیہب{carbon}، سلیکان\عددی{\ce{Si}}\حاشیہب{silicon}، جرمینیم\عددی{\ce{Ge}}\حاشیہب{germanium} وغیرہ پائے جاتے ہیں۔ان تمام عناصر\حاشیہب{elements} کے ایٹمی نمونہ یا ایٹمی ماڈل\فرہنگ{ایٹمی ماڈل}\فرہنگ{atomic model}\حاشیہب{atomic model}  کے بیرونی مدار\حاشیہب{shell} میں چار الیکٹران\حاشیہب{electrons}  پائے جاتے ہیں۔یوں ان کی \اصطلاح {کیمیائی گرفت}\فرہنگ{کیمیائی گرفت}\فرہنگ{valency}\حاشیہب{valency}  \عددی{+4}     یا \عددی{-4} ممکن ہے۔اس جماعت کے عناصر \اصطلاح {شریک گرفتی بند}\فرہنگ{شریک گرفتی بند}\فرہنگ{covalent bond}\حاشیہب{covalent bond}  بناتے ہیں۔
+کیمیائی \اصطلاح {دوری جدول}\فرہنگ{کیمیائی دوری جدول}\حاشیہب{periodic table}  کے چوتھے قطار یعنی چوتھے جماعت\فرہنگ{جماعت}\حاشیہب{group}  میں کاربن\عددی{\ce{C}}\حاشیہب{carbon}، سلیکان\عددی{\ce{Si}}\حاشیہب{silicon}، جرمینیم\عددی{\ce{Ge}}\حاشیہب{germanium} وغیرہ پائے جاتے ہیں۔ان تمام عناصر\حاشیہب{elements} کے ایٹمی \اصطلاح{نمونہ}{ایٹمی نمونہ}\فرہنگ{atomic model}\حاشیہب{atomic model}  کے بیرونی مدار\حاشیہب{shell} میں چار الیکٹران\حاشیہب{electrons}  پائے جاتے ہیں۔یوں ان کی \اصطلاح {کیمیائی گرفت}\فرہنگ{کیمیائی گرفت}\فرہنگ{valency}\حاشیہب{valency}  \عددی{+4}     یا \عددی{-4} ممکن ہے۔اس جماعت کے عناصر \اصطلاح {شریک گرفتی بند}\فرہنگ{شریک گرفتی بند}\فرہنگ{covalent bond}\حاشیہب{covalent bond}  بناتے ہیں۔
 
 برقیاتی پرزہ جات بنانے کی خاطر \عددی{99.9999999} فی صد خالص سلیکان درکار ہوتا ہے جسے عموماً \اصطلاح {نو-نو صاف} سلیکان پکارا جاتا ہے۔اتنی خالص سلیکان حاصل کرنا از خود فنی مہارت کی انتہا ہے۔خالص سلیکان غیر موصل ہوتا ہے البتہ اس میں، نہایت باریک مقدار میں، مختلف اجزاء کی \اصطلاح {ملاوٹ}\فرہنگ{ملاوٹ}\فرہنگ{doping}\حاشیہب{doping}  سے اس کے \اصطلاح {موصلیت}\فرہنگ{موصلیت}\فرہنگ{conductance}\حاشیہب{conductance} کو تبدیل کر کے اسے موصل بنایا جا سکتا ہے۔اسی لئے سلیکان کو \اصطلاح {نیم موصل}\فرہنگ{نیم موصل}\حاشیہب{semiconductor}  پکارا جاتا ہے۔وزن کے لحاظ سے زمین کے بیرونی ٹھوس سطح کا \عددی{\SI{28}{\percent}} سلیکان پر مشتمل ہے۔عام ریت سلیکان اور آکسیجن کا مرکب \ce{SiO2} ہے۔
 
@@ -1625,10 +1625,10 @@ C_d=\frac{I_D \tau}{V_T}
 \جزوحصہ{ضیائی ذرائع ابلاغ}
 شکل \حوالہ{شکل_ضیائی_وابستہ_کار} ب میں \اصطلاح {ضیائی ذرائع ابلاغ}\فرہنگ{ضیائی!ذرائع ابلاغ}\فرہنگ{optical communication}\حاشیہب{optical communication}  کا نظام دکھایا گیا ہے جس کی کارکردگی کچھ یوں ہے۔نوری ڈایوڈ اور شمسی ڈایوڈ کے مابین \اصطلاح {شیش ریشہ}\فرہنگ{ضیائی!تار}\فرہنگ{optical cable}\حاشیہب{optical cable} یوں نسب کیا جاتا ہے کہ نوری ڈایوڈ سے خارج شعاعیں شیش ریشہ میں داخل ہوں اور شیش ریشہ کے دوسرے سرے سے خارج ہوتی شعاعیں شمسی ڈایوڈ پر پڑیں۔یوں ایک جانب نوری ڈایوڈ میں برقی رو گزارنے سے تار کے دوسری جانب برقی دباو حاصل ہوتا ہے۔اس نظام کو استعمال کرتے ہوئے ایک مقام سے دوسرے مقام اشارہ بھیجا جا سکتا ہے۔موجودہ نظام ابلاغ اسی پر منحصر ہے۔\اصطلاح {شیش ریشہ} ایک ایسی تار کو کہتے ہیں جس میں روشنی کے شعاع بغیر گھٹے گزرتی ہے۔ 
 
-\حصہ{ڈایوڈ کے ماڈل}
-	انجنیئرنگ کے شعبے میں کسی چیز کا اصل بنانے سے پہلے اس کا ماڈل تیار کیا جاتا ہے۔ اس ماڈل پر مختلف تجربے کئے جاتے ہیں۔ ان تجربات کے نتائج کو مدِ نظر رکھتے ہوئے ڈیزائن کو بہتر بنایا جاتا ہے اور صرف اُس وقت اصل تیار کیا جاتا ہے جب ڈیزائن کامیاب ثابت ہو۔موجودہ دور میں  کمپیوٹر کا استعمال اس پہلو سے نہایت اہم ہے۔یہاں یہ بتلانا ضروری ہے کہ انجنیئرنگ مفاہمت کے بغیر، کمپیوٹر کے ماڈل استعمال کرتے کبھی بھی کوئی چیز تیار نہیں کی جا سکتی۔کمپیوٹر صرف ایک آلہ ہے اور اس سے حاصل جوابات کی اہمیت کمپیوٹر استعمال کرنے والے کی قابلیت پر منحصر ہے۔
+\حصہ{ڈایوڈ کے ریاضی نمونے}
+	انجنیئرنگ کے شعبے میں کسی چیز کا اصل بنانے سے پہلے اس کا \اصطلاح{ریاضی نمونہ}\فرہنگ{ریاضی!نمونہ}\فرہنگ{نمونہ!ریاضی}\حاشیہب{mathematical model}\فرہنگ{model} تیار کیا جاتا ہے۔ اس ریاضی نمونے پر مختلف تجربے کئے جاتے ہیں۔ ان تجربات کے نتائج کو مدِ نظر رکھتے ہوئے ڈیزائن کو بہتر بنایا جاتا ہے اور صرف اُس وقت اصل تیار کیا جاتا ہے جب ڈیزائن کامیاب ثابت ہو۔موجودہ دور میں  کمپیوٹر کا استعمال اس پہلو سے نہایت اہم ہے۔یہاں یہ بتلانا ضروری ہے کہ انجنیئرنگ مفاہمت کے بغیر، کمپیوٹر کے ریاضی نمونے استعمال کرتے کبھی بھی کوئی چیز تیار نہیں کی جا سکتی۔کمپیوٹر صرف ایک آلہ ہے اور اس سے حاصل جوابات کی اہمیت کمپیوٹر استعمال کرنے والے کی قابلیت پر منحصر ہے۔
 
-\جزوحصہ{سیدھے خطوط کا ماڈل} 
+\جزوحصہ{سیدھے خطوط کا ریاضی نمونہ} 
 ڈایوڈ کی برقی رو یا اس پر برقی دباو ڈایوڈ کی مساوات سے حاصل کی جا سکتی ہے۔عموماً اوقات ہمیں عمومی جوابات مطلوب ہوتے ہیں اور ہم اس مساوات کو حل کرنے کی پیچیدگیوں میں نہیں پڑنا چاہتے۔یہ بات خاص کر اس وقت کے لئے درست ہے جب قلم و کاغذ سے جواب حاصل کرنے کی کوشش کی جا رہے ہو۔
 
 شکل \حوالہ{شکل_مساوات_کا_سیدھے_خطوط_سے_اظہار} میں ڈایوڈ کی مساوات کا گراف دکھایا گیا ہے۔زیادہ باریکیوں کو نظر انداز کرتے ہوئے ڈایوڈ کے گراف کو دو سیدھے خط تصور کیا جا سکتا ہے جنہیں خط-ا اور خط  ب کہا گیا ہے۔خط  الف برقی دباو کے محور پر   \عددی{(0,0)} سے  \عددی{(V_{D0},0)}  تک ہے اور اس کی ڈھلوان صفر ہے جبکہ خط  ب  \عددی{(V_{D0},0)}  سے شروع ہوتا ہے اور اس کی ڈھلوان  \عددی{\frac{1}{r_D}} ہے۔خط  ب کی ڈھلوان اور نقطہ  \عددی{(V_{D0},0)} اٹل نہیں ہیں بلکہ ان کو تبدیل کرتے ہوئے مختلف خطوں میں بہتر جوابات حاصل کئے جا سکتے ہیں۔موجودہ مثال میں گراف کے اوپر والے حصے میں ڈایوڈ کی مساوات اور خط  ب سے حاصل جوابات میں فرق کم کرنے کی خاطر خط  ب کی ڈھلوان بڑھائی جا سکتی ہے۔
@@ -1646,18 +1646,18 @@ i_D=
 \frac{v_D-V_{D0}}{r_D} & v_D \geq V_{D0} 
 \end{dcases}
 \end{align}
-اور ان مساوات سے شکل \حوالہ{شکل_سیدھے_خطوط_کا_ماڈل}  میں دکھایا \اصطلاح {وسیع اشاراتی سیدھے خطوط کا ماڈل}\فرہنگ{سیدھے خطوط کا ماڈل}\فرہنگ{ماڈل!سیدھے خطوط}\فرہنگ{piece wise linear model}\حاشیہب{piece wise linear model}  حاصل ہوتا ہے۔
+اور ان مساوات سے شکل \حوالہ{شکل_سیدھے_خطوط_کا_ماڈل}  میں دکھایا \اصطلاح {وسیع اشاراتی سیدھے خطوط کا ریاضی نمونہ}\فرہنگ{سیدھے خطوط کا ریاضی نمونہ}\فرہنگ{ریاضی نمونہ!سیدھے خطوط}\فرہنگ{piece wise linear model}\حاشیہب{piece wise linear model}  حاصل ہوتا ہے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{pieceWiseLinearModelA}
-\caption{وسیع اشاراتی سیدھے خطوط کا ڈایوڈ ماڈل}
+\caption{وسیع اشاراتی سیدھے خطوط کا ڈایوڈ ریاضی نمونہ}
 \label{شکل_سیدھے_خطوط_کا_ماڈل}
 \end{figure}
-ڈایوڈ کے وسیع اشاراتی سیدھے خطوط کے ماڈل کو استعمال کرتے ہوئے \عددی{i_D} اور \عددی{v_D} کے تقریباً درست جوابات وسیع حدود کے اندر حاصل کئے جا سکتے ہیں۔بعض اوقات ہمیں کسی ایک نقطے کے قریب قریب رہتے ہوئے زیادہ درست جواب درکار ہوتا ہے۔شکل \حوالہ{شکل_باریک_اشاراتی_سیدھے_خطوط_کا_ماڈل} الف میں اس نقطہ \عددی{Q} پر ڈایوڈ کی مساوات کا خط مماس دکھایا گیا ہے جس کی ڈھلوان \عددی{r_d^{-1}} ہے۔ڈایوڈ کے سیدھے خطوط کے ماڈل میں \عددی{r_d^{-1}} استعمال کرتے ہوئے اس نقطے کے قریب بہترین جوابات حاصل ہوتے ہیں۔\اصطلاح {باریک اشاراتی!سیدھے خطوط کا ماڈل}\حاشیہب{small signal piece wise linear model} شکل \حوالہ{شکل_باریک_اشاراتی_سیدھے_خطوط_کا_ماڈل} ب میں دکھایا گیا ہے۔
+ڈایوڈ کے وسیع اشاراتی سیدھے خطوط کے ریاضی نمونے کو استعمال کرتے ہوئے \عددی{i_D} اور \عددی{v_D} کے تقریباً درست جوابات وسیع حدود کے اندر حاصل کئے جا سکتے ہیں۔بعض اوقات ہمیں کسی ایک نقطے کے قریب قریب رہتے ہوئے زیادہ درست جواب درکار ہوتا ہے۔شکل \حوالہ{شکل_باریک_اشاراتی_سیدھے_خطوط_کا_ماڈل} الف میں اس نقطہ \عددی{Q} پر ڈایوڈ کی مساوات کا خط مماس دکھایا گیا ہے جس کی ڈھلوان \عددی{r_d^{-1}} ہے۔ڈایوڈ کے سیدھے خطوط کے ریاضی نمونے میں \عددی{r_d^{-1}} استعمال کرتے ہوئے اس نقطے کے قریب بہترین جوابات حاصل ہوتے ہیں۔\اصطلاح {باریک اشاراتی!سیدھے خطوط کا ریاضی نمونہ}\حاشیہب{small signal piece wise linear model} شکل \حوالہ{شکل_باریک_اشاراتی_سیدھے_خطوط_کا_ماڈل} ب میں دکھایا گیا ہے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{pieceWiseSmallSignalModel}
-\caption{باریک اشاراتی سیدھے خطوط کا ڈایوڈ ماڈل}
+\caption{باریک اشاراتی سیدھے خطوط کا ڈایوڈ ریاضی نمونہ}
 \label{شکل_باریک_اشاراتی_سیدھے_خطوط_کا_ماڈل}
 \end{figure}
 %===========
@@ -1695,10 +1695,10 @@ i_D=\frac{1}{r_D} (v_D-V_{D0})=\frac{v_D-V_{D0}}{r_D}
 %=============
 
 \ابتدا{مثال} \شناخت{مثال_ڈایوڈ_سیدھے_خط_کا_ماڈل}
-شکل \حوالہ{شکل_سیدھے_خط_کا_ماڈل} الف میں ڈایوڈ کی جگہ اس کے وسیع اشاراتی سیدھے خطوط کا ماڈل استعمال کرتے ہوئے اسے حل کریں۔
-اس ماڈل میں \عددی{V_{D0}=\SI{0.58}{\volt}} اور \عددی{r_D=\SI{100}{\ohm}}  لیں۔
+شکل \حوالہ{شکل_سیدھے_خط_کا_ماڈل} الف میں ڈایوڈ کی جگہ اس کے وسیع اشاراتی سیدھے خطوط کا ریاضی نمونہ استعمال کرتے ہوئے اسے حل کریں۔
+اس ریاضی نمونے میں \عددی{V_{D0}=\SI{0.58}{\volt}} اور \عددی{r_D=\SI{100}{\ohm}}  لیں۔
 
-حل:شکل  ب میں ڈایوڈ کی جگہ اس کا ماڈل نسب کیا گیا ہے جس سے
+حل:شکل  ب میں ڈایوڈ کی جگہ اس کا ریاضی نمونہ نسب کیا گیا ہے جس سے
 \begin{align*}
 I_D=\frac{V_B-V_{D0}}{R+r_D}=\frac{5-0.58}{1000+100}=\SI{4.018}{\milli \ampere}
 \end{align*}
@@ -1711,25 +1711,25 @@ V_D=V_{D0}+I_D r_D=0.58+4.018 \times 10^{-3} \times 100=\SI{0.9818}{\volt}
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{diodeModelExampleA}
-\caption{سیدھے خطوط  ڈایوڈ ماڈل کی مثال}
+\caption{سیدھے خطوط  ڈایوڈ ریاضی نمونہ کی مثال}
 \label{شکل_سیدھے_خط_کا_ماڈل}
 \end{figure}
 
 \انتہا{مثال}
 %=============
 
-\جزوحصہ{کامل ڈایوڈ ماڈل}
-مندرجہ بالا ماڈلوں میں سیدھے مائل ڈایوڈ پر برقی دباو \عددی{v_D} کو مختلف طریقوں سے نپٹا گیا۔عموماً دور میں مختلف برقی دباو کی قیمتیں \عددی{v_D} سے کئی گنا ہوتی ہیں اور اس صورت \عددی{v_D} کی قیمت کو نظر انداز کیا جا سکتا ہے۔ایسی جگہوں پر \عددی{v_D=\SI{0}{\volt}} لیا جا سکتا ہے اور سیدھے مائل ڈایوڈ کو \اصطلاح {کامل ڈایوڈ}\فرہنگ{کامل ڈایوڈ}\فرہنگ{ideal diode}\حاشیہب{ideal diode}  تصور کیا جا سکتا ہے۔
+\جزوحصہ{کامل ڈایوڈ ریاضی نمونہ}
+مندرجہ بالا ریاضی نمونوں میں سیدھے مائل ڈایوڈ پر برقی دباو \عددی{v_D} کو مختلف طریقوں سے نپٹا گیا۔عموماً دور میں مختلف برقی دباو کی قیمتیں \عددی{v_D} سے کئی گنا ہوتی ہیں اور اس صورت \عددی{v_D} کی قیمت کو نظر انداز کیا جا سکتا ہے۔ایسی جگہوں پر \عددی{v_D=\SI{0}{\volt}} لیا جا سکتا ہے اور سیدھے مائل ڈایوڈ کو \اصطلاح {کامل ڈایوڈ}\فرہنگ{کامل ڈایوڈ}\فرہنگ{ideal diode}\حاشیہب{ideal diode}  تصور کیا جا سکتا ہے۔
 
 %========
 \ابتدا{مثال}
-مثال \حوالہ{مثال_ڈایوڈ_سیدھے_خط_کا_ماڈل}  میں اگر \عددی{V_B = \SI{200}{\volt}} اور \عددی{R=\SI{100}{\kilo \ohm}} ہوں تب اس میں برقی رو \اصطلاح {سیدھے خطوط کے ماڈل} کی مدد سے اور دوبارہ \اصطلاح {کامل ماڈل} کی مدد سے حاصل کریں۔
+مثال \حوالہ{مثال_ڈایوڈ_سیدھے_خط_کا_ماڈل}  میں اگر \عددی{V_B = \SI{200}{\volt}} اور \عددی{R=\SI{100}{\kilo \ohm}} ہوں تب اس میں برقی رو \اصطلاح {سیدھے خطوط کے ریاضی نمونہ} کی مدد سے اور دوبارہ \اصطلاح {کامل ریاضی نمونے} کی مدد سے حاصل کریں۔
 
-حل: \اصطلاح {سیدھے خطوط کے ماڈل} سے
+حل: \اصطلاح {سیدھے خطوط ریاضی نمونے} سے
 \begin{align*}
 I_D=\frac{V_B-V_{D_0}}{R+r_D}=\frac{200-0.58}{100000+100}=\SI{1.9922}{\milli \ampere}
 \end{align*}
-\اصطلاح {کامل ڈایوڈ} کے ماڈل سے
+\اصطلاح {کامل ڈایوڈ} کے ریاضی نمونے سے
 \begin{align*}
 I_D=\frac{V_B}{R}=\frac{200}{100000}=\SI{2}{\milli \ampere}
 \end{align*}
@@ -1738,7 +1738,7 @@ I_D=\frac{V_B}{R}=\frac{200}{100000}=\SI{2}{\milli \ampere}
 \انتہا{مثال}
 %======
 
-\جزوحصہ{ڈایوڈ کا پست تعدد باریک اشاراتی ماڈل}
+\جزوحصہ{ڈایوڈ کا پست تعدد باریک اشاراتی ریاضی نمونہ}
 حصہ \حوالہ{حصہ_باریک_اشاراتی_تجزیہ}  میں باریک اشاراتی مزاحمت \عددی{r_d} پر تذکرہ کیا گیا۔اس حصے میں اس پر مزید غور کیا جائے گا۔شکل \حوالہ{شکل_باریک_اشاراتی_ماڈل} الف میں  \عددی{V_D} ڈایوڈ کا نقطہ کارکردگی تعین کرتا ہے جبکہ \عددی{v_d} باریک اشارہ ہے۔یوں کسی بھی لمحہ ڈایوڈ پر کل برقی دباو
 \begin{align}
 v_D=V_D+v_d
@@ -1751,7 +1751,7 @@ i_D=I_D+i_d
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{smallSignalModelA}
-\caption{پست تعدد باریک اشاراتی ماڈل}
+\caption{پست تعدد باریک اشاراتی ریاضی نمونہ}
 \label{شکل_باریک_اشاراتی_ماڈل}
 \end{figure}
 صفر اشارہ یعنی \عددی{v_d=\SI{0}{\volt}} کی صورت میں \عددی{v_D=V_D} ہو گا اور ڈایوڈ کی مساوات سے
@@ -1779,19 +1779,19 @@ i_D \approx I_{DQ} +\left( \frac{I_{DQ}}{V_T} \right ) v_d = I_{DQ}+\frac{v_d}{r
 \begin{align} \label{مساوات_ڈایوڈ_باریک_ماڈل_کا_حصول}
 i_d = \frac{v_d}{r_d}
 \end{align}
-ڈایوڈ کا \اصطلاح {پست تعدد باریک اشاراتی ماڈل}  شکل \حوالہ{شکل_باریک_اشاراتی_ماڈل} ب میں دکھایا گیا ہے۔آپ تسلی کر سکتے ہیں کہ \اصطلاح {پست تعدد باریک اشاراتی ماڈل} بھی برقی رو \عددی{i_d} پر  مساوات \حوالہ{مساوات_ڈایوڈ_باریک_ماڈل_کا_حصول} کی طرح برقی دباو \عددی{v_d}  دیتا ہے۔ڈایوڈ کا باریک اشاراتی ماڈل صرف ڈایوڈ کے باریک اشاراتی مزاحمت \عددی{r_d} پر مشتمل ہے۔
+ڈایوڈ کا \اصطلاح {پست تعدد باریک اشاراتی ریاضی نمونہ}  شکل \حوالہ{شکل_باریک_اشاراتی_ماڈل} ب میں دکھایا گیا ہے۔آپ تسلی کر سکتے ہیں کہ \اصطلاح {پست تعدد باریک اشاراتی ریاضی نمونہ} بھی برقی رو \عددی{i_d} پر  مساوات \حوالہ{مساوات_ڈایوڈ_باریک_ماڈل_کا_حصول} کی طرح برقی دباو \عددی{v_d}  دیتا ہے۔ڈایوڈ کا باریک اشاراتی ریاضی نمونہ صرف ڈایوڈ کے باریک اشاراتی مزاحمت \عددی{r_d} پر مشتمل ہے۔
 
 
-\جزوحصہ{ڈایوڈ کا بلند تعدد باریک اشاراتی ماڈل}
-	اب تک ہم ڈایوڈ کے وہ ماڈل دیکھتے رہے جو کم تعدد پر ڈایوڈ کے کارکردگی پر صحیح اترتے ہیں۔اگر بلند تعدد کے اشارات پر ڈایوڈ کی کارکردگی پر غور کرنا ہو تو ڈایوڈ کا \اصطلاح {بلند تعدد باریک اشاراتی ماڈل} استعمال کرنا ہو گا جو ڈایوڈ کے اندرونی کپیسٹر کا بھی حساب رکھتا ہو۔ڈایوڈ کے اندرونی کپیسٹر دو طرح کے ہوتے ہیں۔پہلا کپیسٹر \عددی{C_j} ویران خطے کے دونوں جانب الٹ برقی باروں کی وجہ سے پیدا ہوتا ہے جبکہ دوسرے قسم کا کپیسٹر  \عددی{C_d} باروں کے بہاو سے پیدا ہوتا ہے۔ان کپیسٹروں کو ڈایوڈ کے \اصطلاح {پست تعدد باریک اشاراتی ماڈل} میں مزاحمت \عددی{r_d} کے متوازی نسب کر کے ڈایوڈ کا \اصطلاح {بلند تعدد باریک اشاراتی ماڈل}
-\فرہنگ{ڈایوڈ!بلند تعددی باریک اشاراتی ماڈل}\فرہنگ{diode!high frequency model}\حاشیہب{diode high frequency small signal model}  حاصل ہوتا ہے جسے شکل \حوالہ{شکل_بلند_تعدد_ڈایوڈ_باریک_اشاراتی_ماڈل} میں دکھایا گیا ہے۔وسیع حیطے کے اشارات کے استعمال کے لئے اس ماڈل میں وسیع اشارہ کے کپیسٹر \عددی{C_J} اور  \عددی{C_D} استعمال کئے جائیں گے۔
+\جزوحصہ{ڈایوڈ کا بلند تعدد باریک اشاراتی ریاضی نمونہ}
+	اب تک ہم ڈایوڈ کے وہ ریاضی نمونے دیکھتے رہے جو کم تعدد پر ڈایوڈ کے کارکردگی پر صحیح اترتے ہیں۔اگر بلند تعدد کے اشارات پر ڈایوڈ کی کارکردگی پر غور کرنا ہو تو ڈایوڈ کا \اصطلاح {بلند تعدد باریک اشاراتی ریاضی نمونہ} استعمال کرنا ہو گا جو ڈایوڈ کے اندرونی کپیسٹر کا بھی حساب رکھتا ہو۔ڈایوڈ کے اندرونی کپیسٹر دو طرح کے ہوتے ہیں۔پہلا کپیسٹر \عددی{C_j} ویران خطے کے دونوں جانب الٹ برقی باروں کی وجہ سے پیدا ہوتا ہے جبکہ دوسرے قسم کا کپیسٹر  \عددی{C_d} باروں کے بہاو سے پیدا ہوتا ہے۔ان کپیسٹروں کو ڈایوڈ کے \اصطلاح {پست تعدد باریک اشاراتی ریاضی نمونہ} میں مزاحمت \عددی{r_d} کے متوازی نسب کر کے ڈایوڈ کا \اصطلاح {بلند تعدد باریک اشاراتی ریاضی نمونہ}
+\فرہنگ{ڈایوڈ!بلند تعددی باریک اشاراتی ریاضی نمونے}\فرہنگ{diode!high frequency model}\حاشیہب{diode high frequency small signal model}  حاصل ہوتا ہے جسے شکل \حوالہ{شکل_بلند_تعدد_ڈایوڈ_باریک_اشاراتی_ماڈل} میں دکھایا گیا ہے۔وسیع حیطے کے اشارات کے استعمال کے لئے اس ریاضی نمونے میں وسیع اشارہ کے کپیسٹر \عددی{C_J} اور  \عددی{C_D} استعمال کئے جائیں گے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{diodeHighFrequencySmallSignalModel}
-\caption{بلند تعدد باریک اشاراتی ڈایوڈ ماڈل}
+\caption{بلند تعدد باریک اشاراتی ڈایوڈ ریاضی نمونہ}
 \label{شکل_بلند_تعدد_ڈایوڈ_باریک_اشاراتی_ماڈل}
 \end{figure}
-\حصہ{زینر ڈایوڈ اور اس کا ماڈل}
+\حصہ{زینر ڈایوڈ اور اس کا ریاضی نمونہ}
 شکل \حوالہ{شکل_زینر_ڈایوڈ_کا_خط}  میں \اصطلاح {زینر ڈایوڈ} کے برقی دباو بالمقابل برقی رو  کا خط اور اس کی علامت دکھائی گئی ہے۔اس کی علامت میں انگریزی حروفِ تہجی \عددی{Z}  شامل کر کے اس کی پہچان کی جاتی ہے۔سیدھا مائل زینر ڈایوڈ بالکل ایک عام ڈایوڈ کے مانند کام کرتا ہے اور اسے آپ عام ڈایوڈ کی جگہ استعمال کر سکتے ہیں۔بس یہ ذہن میں رکھیں کہ عام ڈایوڈ استعمال کرتے وقت ہم کبھی نہیں چاہتے کہ یہ الٹی برقی رو گزرنے دے جبکہ زینر ڈایوڈ کو عموماً ان مقامات پر استعمال کیا جاتا ہے جہاں اس میں الٹی برقی رو ہی گزاری جاتی ہے۔
 \begin{figure}
 \centering
@@ -1823,15 +1823,15 @@ P=V_Z \times I_Z
 \end{align}
 آپ دیکھ سکتے ہیں کہ \عددی{r_z}  کی قیمت جتنی کم ہو برقی رو کے تبدیلی سے برقی دباو میں اتنی کم تبدیلی رو نما ہو گی۔
 
-زینر ڈایوڈ کا ماڈل حاصل کرنے کی خاطر اس کے خط کو نقطہ \عددی{ (V_Z , I_Z)}  سے ڈھلوان \عددی{\frac{1}{r_z}}  کے نقطے دار لکیر سے افقی محور تک پہنچایا جاتا ہے جہاں یہ محور کو  \عددی{ -V_{Z0}} پر ٹکراتا ہے۔اس خط کی مساوات کو یوں لکھا جا سکتا ہے
+زینر ڈایوڈ کا ریاضی نمونہ حاصل کرنے کی خاطر اس کے خط کو نقطہ \عددی{ (V_Z , I_Z)}  سے ڈھلوان \عددی{\frac{1}{r_z}}  کے نقطے دار لکیر سے افقی محور تک پہنچایا جاتا ہے جہاں یہ محور کو  \عددی{ -V_{Z0}} پر ٹکراتا ہے۔اس خط کی مساوات کو یوں لکھا جا سکتا ہے
 \begin{align}
 v_Z=V_{Z0}+i_Z r_z
 \end{align}
-اس مساوات سے زینر ڈایوڈ کا ماڈل حاصل ہوتا ہے جسے شکل \حوالہ{شکل_زینر_ڈایوڈ_کا_ماڈل} میں دکھایا گیا ہے۔
+اس مساوات سے زینر ڈایوڈ کا ریاضی نمونہ حاصل ہوتا ہے جسے شکل \حوالہ{شکل_زینر_ڈایوڈ_کا_ماڈل} میں دکھایا گیا ہے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{zenerDiodeModel}
-\caption{زینر ڈایوڈ کا ماڈل}
+\caption{زینر ڈایوڈ کا ریاضی نمونہ}
 \label{شکل_زینر_ڈایوڈ_کا_ماڈل}
 \end{figure}
 زینر گھٹنے کے قریب خط کافی زیادہ مڑتا ہے جبکہ زیادہ برقی رو (یعنی \عددی{I_Z>> I_{ZK}}  ) پر یہ خط تقریباً سیدھا رہتا ہے۔زینر ڈایوڈ کا عمومی استعمال اس سیدھے خطے میں ہی کیا جاتا ہے۔
@@ -1981,9 +1981,9 @@ I_Z&=\SI{8.8}{\milli \ampere}
 شکل \حوالہ{شکل_زینر_ڈایوڈ_کا_استعمال} الف  کے برقی دباو کی منبع کو داخلی جانب برقی دباو مہیا کیا گیا ہے جس کو شکل \حوالہ{شکل_زینر_منبع} الف میں دکھایا گیا ہے۔غور کرنے سے معلوم ہوتا ہے کہ داخلی برقی دباو مکمل طور یک سمتی نہیں ہے بلکہ اس میں ناپسندیدہ لہر \عددی{v_s} پایا جاتا ہے جبکہ یک سکتی برقی دباو \عددی{V_S}  اس کا بیشتر حصہ ہے۔ان دونوں حصوں کی نشاندہی شکل میں کی گئی ہے۔زینر ڈایوڈ سے بنائی گئی برقی دباو کے منبع سے توقع کی جاتی ہے کہ اس میں لہر کی مقدار کم سے کم ہو گی۔
 
 \ابتدا{مثال}
-شکل \حوالہ{شکل_زینر_ڈایوڈ_کا_استعمال} الف میں \عددیء{V_S=\SI{15}{\volt}}،\عددی{v_s = 1.2 \sin \omega t}  اور \عددی{R_1=\SI{1}{\kilo \ohm}} جبکہ زینر ڈایوڈ کے ماڈل کے جزو \عددی{V_{Z0}=\SI{5.6}{\volt}} اور \عددی{r_z=\SI{10}{\ohm}} ہونے کی صورت میں خارجی برقی دباو \عددی{V_2} حاصل کریں۔
+شکل \حوالہ{شکل_زینر_ڈایوڈ_کا_استعمال} الف میں \عددیء{V_S=\SI{15}{\volt}}،\عددی{v_s = 1.2 \sin \omega t}  اور \عددی{R_1=\SI{1}{\kilo \ohm}} جبکہ زینر ڈایوڈ کے ریاضی نمونے کے جزو \عددی{V_{Z0}=\SI{5.6}{\volt}} اور \عددی{r_z=\SI{10}{\ohm}} ہونے کی صورت میں خارجی برقی دباو \عددی{V_2} حاصل کریں۔
 
-حل:	شکل \حوالہ{شکل_زینر_ڈایوڈ_کا_استعمال} الف میں زینر ڈایوڈ کا ماڈل استعمال کرتے ہوئے شکل \حوالہ{شکل_زینر_منبع} ب حاصل ہوتا ہے۔خارجی برقی دباو دراصل زینر پر پائے جانے والا برقی دباو \عددی{V_Z} ہی ہے جسے یوں حاصل کرتے ہیں۔
+حل:	شکل \حوالہ{شکل_زینر_ڈایوڈ_کا_استعمال} الف میں زینر ڈایوڈ کا ریاضی نمونہ استعمال کرتے ہوئے شکل \حوالہ{شکل_زینر_منبع} ب حاصل ہوتا ہے۔خارجی برقی دباو دراصل زینر پر پائے جانے والا برقی دباو \عددی{V_Z} ہی ہے جسے یوں حاصل کرتے ہیں۔
 
 پہلے دور میں برقی رو حاصل کرتے ہیں۔
 \begin{align*}
@@ -2060,7 +2060,7 @@ i_Z=\SI{6}{\milli \ampere}-\SI{1.5}{\milli \ampere}=\SI{4.5}{\milli \ampere}
 \انتہا{مثال}
 %==============
 \حصہ{یک سمتی اور بدلتے متغیرات کے حساب کی علیحدگی}
-شکل \حوالہ{شکل_یک_سمتی_بدلتے_متغیرات_کی_علیحدگی} الف میں ڈایوڈ کا دور دکھایا گیا ہے۔اس دور میں ڈایوڈ کی جگہ اس کا باریک اشاراتی ماڈل (شکل 
+شکل \حوالہ{شکل_یک_سمتی_بدلتے_متغیرات_کی_علیحدگی} الف میں ڈایوڈ کا دور دکھایا گیا ہے۔اس دور میں ڈایوڈ کی جگہ اس کا باریک اشاراتی ریاضی نمونہ (شکل 
  \حوالہ{شکل_باریک_اشاراتی_سیدھے_خطوط_کا_ماڈل} ) نسب کرنے سے شکل \حوالہ{شکل_یک_سمتی_بدلتے_متغیرات_کی_علیحدگی} ب حاصل ہوتا ہے۔اس دور کو حل کرنے سے حاصل ہوتا ہے
 \begin{gather} \label{مساوات_ڈایوڈ_اشارہ_موجود}
 \begin{aligned}
@@ -2104,7 +2104,7 @@ v_d&=i_d r_d=\frac{r_d v_s}{R+r_d}
 \caption{یک سمتی اور باریک اشاراتی مساوی ادوار}
 \label{شکل_یک_سمتی_اور_باریک_اشاراتی_مساوی_ادوار}
 \end{figure}
-اس طریقے میں ادوار حل کرتے وقت پہلے بدلتے اشارات کو نظر انداز کرتے ہوئے نقطہ مائل حاصل کیا جاتا ہے۔اس نقطے پر ڈایوڈ (ٹرانزسٹر) کے باریک اشاراتی ماڈل کے اجزاء حاصل کئے جاتے ہیں۔باریک اشاراتی حساب و کتاب کی خاطر \اصطلاح {مساوی باریک اشاراتی دور} بنایا جاتا ہے جس میں تمام یک سمتی منبع برقی دباو کو قصر دور کرتے ہوئے ڈایوڈ (ٹرانزسٹر)  کی جگہ اس کا باریک اشاراتی ماڈل نسب کیا جاتا ہے۔یوں حاصل مساوی باریک اشاراتی دور کو عام برقی دور کے مانند حل کرتے ہوئے باریک اشاراتی برقی دباو اور باریک اشاراتی برقی رو حاصل کئے جاتے ہیں۔
+اس طریقے میں ادوار حل کرتے وقت پہلے بدلتے اشارات کو نظر انداز کرتے ہوئے نقطہ مائل حاصل کیا جاتا ہے۔اس نقطے پر ڈایوڈ (ٹرانزسٹر) کے باریک اشاراتی ریاضی نمونے کے اجزاء حاصل کئے جاتے ہیں۔باریک اشاراتی حساب و کتاب کی خاطر \اصطلاح {مساوی باریک اشاراتی دور} بنایا جاتا ہے جس میں تمام یک سمتی منبع برقی دباو کو قصر دور کرتے ہوئے ڈایوڈ (ٹرانزسٹر)  کی جگہ اس کا باریک اشاراتی ریاضی نمونہ نسب کیا جاتا ہے۔یوں حاصل مساوی باریک اشاراتی دور کو عام برقی دور کے مانند حل کرتے ہوئے باریک اشاراتی برقی دباو اور باریک اشاراتی برقی رو حاصل کئے جاتے ہیں۔
 
 یک سمتی اور باریک اشاراتی حساب و کتاب کا یوں علیحدہ کرنا برقیات کے میدان میں عموماً استعمال کیا جاتا ہے۔اگلے بابوں میں اس طریقہ کار کو بار بار بروئے کار لایا جائے گا۔
 
@@ -2183,21 +2183,21 @@ v_L=c_2 R_L R_S P = c P
 لکھا جا سکتا ہے جہاں \عددی{c=c_2 R_L R_S} لکھا گیا ہے۔یہ \اصطلاح {قانونِ مربع} کی دوسری شکل ہے جس کے تحت کم طاقت پر مزاحمت \عددی{R_L} کا یک سمتی برقی دباو اور \عددی{R_S} میں طاقت کا ضیاع راست تناسب کا تعلق رکھتے ہیں۔اس حقیقت کو استعمال کرتے ہوئے ذرائع ابلاغ میں ڈایوڈ کے استعمال سے اشارے کی طاقت ناپی جاتی ہے۔ڈایوڈ کے اس دور کو \اصطلاح {ڈایوڈ قانون مربع شناسندہ}\فرہنگ{ڈایوڈ قانون مربع شناسندہ}\حاشیہب{diode square law detector} کہتے ہیں۔
 
 %=========
-\حصہ{سپائث ماڈل}
-انجنیئرنگ کے میدان میں کمپیوٹر کا استعمال ناگزیر ہے۔برقیاتی ادوار عموماً کمپیوٹر پروگرام استعمال کرتے ہوئے تخلیق دئے جاتے ہیں۔کمپیوٹر پر ہی دور کی کارکردگی دیکھتے ہوئے اس میں ردوبدل پیدا کیا جاتا ہے حتٰی کہ درکار نتائج حاصل ہوں۔اس کے بعد اصل دور بنانے کا مرحلہ آتا ہے۔اس قسم کا نہایت مقبول کمپیوٹر پروگرام \اصطلاح {سپائث}\فرہنگ{سپائث}\فرہنگ{spice}\حاشیہب{spice}  کہلاتا ہے۔آپ سے گزارش کی جاتی ہے کہ \اصطلاح {سپائث}\حاشیہد{پہلا سپائث کمپیوٹر پروگرام کیلے فورنیا، برقلے کے یونیورسٹی میں تیار کیا گیا۔} کا بھرپور  استعمال کریں۔اس حصے میں سپائث میں استعمال کئے جانے والے ڈایوڈ کے ماڈل پر تبصرہ کیا جائے گا۔یہاں یہ بتلانا ضروری ہے کہ برقیات کو سمجھے بغیر کمپیوٹر کی مدد سے کسی صورت کام کرتا ہوا دور تخلیق دینا ناممکن ہے۔
+\حصہ{سپائث ریاضی نمونہ}
+انجنیئرنگ کے میدان میں کمپیوٹر کا استعمال ناگزیر ہے۔برقیاتی ادوار عموماً کمپیوٹر پروگرام استعمال کرتے ہوئے تخلیق دئے جاتے ہیں۔کمپیوٹر پر ہی دور کی کارکردگی دیکھتے ہوئے اس میں ردوبدل پیدا کیا جاتا ہے حتٰی کہ درکار نتائج حاصل ہوں۔اس کے بعد اصل دور بنانے کا مرحلہ آتا ہے۔اس قسم کا نہایت مقبول کمپیوٹر پروگرام \اصطلاح {سپائث}\فرہنگ{سپائث}\فرہنگ{spice}\حاشیہب{spice}  کہلاتا ہے۔آپ سے گزارش کی جاتی ہے کہ \اصطلاح {سپائث}\حاشیہد{پہلا سپائث کمپیوٹر پروگرام کیلے فورنیا، برقلے کے یونیورسٹی میں تیار کیا گیا۔} کا بھرپور  استعمال کریں۔اس حصے میں سپائث میں استعمال کئے جانے والے ڈایوڈ کے ریاضی نمونے پر تبصرہ کیا جائے گا۔یہاں یہ بتلانا ضروری ہے کہ برقیات کو سمجھے بغیر کمپیوٹر کی مدد سے کسی صورت کام کرتا ہوا دور تخلیق دینا ناممکن ہے۔
 
-شکل \حوالہ{شکل_ڈایوڈ_کا_سپائث_ماڈل}  میں ڈایوڈ کا \اصطلاح {سپائث ماڈل} دکھایا گیا ہے جو کہ وسیع اشاراتی ماڈل ہے۔اس ماڈل میں ڈایوڈ کے مثبت اور منفی خطوں کے مزاحمت کو \عددی{R_S} کہا گیا ہے۔اس کی قیمت اکائی تا دہائی کے حدود میں ہوتی ہے۔یہ مزاحمت ڈایوڈ کی نا پسندیدہ خوبیوں میں سے ایک ہے۔
+شکل \حوالہ{شکل_ڈایوڈ_کا_سپائث_ماڈل}  میں ڈایوڈ کا \اصطلاح {سپائث ریاضی نمونہ} دکھایا گیا ہے جو کہ وسیع اشاراتی ریاضی نمونہ ہے۔اس ریاضی نمونے میں ڈایوڈ کے مثبت اور منفی خطوں کے مزاحمت کو \عددی{R_S} کہا گیا ہے۔اس کی قیمت اکائی تا دہائی کے حدود میں ہوتی ہے۔یہ مزاحمت ڈایوڈ کی نا پسندیدہ خوبیوں میں سے ایک ہے۔
 
 ڈایوڈ کے ساکن یا یک سمتی رو حال کو اس کے  \عددی{i_D - v_D}  مساوات سے ہی حاصل کیا جاتا ہے جبکہ بدلتی رو حال میں ڈایوڈ کی تغیر پذیر کپیسٹنس \عددی{C_D} بھی کردار ادا کرتا ہے۔شکل میں  \عددی{i_D - v_D} اور \عددی{C_D} کی مساواتیں دی گئی ہیں۔باریک اشاراتی تجزیہ  کے وقت سپائث پروگرام ڈایوڈ کا باریک اشاراتی مزاحمت \عددی{r_d} اور اس کی باریک اشاراتی کپیسٹنس \عددی{C_d} اور \عددی{C_j} استعمال کرتا ہے۔
 
-جدول \حوالہ{جدول_سپائث_ماڈل_کے_جزو}  ڈایوڈ کے سپائث ماڈل کے تمام اجزاء اور ان کے عمومی قیمتیں پیش کرتا ہے۔اگر سپائث پروگرام استعمال کرتے وقت ان اجزاء کی قیمتیں فراہم نہ کی جائیں تو \اصطلاح {سپائث پروگرام} جدول \حوالہ{جدول_سپائث_ماڈل_کے_جزو} میں دئے گئے قیمتیں استعمال کرتا ہے۔
+جدول \حوالہ{جدول_سپائث_ماڈل_کے_جزو}  ڈایوڈ کے سپائث ریاضی نمونے کے تمام اجزاء اور ان کے عمومی قیمتیں پیش کرتا ہے۔اگر سپائث پروگرام استعمال کرتے وقت ان اجزاء کی قیمتیں فراہم نہ کی جائیں تو \اصطلاح {سپائث پروگرام} جدول \حوالہ{جدول_سپائث_ماڈل_کے_جزو} میں دئے گئے قیمتیں استعمال کرتا ہے۔
 \begin{table}
-\caption{سپائث ماڈل کے جزو}
+\caption{سپائث ریاضی نمونے کے جزو}
 \label{جدول_سپائث_ماڈل_کے_جزو}
 \centering
 \begin{tabular}[htp]{r c c l}
 \toprule
-ماڈل کے جزو کا نام & علامت & سپائث کا جزو & قیمت \\
+ریاضی نمونے کے جزو کا نام & علامت & سپائث کا جزو & قیمت \\
 \midrule
 لبریزی برقی رو   & $ I_S $    & IS & $\SI{e-14}{\ampere}$\\
 مزاحمت & $R_S$  & RS & $\SI{0}{\ohm}$ \\
@@ -2216,7 +2216,7 @@ v_L=c_2 R_L R_S P = c P
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{diodeSpiceModel}
-\caption{ڈایوڈ کا سپائث ماڈل}
+\caption{ڈایوڈ کا سپائث ریاضی نمونہ}
 \label{شکل_ڈایوڈ_کا_سپائث_ماڈل}
 \end{figure}
 %================
