--- a/tex/electronicsFeedback.tex
+++ b/tex/electronicsFeedback.tex
@@ -272,7 +272,7 @@ A_G=\frac{I_o}{V_s}=\frac{I_o}{V_o} \times \frac{V_o}{V_s}=\frac{1}{R_L} \times 
 %+++++++++
 
 \حصہ{بنیادی کارکردگی}
-ٹرانزسٹر ایمپلیفائر کے دور میں ٹرانزسٹر کا ماڈل نسب کرتے ہوئے انہیں کرچاف کے قوانین سے حل کرنے سے آپ بخوبی واقف ہیں۔واپسی ایمپلیفائر کو بھی اسی طرح حل کرنا ممکن ہے البتہ انہیں یوں حل کرنے سے واپسی عمل کی وضاحت نہیں ہوتی۔اس حصے میں ہم واپسی ایمپلیفائر کو اس طرح حل کریں گے کہ ان میں واپسی اشارے کا کردار اجاگر ہو۔
+ٹرانزسٹر ایمپلیفائر کے دور میں ٹرانزسٹر کا ریاضی نمونہنسب کرتے ہوئے انہیں کرچاف کے قوانین سے حل کرنے سے آپ بخوبی واقف ہیں۔واپسی ایمپلیفائر کو بھی اسی طرح حل کرنا ممکن ہے البتہ انہیں یوں حل کرنے سے واپسی عمل کی وضاحت نہیں ہوتی۔اس حصے میں ہم واپسی ایمپلیفائر کو اس طرح حل کریں گے کہ ان میں واپسی اشارے کا کردار اجاگر ہو۔
 
 واپسی ادوار کے تین جزو ہیں۔پہلا جزو بنیادی ایمپلیفائر، دوسرا جزو جمع کار (یا منفی کار) اور تیسرا جزو واپس کار۔شکل \حوالہ{شکل_بنیادی_واپسی_ایمپلیفائر} میں ان تینوں اجزاء کو دکھایا گیا ہے۔
 
@@ -1190,7 +1190,7 @@ A_{gf}=\frac{I_o}{V_s}=\frac{\frac{V_o}{R_L}}{I_s R_s}=\left (\frac{V_o}{I_s} \r
 \item 
 واپسی اشارے کا اثر ختم کرتے ہوئے مگر واپس کار کے بوجھ کے اثر کو برقرار رکھتے ہوئے مندرجہ بالا قوانین کی مدد سے بنیادی ایمپلیفائر کا دور حاصل کریں۔اگر \عددیء{X_f} اور \عددیء{X_s} سلسلہ وار جڑے ہوں تب داخلی اشارہ \عددیء{X_s} کا تھوِنن  مساوی دور استعمال کریں۔اس کے برعکس اگر \عددیء{X_f} اور \عددیء{X_s} متوازی جڑے ہوں تب داخلی اشارہ \عددیء{X_s} کا نارٹن مساوی دور استعمال کریں۔
 \item
-بنیادی ایمپلیفائر میں ٹرانزسٹر کا ماڈل استعمال کرتے ہوئے اس کا باریک اشاراتی مساوی دور حاصل کریں اور اس میں \عددیء{X_f} اور \عددیء{X_o} کی نشاندہی کریں۔
+بنیادی ایمپلیفائر میں ٹرانزسٹر کا ریاضی نمونہاستعمال کرتے ہوئے اس کا باریک اشاراتی مساوی دور حاصل کریں اور اس میں \عددیء{X_f} اور \عددیء{X_o} کی نشاندہی کریں۔
 \item
 واپسی اشارے \عددیء{X_f=W X_o} کی مساوات حاصل کریں جس سے \عددیء{W} کی قیمت حاصل ہو گی۔
 \item
@@ -1228,7 +1228,7 @@ V_{CC} &= I_c R_c+V_{ce}+I_c R_L
 \end{align}
 یہ بالکل مساوات \حوالہ{مساوات_واپسی_برقی_دباو_داخلی_مساوی} اور مساوات \حوالہ{مساوات_واپسی_برقی_دباو_خارجی_مساوی} ہی ہیں۔
 
-شکل  ث میں ٹرانزسٹر کا پائے ماڈل استعمال کرتے ہوئے شکل  ٹ کا باریک اشاراتی دور حاصل کیا گیا ہے۔اس سے
+شکل  ث میں ٹرانزسٹر کا پائے ریاضی نمونہاستعمال کرتے ہوئے شکل  ٹ کا باریک اشاراتی دور حاصل کیا گیا ہے۔اس سے
 \begin{align} \label{مساوات_واپسی_ٹرانزسٹر_تابع_مخارج_افزائش}
 A_V=\frac{V_o}{V_s}=\frac{V_o}{I_c} \times \frac{I_c}{V_{be}} \times \frac{V_{be}}{V_s}=\frac{R_L g_m r_{be}}{R_s+r_{be}}=\frac{\beta R_L}{R_s+r_{be}}
 \end{align}
