--- a/tex/electronicsFrequencyResponse.tex
+++ b/tex/electronicsFrequencyResponse.tex
@@ -22,7 +22,7 @@ B \approx f_H
 
 ٹرانزسٹر کے \عددی{B-E}  اور \عددی{B-C} جوڑ پر اندرونی کپیسٹر \عددی{C_{b'e}} اور \عددی{C_{b'c}} پائے جاتے ہیں۔درمیانی تعدد اور اس سے کم تعدد پر ان اندرونی کپیسٹروں کی برقی رکاوٹ اتنی زیادہ ہوتی ہے کہ انہیں کھلے دور تصور کیا جاتا ہے۔بلند تعدد پر ان کی برقی رکاوٹ کم ہو جاتی ہے اور انہیں نظرانداز کرنا ممکن نہیں رہتا۔انہیں اندرونی کپیسٹروں کی وجہ سے بلند تعدد پر \عددی{A_v} ( \عددی{A_i})  کی قیمت گھٹتی ہے۔یوں اندرونی کپیسٹر بلند انقطاعی تعدد \عددی{f_H} کی قیمت تعین کرتے ہیں۔
 
-کم تعدد پر ٹرانزسٹر ایمپلیفائر کی افزائش حاصل کرتے وقت صرف بیرونی کپیسٹروں کو مدِ نظر رکھا جاتا ہے جبکہ اندرونی کپیسٹروں کو کھلے دور تصور کیا جاتا ہے۔اسی طرح بلند تعدد پر صرف اندرونی کپیسٹروں کو مدِ نظر رکھا جاتا ہے جبکہ بیرونی کپیسٹروں کو قصر دور تصور کیا جاتا ہے اور درمیانی تعدد پر بیرونی کپیسٹروں کو قصر دور جبکہ اندرونی کپیسٹروں\حاشیہد{ٹرانزسٹر ماڈل میں پائے جانے والے کپیسٹر مثلاً \عددی{C{b'e}} وغیرہ ٹرانزسٹر کے اندرونی کپیسٹر ہیں} کو کھلے دور تصور کیا جاتا ہے۔
+کم تعدد پر ٹرانزسٹر ایمپلیفائر کی افزائش حاصل کرتے وقت صرف بیرونی کپیسٹروں کو مدِ نظر رکھا جاتا ہے جبکہ اندرونی کپیسٹروں کو کھلے دور تصور کیا جاتا ہے۔اسی طرح بلند تعدد پر صرف اندرونی کپیسٹروں کو مدِ نظر رکھا جاتا ہے جبکہ بیرونی کپیسٹروں کو قصر دور تصور کیا جاتا ہے اور درمیانی تعدد پر بیرونی کپیسٹروں کو قصر دور جبکہ اندرونی کپیسٹروں\حاشیہد{ٹرانزسٹر ریاضی نمونے میں پائے جانے والے کپیسٹر مثلاً \عددی{C{b'e}} وغیرہ ٹرانزسٹر کے اندرونی کپیسٹر ہیں} کو کھلے دور تصور کیا جاتا ہے۔
 
 اس باب میں تمام مساوات \اصطلاح{لاپلاس بدل}\فرہنگ{لاپلاس بدل}\حاشیہب{Laplace transform}\فرہنگ{Laplace transform}  استعمال کرتے ہوئے \عددی{s} کے ساتھ لکھے جائیں گے۔سائن نما اشارات کے لئے \عددی{s}  کی جگہ \عددی{j \omega} لکھتے ہوئے جوابات حاصل کئے جاتے ہیں۔
 	
@@ -51,7 +51,7 @@ A_v = -R_L  g_m  \left(\frac{r_{be}}{r_{be}+(\beta+1)R_E} \right ) \left (\frac{
 \begin{align} \label{مساوات_تعددی_ردعمل_ایمپلیفائر_بمع_قابو_کپیسٹر}
 A_v=-R_L  g_m \left(\frac{r_{be}}{r_{be}+(\beta+1)R_E} \right ) \left (\frac{R_{m1}}{R_S+R_{m1}} \right ) \left(\frac{s}{s+\frac{1}{R_{mCB} C_B}} \right )
 \end{align}
-اگر اس مساوات میں تعدد \عددی{\omega} کی قیمت بتدریج بڑھائی جائے تو آخری قوسین کی قیمت ایک \عددی{(1)}  تک پہنچنے کی کوشش کرے گی۔ اگرچہ اس مساوات کو حاصل کرنے کی خاطر ٹرانزسٹر کا پست تعدد ماڈل استعمال کیا گیا تھا جو صرف کم  اور درمیانی تعدد کے لئے درست ہے مگر فی الحال اس بحث میں پڑے بغیر تصور کرتے ہیں کہ \عددی{\omega} کی قیمت لامحدود کر دی جاتی ہے۔یوں
+اگر اس مساوات میں تعدد \عددی{\omega} کی قیمت بتدریج بڑھائی جائے تو آخری قوسین کی قیمت ایک \عددی{(1)}  تک پہنچنے کی کوشش کرے گی۔ اگرچہ اس مساوات کو حاصل کرنے کی خاطر ٹرانزسٹر کا پست تعدد ریاضی نمونہ استعمال کیا گیا تھا جو صرف کم  اور درمیانی تعدد کے لئے درست ہے مگر فی الحال اس بحث میں پڑے بغیر تصور کرتے ہیں کہ \عددی{\omega} کی قیمت لامحدود کر دی جاتی ہے۔یوں
 \begin{align*}
 \eval{A_v}_{\omega \to \infty} \hspace{-2em}=-R_L g_m  \left(\frac{r_{be}}{r_{be}+(\beta+1)R_E} \right ) \left (\frac{R_{m1}}{R_S+R_{m1}} \right ) \left(\frac{\infty}{\infty+\frac{1}{R_{mCB} C_B}} \right )
 \end{align*}
@@ -502,7 +502,7 @@ A_v& =A_{vD} \left(\frac{j f +f_1}{j f +f_2} \right)\\
 
 \عددی{20 \log \frac{f}{100}} کی قیمت \عددیء{100}، \عددیء{1000}، \عددی{10000} اور \عددی{100000} کے تعدد پر \عددیء{0}، \عددیء{20}، \عددی{40} اور \عددی{60} ڈیسی بیل حاصل ہوتی ہے۔اس حقیقت کو یوں بیان کیا جا سکتا ہے کہ تعدد دس گنّا کرنے سے افزائش \عددی{\SI{20}{dB}} بڑھتی ہے یا کہ افزائش  \عددی{\SI{20}{dB}} فی دہائی کے شرح سے بڑھتی ہے۔ افقی محور پر تعدد کا لاگ لیتے ہوئے ان قیمتوں کے استعمال سے خط کھینچا گیا ہے۔یہ خط تعدد کے محور کو \عددی{f_1} یعنی \عددی{\log(100)=2} پر چھوتے ہوئے \عددی{\SI{20}{dB}} فی دہائی کے شرح سے بڑھتا ہے۔ایسا خط کھینچتے وقت \عددی{(f_1, \SI{0}{dB})}  اور  \عددی{(10 f_1, \SI{20}{dB})} کے مقام پر نقطے  لگا کر انہیں سیدھی لکیر سے جوڑتے ہوئے حاصل کیا جاتا ہے۔
 
-شکل \حوالہ{شکل_تعددی_ردعمل_بوڈا_اجزاء_الف} الف میں \عددی{(f_1, \SI{0}{dB})} یعنی \عددی{(10^2, \SI{0}{dB})} پر نقطہ \عددی{a} اور \عددی{(10 f_1, \SI{20}{dB})} یعنی \عددی{(10^3,\SI{20}{dB})} پر نقطہ \عددی{b} دکھائے گئے ہیں۔نہایت کم تعدد پر مساوات \حوالہ{مساوات_تعدد_ردعمل_بوڈا_کم_تعدد_حصہ} کے مطابق اس جزو کی قیمت \عددی{\SI{0}{dB}} ہے۔حقیقت میں بوڈا خط کھینچتے وقت کم تعدد کو \عددی{f \ll f_1} کی بجائے \عددی{f \le f_1} لیا جاتا ہے۔یوں نقطہ \عددی{a} سے کم تعدد پر اس جزو کی قیمت \عددی{\SI{0}{dB}} دکھائی گئی ہے۔اس طرح بوڈا خط کھینچتے ہوئے  نہایت زیادہ تعدد کو \عددی{f \gg f_1} کی بجائے \عددی{f \ge f_1} لیا جاتا ہے۔ یوں اگر \عددی{a} پر \عددی{\SI{0}{dB}} ہو تب دس گنا زیادہ تعدد پر \عددی{\SI{20}{dB}} ہو گا۔اس نقطے  کو \عددی{b} سے ظاہر کیا گیا ہے۔\عددی{a} تک \عددی{\SI{0}{dB}} پر رہتا ہوا اور \عددی{a} اور \عددی{b} سے گزرتا سیدھا خط دوسرے جزو کا \اصطلاح{بوڈا خط} ہے۔
+شکل \حوالہ{شکل_تعددی_ردعمل_بوڈا_اجزاء_الف} الف میں \عددی{(f_1, \SI{0}{dB})} یعنی \عددی{(10^2, \SI{0}{dB})} پر نقطہ \عددی{a} اور اسی طرح \عددی{(10 f_1, \SI{20}{dB})} یعنی \عددی{(10^3,\SI{20}{dB})} پر نقطہ \عددی{b} دکھائے گئے ہیں۔نہایت کم تعدد پر مساوات \حوالہ{مساوات_تعدد_ردعمل_بوڈا_کم_تعدد_حصہ} کے مطابق اس جزو کی قیمت \عددی{\SI{0}{dB}} ہے۔حقیقت میں بوڈا خط کھینچتے وقت کم تعدد کو \عددی{f \ll f_1} کی بجائے \عددی{f \le f_1} لیا جاتا ہے۔یوں نقطہ \عددی{a} سے کم تعدد پر اس جزو کی قیمت \عددی{\SI{0}{dB}} دکھائی گئی ہے۔اس طرح بوڈا خط کھینچتے ہوئے  نہایت زیادہ تعدد کو \عددی{f \gg f_1} کی بجائے \عددی{f \ge f_1} لیا جاتا ہے۔ یوں اگر \عددی{a} پر \عددی{\SI{0}{dB}} ہو تب دس گنا زیادہ تعدد پر \عددی{\SI{20}{dB}} ہو گا۔اس نقطے  کو \عددی{b} سے ظاہر کیا گیا ہے۔\عددی{a} تک \عددی{\SI{0}{dB}} پر رہتا ہوا اور \عددی{a} اور \عددی{b} سے گزرتا سیدھا خط دوسرے جزو کا \اصطلاح{بوڈا خط} ہے۔
 
 
 مساوات \حوالہ{مساوات_تعددی_ردعمل_بوڈا_خط_حیطہ} کے تیسرے جزو  کی کارکردگی نہایت کم اور نہایت زیادہ تعدد پر دیکھتے ہیں۔نہایت کم تعدد یعنی \عددی{f \ll f_2} پر
@@ -585,7 +585,7 @@ A_v&=20 \log 100 +20 \log \omega-20 \log \sqrt{\frac{\omega^2}{10^2}+1}
 \انتہا{مثال}
 %================
 
-مندرجہ بالا مثال میں دی گئی مساوات میں کسر کے اوپر تعددی جزو ہے۔اس پر غور کریں۔بوڈا خط میں \عددی{\left(\tfrac{j \omega}{\omega_0}+1 \right)} طرز پر لکھے گئے جزو کی قیمت \عددی{\omega_0} سے کم تعدد پر \عددی{\SI{0}{dB}} جبکہ اس سے زیادہ تعدد پر بیس ڈیسی بیل فی دہائی کی شرح سے تبدیل ہوتا ہے۔اس کے برعکس \عددی{\left(j \omega \right)} کہیں بھی \عددی{\SI{0}{dB}} پر برقرار نہیں رہتا۔یہ \عددی{\omega=1} پر \عددی{\SI{0}{dB}} سے گزرتے ہوئے بیس ڈیسی بیل فی دہائی کی شرح سے تمام تعدد پر تبدیل ہوتا ہے۔اگر یہ جزو بطور \اصطلاح{صفر} پایا جائے تب یہ بیس ڈیسی بیل فی دہائی کی شرح سے بڑھتا ہے جبکہ اگر جزو بطور \اصطلاح{قطب} پایا جائے تب یہ بیس ڈیسی بیل فی دہائی کی شرح سے گھٹتا ہے۔
+مندرجہ بالا مثال میں دی گئی مساوات میں کسر کے اوپر تعددی جزو پر غور کریں۔بوڈا خط میں \عددی{\left(\tfrac{j \omega}{\omega_0}+1 \right)} طرز پر لکھے گئے جزو کی قیمت \عددی{\omega_0} سے کم تعدد پر \عددی{\SI{0}{dB}} جبکہ اس سے زیادہ تعدد پر بیس ڈیسی بیل فی دہائی کی شرح سے تبدیل ہوتا ہے۔اس کے برعکس \عددی{\left(j \omega \right)} کہیں بھی \عددی{\SI{0}{dB}} پر برقرار نہیں رہتا۔یہ \عددی{\omega=1} پر \عددی{\SI{0}{dB}} سے گزرتے ہوئے بیس ڈیسی بیل فی دہائی کی شرح سے تمام تعدد پر تبدیل ہوتا ہے۔اگر یہ جزو بطور \اصطلاح{صفر} پایا جائے تب یہ بیس ڈیسی بیل فی دہائی کی شرح سے بڑھتا ہے جبکہ اگر جزو بطور \اصطلاح{قطب} پایا جائے تب یہ بیس ڈیسی بیل فی دہائی کی شرح سے گھٹتا ہے۔
 %=================
 \حصہ{بیس  اور کلکٹر  بیرونی کپیسٹر}
 شکل \حوالہ{شکل_تعددی_ردعمل_قابو_حاصل_کپیسٹر} میں بیس  اور کلکٹر  پر کپیسٹر نسب کئے گئے ہیں۔اگرچہ شکل میں ایمٹر پر \عددی{C_E} بھی  نسب ہے لیکن اس کی قیمت لامحدود تصور کی گئی ہے۔یوں درکار تعدد پر اس کو قصر دور تصور کیا گیا ہے۔مساوی شکل میں
@@ -1219,7 +1219,7 @@ C_M'=C \left(1-\frac{1}{A_V} \right)
 \حصہ{بلند تعددی رد عمل}
 گزشتہ حصوں میں پست تعدد پر ٹرانزسٹر ایمپلیفائر کی کارکردگی دیکھی گئی جہاں ٹرانزسٹر کے ساتھ بیرونی جڑے کپیسٹروں کی وجہ سے پائے جانے والے پست انقطاعی نقطوں پر غور کیا گیا۔اس حصے میں بلند تعدد پر ایمپلیفائر کی کارکردگی دیکھی جائے گی۔بلند تعدد پر ٹرانزسٹر کے ساتھ بیرونی جڑے کپیسٹروں کی برقی رکاوٹ  \عددی{\frac{1}{\omega C}} نہایت کم ہوتی ہے اور یوں انہیں قصر دور تصور کیا جاتا ہے۔بلند تعدد پر ٹرانزسٹر کے اندرونی کپیسٹروں کی وجہ سے بلند انقطاعی نقطہ  پیدا ہوتا ہے جس پر اس حصے میں غور کیا جائے گا۔پہلے \عددی{npn} ٹرانزسٹر کو مثال بناتے ہوئے ان اندرونی کپیسٹروں پر تبصرہ کرتے ہیں۔
 
-\جزوحصہ{بلند تعددی پائے \عددی{\pi} ماڈل}\شناخت{حصہ_تعددی_ردعمل_بلند_تعددی_پائے_ماڈل}
+\جزوحصہ{بلند تعددی پائے \عددی{\pi} ریاضی نمونہ }\شناخت{حصہ_تعددی_ردعمل_بلند_تعددی_پائے_ماڈل}
 استعمال کے دوران ٹرانزسٹر کےبیس-ایمٹر    جوڑ  کو الٹ مائل رکھا جاتا ہے۔بالکل ڈایوڈ کی طرح،اس  الٹ مائل \عددی{pn} جوڑ پر ویران خطہ پایا جاتا ہے جس کے ایک جانب مثبت بار جبکہ دوسری جانب منفی بار پایا جاتا ہے۔یہ دو الٹ قسم کے بار مل کر کپیسٹر کو جنم دیتے ہیں جسے \عددی{C_{b'c}} کی علامت سے پہچانا جاتا ہے۔اس کپیسٹر کی قیمت نہایت کم ہوتی ہے جو پست تعدد پر چلنے والے ٹرانزسٹروں میں \عددی{\SI{30}{\pico \farad}} کے لگ بھگ  جبکہ بلند تعدد پر چلنے والے ٹرانزسٹروں میں \عددی{\SI{1}{\pico \farad}} یا اس سے بھی کم ہوتی ہے۔اس کپیسٹر کی قیمت الٹا مائل کرنے والے برقی دباو \عددی{V_{CB}} پر منحصر ہوتی ہے.حقیقت میں \عددی{C_{b'c}} کی قیمت \عددی{V_{CB}^{-\frac{1}{2}}} یا  \عددی{V_{CB}^{-\frac{1}{3}}} کے تناسب  سے تبدیل ہوتی ہے۔صنعت کار عموماً \عددی{C_{b'c}} کو \عددی{C_{ob}} پکار کر اس کی قیمت کپیسٹر کے معلوماتی صفحات میں پیش کرتا ہے۔
 
 اس کے علاوہبیس-ایمٹر    جوڑ پر  کپیسٹر \عددی{C_{b'e}} پایا جاتا ہے جس کی قیمت \عددی{\SI{100}{\pico \farad}} تا \عددی{\SI{5000}{\pico \farad}} پائی جاتی ہے۔آئیں دیکھیں کہ یہ کپیسٹر کس طرح پیدا ہوتا ہے۔ٹرانزسٹر کےبیس-ایمٹر    جوڑ پر  مثبت اشارے  کی موجودگی میں ایمٹر    سے بیس  کی جانب آزاد الیکٹران رواں ہوتے ہیں جن کا بیشتر حصہ بیس  خطے سے بذریعہ نفوذ گزر کر آخر کار کلکٹر  پہنچ  کر \عددی{i_c} کا حصہ بنتے ہیں۔اب تصور کریں کہ اس سے پہلے کہ الیکٹران بیس  خطے سے گزر پائیں، مہیا کردہ اشارہ  منفی ہو جاتا ہے۔آزاد الیکٹران اشارے کی نئی حقیقت کو دیکھتے ہوئے واپس ایمٹر     سرے کی جانب چل پڑیں گے۔نتیجتاً کلکٹر  سرے پر برقی رو \عددی{i_c} کی مقدار نسبتاً کم ہو جائے گی۔اس عمل کو مد نظر رکھتے ہوئے آپ دیکھ سکتے ہیں کہ ٹرانزسٹر کے کارکردگی کے لئے ضروری ہے کہ بیس  خطے سے الیکٹران کے گزرنے کا دورانیہ مہیا کردہ اشارے  کے دوری عرصے سے کم ہو۔جیسے جیسے اشارے کی تعدد بڑھائی جائے، ویسے ویسے کلکٹر  برقی رو \عددی{i_c} کی قیمت کم ہوتی جاتی ہے۔بڑھتی تعدد کی وجہ سے کم برقی رو کے حصول کو کپیسٹر \عددی{C_{b'e}} سے ظاہر کیا جاتا ہے۔بدلتے اشارے کی وجہ سے بیس  خطے سے گزرنے والے آزاد الیکٹران کبھی کلکٹر  اور کبھی ایمٹر    کی جانب پہنچنے کی کوشش ہی کرتے رہ جاتے ہیں۔یوں بیس  خطے میں گھیرے الیکٹرانوں کی تعداد کل برقی رو \عددی{I_{EQ}} پر منحصر ہوتی ہے۔\عددی{C_{b'e}} کی مقدار بیس  خطے میں گھیرے بار کی مقدار پر منحصر ہوتی ہے اور یوں اس کی قیمت برقی رو کے راست تناسب ہوتی ہے۔ٹرانزسٹر کے اندرونی کپیسٹروں کو شکل \حوالہ{شکل_تعددی_ردعمل_اندرونی_کپیسٹر} میں بطور بیرونی کپیسٹر دکھایا گیا ہے۔
@@ -1241,32 +1241,32 @@ C_M'=C \left(1-\frac{1}{A_V} \right)
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{transistorHighFreqPiModelA}
-\caption{بلند تعددی پائے ماڈل}
+\caption{بلند تعددی پائے ریاضی نمونہ }
 \label{شکل_تعددی_ردعمل_بلند_تعددی_ماڈل_الف}
 \end{figure}
 
-ٹرانزسٹر کے پست تعددی پائے ماڈل میں ان تمام اجزاء کی شمولیت سے بلند تعددی پائے ماڈل حاصل ہوتا ہے جس کو شکل \حوالہ{شکل_تعددی_ردعمل_بلند_تعددی_ماڈل_الف} میں دکھایا گیا ہے۔شکل \حوالہ{شکل_تعددی_ردعمل_بلند_تعددی_ماڈل} الف میں اسی کا سادہ دور دکھایا گیا ہے  جس میں \عددیء{r_{cc'}}،\عددیء{r_{ee'}} اور \عددی{r_{\mu}} کو نظر انداز کیا گیا ہے۔اس ماڈل کو قلم و کاغذ سے حل کرنا زیادہ آسان ثابت ہوتا ہے۔اس کتاب میں اسی ماڈل کو استعمال کیا جائے گا۔
+ٹرانزسٹر کے پست تعددی پائے ریاضی نمونے میں ان تمام اجزاء کی شمولیت سے بلند تعددی پائے ریاضی نمونہ حاصل ہوتا ہے جس کو شکل \حوالہ{شکل_تعددی_ردعمل_بلند_تعددی_ماڈل_الف} میں دکھایا گیا ہے۔شکل \حوالہ{شکل_تعددی_ردعمل_بلند_تعددی_ماڈل} الف میں اسی کا سادہ دور دکھایا گیا ہے  جس میں \عددیء{r_{cc'}}،\عددیء{r_{ee'}} اور \عددی{r_{\mu}} کو نظر انداز کیا گیا ہے۔اس ریاضی نمونے کو قلم و کاغذ سے حل کرنا زیادہ آسان ثابت ہوتا ہے۔اس کتاب میں اسی ریاضی نمونے کو استعمال کیا جائے گا۔
 
-\عددی{r{bb'}} کی قیمت بیس  خطے کی چوڑائی کے راست تناسب ہوتی ہے۔پست تعددی ٹرانزسٹر کے بیس  خطے کی چوڑائی بلند تعددی ٹرانزسٹر کے بیس  خطے کی چوڑائی سے زیادہ ہوتی ہے۔اسی لئے پست تعددی ٹرانزسٹر کی \عددی{r_{bb'}} بلند تعددی ٹرانزسٹر کے \عددی{r{bb'}} سے زیادہ ہوتی ہے۔\عددی{r_{bb'}} کو مستقل تصور کیا جاتا ہے جس کی قیمت \عددی{\SI{10}{\ohm}} تا \عددی{\SI{50}{\ohm}} ہوتی ہے۔پست تعددی پائے ماڈل کے جزو \عددی{r_{be}} کو یہاں \عددی{r_{b'e}} کہا گیا ہے۔یوں مساوات \حوالہ{مساوات_ٹرانزسٹر_داخلی_مزاحمت_بالمقابل_رو} کے تحت
+\عددی{r{bb'}} کی قیمت بیس  خطے کی چوڑائی کے راست تناسب ہوتی ہے۔پست تعددی ٹرانزسٹر کے بیس  خطے کی چوڑائی بلند تعددی ٹرانزسٹر کے بیس  خطے کی چوڑائی سے زیادہ ہوتی ہے۔اسی لئے پست تعددی ٹرانزسٹر کی \عددی{r_{bb'}} بلند تعددی ٹرانزسٹر کے \عددی{r{bb'}} سے زیادہ ہوتی ہے۔\عددی{r_{bb'}} کو مستقل تصور کیا جاتا ہے جس کی قیمت \عددی{\SI{10}{\ohm}} تا \عددی{\SI{50}{\ohm}} ہوتی ہے۔پست تعددی پائے ریاضی نمونے کے جزو \عددی{r_{be}} کو یہاں \عددی{r_{b'e}} کہا گیا ہے۔یوں مساوات \حوالہ{مساوات_ٹرانزسٹر_داخلی_مزاحمت_بالمقابل_رو} کے تحت
 \begin{align}
 r_{b'e}=\frac{\beta V_T}{I_{CQ}}
 \end{align}
-کے برابر ہے۔\عددی{v_{b'e}=i_b' r_{b'e}} لکھتے ہوئے اور مساوات \حوالہ{مساوات_ٹرانزسٹر_داخلی_مزاحمت_بالمقابل_موصلیت_نما} سے \عددی{g_m=\frac{\beta}{r_{b'e}}} کے استعمال سے شکل  الف کے \عددی{i_c=g_m v_{b'e}} کو \عددی{i_c=\beta i_b'} لکھا کا سکتا ہے جس سے قدرِ مختلف شکل  ب میں دکھایا گیا بلند تعددی پائے ماڈل حاصل ہوتا ہے۔شکل  ب میں \عددی{i_b'} پر دوبارہ غور کریں۔یہ \عددی{r_{b'e}} میں سے گزرتی برقی رو ہے نا کہ ٹرانزسٹر کے بیرونی بیس  سرے پر پائی جانے والی برقی رو۔ٹرانزسٹر اس برقی رو کے نسبت سے \عددی{i_c} خارج کرتا ہے۔بلند تعدد پر \عددی{c_{b'e}} کے راستے داخلی برقی رو کا کچھ حصہ گزرے گا جس کی وجہ سے ٹرانزسٹر کی افزائش میں کمی رونما ہو گی۔
+کے برابر ہے۔\عددی{v_{b'e}=i_b' r_{b'e}} لکھتے ہوئے اور مساوات \حوالہ{مساوات_ٹرانزسٹر_داخلی_مزاحمت_بالمقابل_موصلیت_نما} سے \عددی{g_m=\frac{\beta}{r_{b'e}}} کے استعمال سے شکل  الف کے \عددی{i_c=g_m v_{b'e}} کو \عددی{i_c=\beta i_b'} لکھا کا سکتا ہے جس سے قدرِ مختلف شکل  ب میں دکھایا گیا بلند تعددی پائے ریاضی نمونہ  حاصل ہوتا ہے۔شکل  ب میں \عددی{i_b'} پر دوبارہ غور کریں۔یہ \عددی{r_{b'e}} میں سے گزرتی برقی رو ہے نا کہ ٹرانزسٹر کے بیرونی بیس  سرے پر پائی جانے والی برقی رو۔ٹرانزسٹر اس برقی رو کے نسبت سے \عددی{i_c} خارج کرتا ہے۔بلند تعدد پر \عددی{c_{b'e}} کے راستے داخلی برقی رو کا کچھ حصہ گزرے گا جس کی وجہ سے ٹرانزسٹر کی افزائش میں کمی رونما ہو گی۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{transistorHighFreqPiModel}
-\caption{سادہ بلند تعددی پائے ماڈل}
+\caption{سادہ بلند تعددی پائے ریاضی نمونہ }
 \label{شکل_تعددی_ردعمل_بلند_تعددی_ماڈل}
 \end{figure}
-ٹرانزسٹر کے پست تعددی ٹی ماڈل کو صفحہ \حوالہصفحہ{شکل_ٹی_ماڈل} پر شکل \حوالہ{شکل_ٹی_ماڈل} میں دکھایا گیا ہے۔شکل \حوالہ{شکل_ٹی_ماڈل} پ میں ٹرانزسٹر کے اندرونی کپیسٹر کے شمولیت سے شکل \حوالہ{شکل_تعددی_ردعمل_بلند_تعددی_ٹی_ماڈل} حاصل ہوتا ہے جس میں \عددی{r_{bb'}} شامل نہیں کیا گیا۔ٹی ماڈل کا استعمال مشترکہ بیس  ایمپلیفائر حل کرتے وقت آتا ہے جہاں \عددی{r_{bb'}} کے اثر کو نظرانداز کرنا ممکن ہوتا ہے۔ٹی ماڈل میں \عددی{i_e} وہ برقی رو ہے جو اندرونی مزاحمت \عددی{r_e} میں سے گزرتی ہے۔
+ٹرانزسٹر کے پست تعددی ٹی ریاضی نمونے کو صفحہ \حوالہصفحہ{شکل_ٹی_ماڈل} پر شکل \حوالہ{شکل_ٹی_ماڈل} میں دکھایا گیا ہے۔شکل \حوالہ{شکل_ٹی_ماڈل} پ میں ٹرانزسٹر کے اندرونی کپیسٹر کے شمولیت سے شکل \حوالہ{شکل_تعددی_ردعمل_بلند_تعددی_ٹی_ماڈل} حاصل ہوتا ہے جس میں \عددی{r_{bb'}} شامل نہیں کیا گیا۔ٹی ریاضی نمونے کا استعمال مشترکہ بیس  ایمپلیفائر حل کرتے وقت آتا ہے جہاں \عددی{r_{bb'}} کے اثر کو نظرانداز کرنا ممکن ہوتا ہے۔ٹی ریاضی نمونے میں \عددی{i_e} وہ برقی رو ہے جو اندرونی مزاحمت \عددی{r_e} میں سے گزرتی ہے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{highFreqTmodel}
-\caption{بلند تعددی ٹی ماڈل}
+\caption{بلند تعددی ٹی ریاضی نمونہ }
 \label{شکل_تعددی_ردعمل_بلند_تعددی_ٹی_ماڈل}
 \end{figure}
 
-\جزوحصہ{مشترکہ ایمٹر    بلند انقطاعی تعدد}
+\جزوحصہ{مشترکہ ایمٹر بلند انقطاعی تعدد}
 شکل \حوالہ{شکل_تعددی_ردعمل_بلند_تعددی_ماڈل} الف کے خارجی جانب برقی بوجھ \عددی{R_L} جوڑ کر افزائش برقی رو \عددی{A_i=\frac{i_L}{i_i}} حاصل کی جا سکتی ہے جس کی قیمت \عددی{R_L} بڑھانے سے گھٹے گی۔ایسا کرنے کی بجائے، جیسا کہ شکل \حوالہ{شکل_تعددی_ردعمل_کسر_دور_افزائش} الف میں دکھایا گیا ہے، ہم \عددی{R_L=0} رکھتے ہوئے قصر دور افزائش برقی رو \عددی{A_i} حاصل کرتے ہیں جو اس کی زیادہ سے زیادہ ممکنہ قیمت ہے۔چونکہ \عددی{R_L=0} سے مراد ٹرانزسٹر کے  کلکٹر  کو اس کے ایمٹر    کے ساتھ جوڑنا ہے لہٰذا ایسا کرنے سے \عددی{r_o} بھی قصر دور ہو جاتا ہے اور ساتھ ہی ساتھ \عددی{C_{b'c}} کا ایک سرا  برقی زمین کے ساتھ جڑ جاتا ہے۔چانکہ ٹرانزسٹر کا ایمٹر    بھی برقی زمین پر ہے لہٰذا \عددی{C_{b'c}} کا یہ سرا ایمٹر    کے ساتھ جڑ جاتا ہے۔ان حقائق کو مد نظر رکھتے ہوئے شکل  ب حاصل ہوتا ہے۔شکل  الف میں ہم دیکھتے ہیں کہ \عددی{C_{b'c}} میں داخلی جانب سے خارجی جانب برقی رو گزرے گی جبکہ شکل  ب میں ایسا نہیں ہوتا۔ہم \عددی{C_{b'c}} میں داخلی جانب سے خارجی جانب گزرتے ہوئے برقی رو کو نظر انداز کرتے ہوئے شکل \حوالہ{شکل_تعددی_ردعمل_کسر_دور_افزائش} کی مدد سے  \عددی{A_i} کی زیادہ سے زیادہ ممکنہ قیمت حاصل کرتے ہیں۔شکل میں
 \begin{figure}
 \centering
@@ -1356,7 +1356,7 @@ f_T &\approx \frac{g_m}{2 \pi \left(C_{b'e}+C_{b'c} \right)}\\
 مساوات \حوالہ{مساوات_تعددی_ردعمل_افزائش_ضرب_دائرہ} کے مطابق \عددی{f_T} وہ حتمی بلند تعدد ہے جس تک مشترکہ ایمٹر    ٹرانزسٹر ایمپلیفائر اشارے کا حیطہ بڑھانے کی صلاحیت رکھتا ہے۔اس مساوات کو حاصل کرتے وقت \عددی{C_{b'c}} کے راستے کلکٹر  تک پہنچتے برقی رو کو نظر انداز کیا گیا جس کی وجہ سے حقیقت میں مشترکہ ایمٹر    ٹرانزسٹر ایمپلیفائر  کبھی بھی \عددی{f_T} تعدد کے اشارات  کو نہیں بڑھا سکتا۔
 
 \جزوحصہ{مشترکہ بیس  بلند انقطاعی تعدد}
-آئیں مشترکہ بیس  طرز پر استعمال کئے جانے والے ایمپلیفائر کی بلند انقطاعی تعدد حاصل کریں۔بلند انقطاعی تعدد ٹرانزسٹر کے ساتھ بیرونی جڑے مزاحمت وغیرہ پر بھی منحصر ہو گا۔دو مختلف ٹرانزسٹروں کا آپس میں موازنہ کرنے کے لئے یہ ضروری ہے کہ ٹرانزسٹر کے ساتھ بیرونی جڑے پرزوں کے اثر کو شامل نہ کیا جائے۔یوں مشترکہ بیس  بلند تعددی ماڈل کو استعمال کرتے ہوئے شکل \حوالہ{شکل_تعددی_ردعمل_مشترکہ_قابو_کسر_دور_افزائش} کو زنجیری ضرب سے حل کرتے ہیں۔
+آئیں مشترکہ بیس  طرز پر استعمال کئے جانے والے ایمپلیفائر کی بلند انقطاعی تعدد حاصل کریں۔بلند انقطاعی تعدد ٹرانزسٹر کے ساتھ بیرونی جڑے مزاحمت وغیرہ پر بھی منحصر ہو گا۔دو مختلف ٹرانزسٹروں کا آپس میں موازنہ کرنے کے لئے یہ ضروری ہے کہ ٹرانزسٹر کے ساتھ بیرونی جڑے پرزوں کے اثر کو شامل نہ کیا جائے۔یوں مشترکہ بیس  بلند تعددی ریاضی نمونے کو استعمال کرتے ہوئے شکل \حوالہ{شکل_تعددی_ردعمل_مشترکہ_قابو_کسر_دور_افزائش} کو زنجیری ضرب سے حل کرتے ہیں۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{transistorShortCircuitGainCommonBase}
@@ -1381,7 +1381,7 @@ C_{b'e} r_e &= \frac{C_{b'e} r_{b'e}}{\beta} =\frac{1}{\beta \omega_{\beta}}=\fr
 \begin{align} \label{مساوات_تعددی_ردعمل_مشترکہ_قابو_بلند_انقطاعی_نکتہ}
 \omega_{\alpha}=\beta \omega_{\beta}=\omega_T
 \end{align}
-آپ دیکھ سکتے ہیں کہ مشترکہ بیس  طرز کے ایمپلیفائر انتہائی بلند انقطاعی تعدد رکھتے ہیں۔حقیقت میں \عددی{\omega_T} کے تعدد پر یہاں استعمال کیا گیا ٹرانزسٹر کا بلند تعددی ٹی ماڈل درست ثابت نہیں ہوتا لہٰذا مندرجہ بالا مساوات حقیقت میں درست نہیں۔دیکھا یہ گیا ہے کہ
+آپ دیکھ سکتے ہیں کہ مشترکہ بیس  طرز کے ایمپلیفائر انتہائی بلند انقطاعی تعدد رکھتے ہیں۔حقیقت میں \عددی{\omega_T} کے تعدد پر یہاں استعمال کیا گیا ٹرانزسٹر کا بلند تعددی ٹی ریاضی نمونہ درست ثابت نہیں ہوتا لہٰذا مندرجہ بالا مساوات حقیقت میں درست نہیں۔دیکھا یہ گیا ہے کہ
 \begin{align}
 \omega_{\alpha}=\left(1+\lambda \right) \omega_T
 \end{align}
@@ -1446,7 +1446,7 @@ R_L=\frac{R_C R_L'}{R_C+R_L'}
 \end{align}
 لہٰذا \عددی{C_M'}  کو نظر انداز کیا جاتا ہے۔ایسا کرنے سے شکل \حوالہ{شکل_تعددی_ردعمل_بلند_تعددی_سادہ_دور_الف} حاصل ہوتا ہے۔آئیں دیکھیں کہ مندرجہ بالا مساوات کیوں درست ثابت ہوتا ہے۔
 
-کسی بھی ایمپلیفائر کو بلند اور پست انقطاعی تعدد کے مابین درمیانی تعدد کے خطے میں استعمال کیا جاتا ہے جہاں یہ داخلی اشارے کا حیطہ بڑھانے کی صلاحیت رکھتا ہے۔اس خطے میں ٹرانزسٹر کا پست تعددی ماڈل استعمال کیا جاتا ہے۔اگر شکل \حوالہ{شکل_تعددی_ردعمل_بلند_تعددی_سادہ_دور} پ میں پست تعددی ماڈل استعمال کیا جائے تو ملر کپیسٹر کے حصول میں درکار \عددی{A_V} کی قیمت
+کسی بھی ایمپلیفائر کو بلند اور پست انقطاعی تعدد کے مابین درمیانی تعدد کے خطے میں استعمال کیا جاتا ہے جہاں یہ داخلی اشارے کا حیطہ بڑھانے کی صلاحیت رکھتا ہے۔اس خطے میں ٹرانزسٹر کا پست تعددی ریاضی نمونہ استعمال کیا جاتا ہے۔اگر شکل \حوالہ{شکل_تعددی_ردعمل_بلند_تعددی_سادہ_دور} پ میں پست تعددی ریاضی نمونہ استعمال کیا جائے تو ملر کپیسٹر کے حصول میں درکار \عددی{A_V} کی قیمت
 \begin{align}
 A_V&=\frac{v_o}{v_{be}}=-g_m R_L
 \end{align}
@@ -1620,8 +1620,8 @@ A_v=\frac{v_L}{v_s}&=\frac{v_L}{i_c} \times \frac{i_c}{v_{b'e}} \times \frac{v_{
 لکھا جا سکتا ہے جہاں سے بلند انقطاعی تعدد تقریباً \عددی{f_H=\SI{4}{\mega \hertz}} جبکہ درمیانی تعدد کی افزائش \عددی{A_{vD}=\SI{-4.2}{\volt \per \volt}} حاصل ہوتی ہے۔ 
 \انتہا{مثال}
 %==================
-\جزوحصہ{مشترکہ سورس       ماسفیٹ ایمپلیفائر کا بلند تعددی ردِ عمل}
-شکل \حوالہ{شکل_تعددی_ردعمل_ماسفیٹ_مشترکہ_مخارج} الف میں ماسفیٹ ایمپلیفائر اور شکل  ب میں اسی کا مساوی بلند تعددی دور دکھایا گیا ہے جس میں ماسفیٹ      کا بلند تعددی ماڈل استعمال کیا گیا ہے۔ماسفیٹ کا بلند تعددی ماڈل ماسفیٹ کے پست تعددی ماڈل میں \عددی{C_{gs}} اور \عددی{C_{gd}} اندرونی کپیسٹر کی شمولیت سے حاصل کیا گیا ہے۔شکل \حوالہ{شکل_تعددی_ردعمل_ماسفیٹ_مشترکہ_مخارج} ب اور شکل \حوالہ{شکل_تعددی_ردعمل_ایمپلیفائر_بلند_تعدد_مساوی_دور} ب  تقریباً یکساں صورت رکھتے ہیں۔ماسفیٹ کے ماڈل میں  \عددی{C_{gs} \gg  C_{gd}} ہوتا ہے۔پست تعددی ماسفیٹ کے \عددی{C_{gs}} کی قیمت \عددی{\SI{50}{\pico \farad}} جبکہ بلند تعددی ماسفیٹ کی \عددی{\SI{5}{\pico \farad}} سے بھی کم ہوتی ہے۔پست تعددی ماسفیٹ کے \عددی{C_{gd}} کی قیمت \عددی{\SI{5}{\pico \farad}} جبکہ بلند تعددی ماسفیٹ کی \عددی{\SI{0.5}{\pico \farad}} سے بھی کم ہوتی ہے۔
+\جزوحصہ{مشترکہ سورس ماسفیٹ ایمپلیفائر کا بلند تعددی ردِ عمل}
+شکل \حوالہ{شکل_تعددی_ردعمل_ماسفیٹ_مشترکہ_مخارج} الف میں ماسفیٹ ایمپلیفائر اور شکل  ب میں اسی کا مساوی بلند تعددی دور دکھایا گیا ہے جس میں ماسفیٹ کا بلند تعددی ریاضی نمونہ استعمال کیا گیا ہے۔ماسفیٹ کا بلند تعددی ریاضی نمونہ ماسفیٹ کے پست تعددی ریاضی نمونے میں \عددی{C_{gs}} اور \عددی{C_{gd}} اندرونی کپیسٹر کی شمولیت سے حاصل کیا گیا ہے۔شکل \حوالہ{شکل_تعددی_ردعمل_ماسفیٹ_مشترکہ_مخارج} ب اور شکل \حوالہ{شکل_تعددی_ردعمل_ایمپلیفائر_بلند_تعدد_مساوی_دور} ب  تقریباً یکساں صورت رکھتے ہیں۔ماسفیٹ کے ریاضی نمونے میں  \عددی{C_{gs} \gg  C_{gd}} ہوتا ہے۔پست تعددی ماسفیٹ کے \عددی{C_{gs}} کی قیمت \عددی{\SI{50}{\pico \farad}} جبکہ بلند تعددی ماسفیٹ کی \عددی{\SI{5}{\pico \farad}} سے بھی کم ہوتی ہے۔پست تعددی ماسفیٹ کے \عددی{C_{gd}} کی قیمت \عددی{\SI{5}{\pico \farad}} جبکہ بلند تعددی ماسفیٹ کی \عددی{\SI{0.5}{\pico \farad}} سے بھی کم ہوتی ہے۔
 \begin{align*}
 R_L&=\frac{R_L' R_D}{R_L'+R_D}\\
 R_G&=\frac{R_1 R_2}{R_1+R_2}
@@ -1708,7 +1708,7 @@ g_m \left(\frac{R_L r_o}{R_L+r_o} \right) \gg 1
 \begin{align}
 \eval{\omega_H}_{R_L \to \infty}=\frac{1}{C_{gd} r_o}
 \end{align}
-حاصل ہو گی جو ماسفیٹ      ماڈل کے اجزاء \عددی{C_{gd}} اور \عددی{r_o} پر منحصر ہے۔
+حاصل ہو گی جو ماسفیٹ      ریاضی نمونے کے اجزاء \عددی{C_{gd}} اور \عددی{r_o} پر منحصر ہے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{highFreqResponseMosfetAmplifierBbodePlot}
@@ -1808,7 +1808,7 @@ C&=\frac{R_e\left(\beta+1 \right)}{r_{b'e} \omega_T \omega_1}
 \end{align}
 %=============
 \حصہ{مشترک بیس  ایمپلیفائر کا بلند انقطاعی تعدد}
-شکل \حوالہ{شکل_تعددی_ردعمل_قابو_مشترک_ایمپلیفائر_بلند_تعدد_پر} میں بیس  مشترک ایمپلیفائر دکھایا گیا ہے۔صفحہ \حوالہصفحہ{شکل_ٹی_ماڈل} پر ٹرانزسٹر کا \اصطلاح{ٹی ماڈل} دکھایا گیا ہے جسے \اصطلاح{پائے ماڈل} کی شکل میں بناتے ہوئے شکل \حوالہ{شکل_تعددی_ردعمل_قابو_مشترک_ایمپلیفائر_بلند_تعدد_پر} کا بلند تعددی مساوی دور شکل \حوالہ{شکل_تعددی_ردعمل_قابو_مشترک_ایمپلیفائر_بلند_تعدد_پر_مساوی} میں دکھایا گیا ہے۔باریک اشاراتی دور میں \عددی{R_1} اور \عددی{R_2} دونوں کے دونوں سرے برقی زمین پر ہیں لہٰذا انہیں نہیں دکھایا گیا۔چونکہ ٹرانزسٹر کا بیس  سرا برقی زمین پر ہے لہٰذا \عددی{C_{b'c}} کا ایک سرا برقی زمین پر ہو گا اور یوں اسے کلکٹر  اور برقی زمین کے مابین دکھایا گیا ہے۔ 
+شکل \حوالہ{شکل_تعددی_ردعمل_قابو_مشترک_ایمپلیفائر_بلند_تعدد_پر} میں بیس  مشترک ایمپلیفائر دکھایا گیا ہے۔صفحہ \حوالہصفحہ{شکل_ٹی_ماڈل} پر ٹرانزسٹر کا \اصطلاح{ٹی ریاضی نمونہ} دکھایا گیا ہے جسے \اصطلاح{پائے ریاضی نمونہ} کی شکل میں بناتے ہوئے شکل \حوالہ{شکل_تعددی_ردعمل_قابو_مشترک_ایمپلیفائر_بلند_تعدد_پر} کا بلند تعددی مساوی دور شکل \حوالہ{شکل_تعددی_ردعمل_قابو_مشترک_ایمپلیفائر_بلند_تعدد_پر_مساوی} میں دکھایا گیا ہے۔باریک اشاراتی دور میں \عددی{R_1} اور \عددی{R_2} دونوں کے دونوں سرے برقی زمین پر ہیں لہٰذا انہیں نہیں دکھایا گیا۔چونکہ ٹرانزسٹر کا بیس  سرا برقی زمین پر ہے لہٰذا \عددی{C_{b'c}} کا ایک سرا برقی زمین پر ہو گا اور یوں اسے کلکٹر  اور برقی زمین کے مابین دکھایا گیا ہے۔ 
 
 \begin{figure}
 \centering
@@ -1941,7 +1941,7 @@ A_v=\frac{v_L}{v_i}&=-3333 \times 0.0416 \times \frac{\frac{3600 \times 5182}{36
 \label{شکل_تعددی_ردعمل_کیسکوڈ_ایمپلیفائر}
 \end{figure}
 
-شکل \حوالہ{شکل_تعددی_ردعمل_کیسکوڈ_ایمپلیفائر} ب میں کیسکوڈ ایمپلیفائر کا مساوی باریک اشاراتی دور دکھایا گیا ہے جس میں ٹرانزسٹر مائل کرنے والے اجزاء  نہیں دکھائے گئے تا کہ کیسکوڈ ایمپلیفائر کی بنیادی کارکردگی پر توجہ رہے۔اس شکل میں \عددی{Q_2} کا مزاحمت \عددی{r_{e2}} بطور \عددی{Q_1} کے برقی بوجھ  کردار ادا کرتا ہے۔\عددی{r_{e2}} کو \عددی{Q_2} کے باہر دکھاتے ہوئے اسے \عددی{Q_1} کے کلکٹر  اور برقی زمین کے مابین دکھایا گیا ہے۔شکل  پ میں \عددی{Q_2} کا \عددیء{T} ماڈل\حاشیہد{\عددی{T} ماڈل پر حصہ \حوالہ{حصہ_ٹرانزسٹر_ٹی_ماڈل} میں تبصرہ کیا گیا ہے} استعمال کرتے ہوئے اس بات کی وضاحت کی گئی ہے کہ \عددی{Q_1} کے کلکٹر  اور برقی زمین کے درمیان \عددی{r_{e2}} نسب ہے۔
+شکل \حوالہ{شکل_تعددی_ردعمل_کیسکوڈ_ایمپلیفائر} ب میں کیسکوڈ ایمپلیفائر کا مساوی باریک اشاراتی دور دکھایا گیا ہے جس میں ٹرانزسٹر مائل کرنے والے اجزاء  نہیں دکھائے گئے تا کہ کیسکوڈ ایمپلیفائر کی بنیادی کارکردگی پر توجہ رہے۔اس شکل میں \عددی{Q_2} کا مزاحمت \عددی{r_{e2}} بطور \عددی{Q_1} کے برقی بوجھ  کردار ادا کرتا ہے۔\عددی{r_{e2}} کو \عددی{Q_2} کے باہر دکھاتے ہوئے اسے \عددی{Q_1} کے کلکٹر  اور برقی زمین کے مابین دکھایا گیا ہے۔شکل  پ میں \عددی{Q_2} کا \عددیء{T} ریاضی نمومے\حاشیہد{\عددی{T} ریاضی نمونے پر حصہ \حوالہ{حصہ_ٹرانزسٹر_ٹی_ماڈل} میں تبصرہ کیا گیا ہے} استعمال کرتے ہوئے اس بات کی وضاحت کی گئی ہے کہ \عددی{Q_1} کے کلکٹر  اور برقی زمین کے درمیان \عددی{r_{e2}} نسب ہے۔
 
 \عددی{Q_1} کا برقی بوجھ \عددی{r_{e2}} لیتے ہوئے
 \begin{align}
@@ -1953,7 +1953,7 @@ C_M=\left(1+1 \right) C_{b'c}=2 C_{b'c}
 \end{align}
 حاصل ہوتا ہے جو کہ کم ترین ممکنہ ملر کپیسٹر ہے۔\عددی{C_M} کی قیمت کم سے کم ہونے کی بنا پر مشترکہ ایمٹر        طرز کے ایمپلیفائر کی  بلند انقطاعی تعدد زیادہ سے زیادہ تعدد پر حاصل ہوتی ہے۔
 
-شکل \حوالہ{شکل_تعددی_ردعمل_کیسکوڈ_ایمپلیفائر_باریک_اشاراتی_تجزیہ} میں \عددی{Q_1} کا بلند تعددی ماڈل استعمال کرتے  ہوئے باریک اشاراتی مساوی دور دکھایا گیا ہے جس میں \عددی{r_{e2}} کو بطور برقی بوجھ دکھایا گیا ہے۔متوازی جڑے \عددی{R_1} اور \عددی{R_2} کے کل مزاحمت کو \عددی{R_B} لکھتے  ہیں یعنی
+شکل \حوالہ{شکل_تعددی_ردعمل_کیسکوڈ_ایمپلیفائر_باریک_اشاراتی_تجزیہ} میں \عددی{Q_1} کا بلند تعددی ریاضی نمونہ استعمال کرتے  ہوئے باریک اشاراتی مساوی دور دکھایا گیا ہے جس میں \عددی{r_{e2}} کو بطور برقی بوجھ دکھایا گیا ہے۔متوازی جڑے \عددی{R_1} اور \عددی{R_2} کے کل مزاحمت کو \عددی{R_B} لکھتے  ہیں یعنی
 \begin{align*}
 \frac{1}{R_B}=\frac{1}{R_1}+\frac{1}{R_2}
 \end{align*}
@@ -2089,7 +2089,7 @@ V_{E1}=I_{E1} R_E=1.197 \times 10^{-3} \times 2000=\SI{2.39}{\volt}
 \begin{align*}
 V_{B1}=V_{E1}+V_{BE1}=2.39+0.7=\SI{3.09}{\volt}
 \end{align*}
-پایا جائے گا۔یہی برقی دباو یوں بھی حاصل کیا جا سکتا ہے کہ بیس  جانب \عددی{\SI{20}{\kilo \ohm}} مزاحمت میں سے جب \عددی{\SI{11.97}{\micro \ampere}} گزرے گا تو اُوہم کے قانون کے تحت اس کے دو سروں کے مابین تقریباً \عددی{\SI{0.24}{\volt}} کا برقی دباو ہو گا یوں
+پایا جائے گا۔ یہی برقی دباو یوں بھی حاصل کیا جا سکتا ہے کہ بیس  جانب \عددی{\SI{20}{\kilo \ohm}} مزاحمت میں \عددی{\SI{11.97}{\micro \ampere}} گزرنے سے،   قانون اوہم  کے تحت، مزاحمت پر \عددی{\SI{0.24}{\volt}} برقی دباو پیدا ہو گا یوں
 \begin{align*}
 V_{B1}=3.33-I_{B1} \times 20000=\SI{3.09}{\volt}
 \end{align*}
