--- a/tex/electronicsMOSFET.tex
+++ b/tex/electronicsMOSFET.tex
@@ -1265,8 +1265,8 @@ A_v=\frac{v_{ds}}{v_{gs}}=-g_m R_D
 \label{شکل_ماسفیٹ_ایمپلیفائر_گیٹ_دباو_بالمقابل_برقی_رو}
 \end{figure}
 %===================
-\حصہ{ماسفیٹ ماڈل}
-اس حصے میں ماسفیٹ کے ماڈل حاصل کئے جائیں گے جنہیں استعمال کر کے بدلتے برقی دباو اور بدلتے برقی رو حاصل کئے جاتے ہیں۔
+\حصہ{ماسفیٹ ریاضی نمونہ}
+اس حصے میں ماسفیٹ کے \اصطلاح{ریاضی نمونے}\فرہنگ{ریاضی نمونہ}\فرہنگ{نمونہ!ریاضی}\حاشیہب{model}\فرہنگ{models} حاصل کئے جائیں گے جنہیں استعمال کر کے بدلتے برقی دباو اور بدلتے برقی رو حاصل کئے جاتے ہیں۔
 \جزوحصہ{خارجی مزاحمت  \عددی{r_o}}
 
 ماسفیٹ کو بطورِ ایمپلیفائر استعمال کرنے کی خاطر اسے افزائندہ خطے میں مائل کیا جاتا ہے۔مساوات \حوالہ{مساوات_میدانی_نقطہ _دبوچ_رو}  کے مطابق افزائندہ خطے میں \عددی{v_{DS}} تبدیل کرنے سے \عددی{i_{DS}} پر کوئی اثر نہیں ہوتا۔صفحہ \pageref{شکل_بڑھاتے_ماسفیٹ_کے_خط_منفی}  پر شکل \حوالہ{شکل_بڑھاتے_ماسفیٹ_کے_خط_منفی} پ میں  \عددی{v_{DS}} کو \زیرنوشت{v}{DS}{دبوچ} سے بڑھانے پر پیدا کردہ راہ کی لمبائی کم ہوتے دکھائی گئی ہے۔مساوات \حوالہ{مساوات_میدانی_نقطہ _دبوچ_رو}  حاصل کرتے وقت اس اثر کو نظر انداز کیا گیا۔پیدا کردہ راہ کی لمبائی کم ہونے سے پیدا کردہ راہ کی مزاحمت کم ہو جاتی ہے اور یوں \عددی{i_{DS}} بڑھ جاتا ہے۔بڑھتے برقی دباو کے ساتھ پیدا کردہ راہ کی لمبائی کم ہونے کے اثر کو ہم مساوات  \حوالہ{مساوات_میدانی_نقطہ _دبوچ_رو} میں \اصطلاح {ارلی برقی دباو}\فرہنگ{ارلی برقی دباو}\فرہنگ{Early voltage}\حاشیہب{Early voltage} \عددی{V_A}  کے طرز کا جزو شامل کرنے سے حاصل کر سکتے ہیں جیسے
@@ -1302,17 +1302,17 @@ V_A \propto L_{\textrm{راہ}}
 \end{align}
 یوں \عددی{r_o} بڑھانے کی خاطر زیادہ لمبائی کی راہ تخلیق دی جاتی ہے۔ماسفیٹ کے ارلی برقی دباو کی عمومی قیمت \عددی{\SI{200}{\volt}} تا \عددی{\SI{300}{\volt}} ہوتی ہے۔
 
-\جزوحصہ{وسیع اشاراتی ماسفیٹ ماڈل}
-افزائندہ خطے میں ماسفیٹ کا وسیع اشاراتی ماڈل شکل \حوالہ{شکل_وسیع_اشارات_ماسفیٹ_ماڈل}  میں دکھایا گیا ہے۔اس ماڈل کے داخلی جانب مزاحمت لامحدود ہے جبکہ مساوات \حوالہ{مساوات_میدانی_خارجی_مزاحمت}  اس کا خارجی مزاحمت \عددی{r_o}  دیتا ہے۔آپ دیکھ سکتے ہیں کہ اس ماڈل سے درست \عددی{i_{DS}}  حاصل ہوتا ہے۔
+\جزوحصہ{وسیع اشاراتی ماسفیٹ ریاضی نمونہ}
+افزائندہ خطے میں ماسفیٹ کا وسیع اشاراتی ریاضی نمونہ\حاشیہب{model} شکل \حوالہ{شکل_وسیع_اشارات_ماسفیٹ_ماڈل}  میں دکھایا گیا ہے۔اس ریاضی نمونے کے داخلی جانب مزاحمت لامحدود ہے جبکہ مساوات \حوالہ{مساوات_میدانی_خارجی_مزاحمت}  اس کا خارجی مزاحمت \عددی{r_o}  دیتا ہے۔آپ دیکھ سکتے ہیں کہ اس ریاضی نمونے  سے درست \عددی{i_{DS}}  حاصل ہوتا ہے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{MOSFETlargeSignalModel}
-\caption{وسیع اشارات ماسفیٹ ماڈل}
+\caption{وسیع اشارات ماسفیٹ ریاضی نمونہ}
 \label{شکل_وسیع_اشارات_ماسفیٹ_ماڈل}
 \end{figure}
 
-\جزوحصہ{باریک اشاراتی ماسفیٹ \عددی{\pi} ماڈل}
-ماسفیٹ کا باریک اشاراتی ماڈل بالکل \عددی{BJT} ٹرانزسٹر کی طرح حاصل کیا جاتا ہے۔افزائندہ خطے میں استعمال ہوتے ماسفیٹ کا باریک اشاراتی ماڈل حاصل کرنے کی غرض سے مساوات \حوالہ{مساوات_میدانی_افزائندہ_رو}  کا جزوی تفرق حاصل کرتے ہیں جس سے افزائش \عددی{g_m} حاصل ہو گی۔جزوی تفرق کی قیمت نقطہ مائل \عددی{V_{GS}} پر حاصل کیا جاتا ہے۔یوں
+\جزوحصہ{باریک اشاراتی ماسفیٹ \عددی{\pi} ریاضی نمونہ}
+ماسفیٹ کا باریک اشاراتی ریاضی نمونہ بالکل \عددی{BJT} ٹرانزسٹر کی طرح حاصل کیا جاتا ہے۔افزائندہ خطے میں استعمال ہوتے ماسفیٹ کا باریک اشاراتی ریاضی نمونہ حاصل کرنے کی غرض سے مساوات \حوالہ{مساوات_میدانی_افزائندہ_رو}  کا جزوی تفرق حاصل کرتے ہیں جس سے افزائش \عددی{g_m} حاصل ہو گی۔جزوی تفرق کی قیمت نقطہ مائل \عددی{V_{GS}} پر حاصل کیا جاتا ہے۔یوں
 \begin{align} \label{مساوات_میدانی_موصلیت_نما}
 g_m = \left. \frac{\partial i_{DS}}{\partial v_{GS}} \right |_{V_{GS}}=k_n \left[V_{GS}-V_t \right ]
 \end{align}
@@ -1328,26 +1328,26 @@ V_{GS}-V_t=\sqrt{\frac{2 I_{DS}}{k_n}}
 \begin{align} \label{مساوات_میدانی_موصلیت_نما_الف}
 g_m=k_n \left[V_{GS}-V_t \right ]=k_n \sqrt{\frac{2 I_{DS}}{k_n}}=\sqrt{2 k_n I_{DS}}
 \end{align}
-مساوات \حوالہ{مساوات_میدانی_خارجی_مزاحمت}  سے حاصل  \عددی{r_o} اور مساوات \حوالہ{مساوات_میدانی_موصلیت_نما_الف}  سے حاصل  \عددی{g_m} استعمال کرتے ہوئے ماسفیٹ کا \اصطلاح {پست تعددی باریک اشاراتی ماسفیٹ پائے ماڈل} حاصل ہوتا ہے جسے شکل \حوالہ{شکل_باریک_اشاراتی_ماسفیٹ_ماڈل}  میں دائیں ہاتھ دکھایا گیا ہے۔اس ماڈل کا عمومی نام \عددی{\pi}  ماڈل ہے۔ دو جوڑ ٹرانزسٹر کے باریک اشاراتی ماڈل کے ساتھ موازنہ کرتے ہوئے صاف ظاہر ہے کہ ماسفیٹ کا داخلی مزاحمت لامحدود ہونے کی وجہ سے اس کی داخلی برقی رو صفر ہو گی۔
+مساوات \حوالہ{مساوات_میدانی_خارجی_مزاحمت}  سے حاصل  \عددی{r_o} اور مساوات \حوالہ{مساوات_میدانی_موصلیت_نما_الف}  سے حاصل  \عددی{g_m} استعمال کرتے ہوئے ماسفیٹ کا \اصطلاح {پست تعددی باریک اشاراتی ماسفیٹ پائے ریاضی نمونہ} حاصل ہوتا ہے جسے شکل \حوالہ{شکل_باریک_اشاراتی_ماسفیٹ_ماڈل}  میں دائیں ہاتھ دکھایا گیا ہے۔اس ریاضی نمونے کا عمومی نام \عددی{\pi}  ریاضی نمونہ ہے۔ دو جوڑ ٹرانزسٹر کے باریک اشاراتی ریاضی نمونہ کے ساتھ موازنہ کرتے ہوئے صاف ظاہر ہے کہ ماسفیٹ کا داخلی مزاحمت لامحدود ہونے کی وجہ سے اس کی داخلی برقی رو صفر ہو گی۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{MOSFETsmallSignalModelA}
-\caption{پست تعددی باریک اشاراتی ماسفیٹ پائے ماڈل}
+\caption{پست تعددی باریک اشاراتی ماسفیٹ پائے ریاضی نمونہ}
 \label{شکل_باریک_اشاراتی_ماسفیٹ_ماڈل}
 \end{figure}
 ماسفیٹ کے \عددی{g_m} کا دو جوڑ ٹرانزسٹر کے  \عددی{g_m}  کے ساتھ موازنہ کرنے سے معلوم ہوتا ہے کہ ماسفیٹ کی برقی رو چار گنا کرنے سے اس کا   \عددی{g_m} دگنا ہوتا ہے جبکہ دو جوڑ ٹرانزسٹر کی برقی رو صرف دگنا کرنے سے ہی اس کا \عددی{g_m} دگنا ہو جاتا ہے۔
 
-شکل \حوالہ{شکل_باریک_اشاراتی_ماسفیٹ_ماڈل} میں اسی ماڈل کی دوسری شکل بھی دکھائی گئی ہے جہاں ماڈل میں خارجی جانب نارٹن مساوی کی جگہ تھونن مساوی استعمال کیا گیا ہے۔یوں تھونن برقی دباو \عددی{g_m v_{gs} r_o} کے برابر لیتے ہوئے
+شکل \حوالہ{شکل_باریک_اشاراتی_ماسفیٹ_ماڈل} میں اسی ریاضی نمونے کی دوسری شکل بھی دکھائی گئی ہے جہاں ریاضی نمونے میں خارجی جانب نارٹن مساوی کی جگہ تھونن مساوی استعمال کیا گیا ہے۔یوں تھونن برقی دباو \عددی{g_m v_{gs} r_o} کے برابر لیتے ہوئے
 \begin{align*}
 \mu=g_m r_o
 \end{align*} 
 حاصل ہوتا ہے۔
 
-ماسفیٹ کے گیٹ اور سورس کے مابین \عددی{C_{gs}} کپیسٹر پایا جاتا ہے۔اسی طرح گیٹ اور ڈرین کے مابین \عددی{C_{gd}} کپیسٹر پایا جاتا ہے۔کم تعدد پر ان کپیسٹر کو نظرانداز کیا جاتا ہے البتہ بلند تعدد پر ان کو نظرانداز کرنا ممکن نہیں ہوتا۔یوں بلند تعدد پر ماسفیٹ کے پائے ماڈل میں انہیں شامل کرنے سے \اصطلاح {بلند تعددی پائے ماڈل} حاصل ہوتا ہے جسے شکل \حوالہ{شکل_باریک_اشاراتی_بلند_تعددی_ماسفیٹ_ماڈل} میں دکھایا گیا ہے۔
+ماسفیٹ کے گیٹ اور سورس کے مابین \عددی{C_{gs}} کپیسٹر پایا جاتا ہے۔اسی طرح گیٹ اور ڈرین کے مابین \عددی{C_{gd}} کپیسٹر پایا جاتا ہے۔کم تعدد پر ان کپیسٹر کو نظرانداز کیا جاتا ہے البتہ بلند تعدد پر ان کو نظرانداز کرنا ممکن نہیں ہوتا۔یوں بلند تعدد پر ماسفیٹ کے پائے ریاضی نمونے میں انہیں شامل کرنے سے \اصطلاح {بلند تعددی پائےریاضی نمونہ}\فرہنگ{نمونی!ریاضی بلند تعددی} حاصل ہوتا ہے جسے شکل \حوالہ{شکل_باریک_اشاراتی_بلند_تعددی_ماسفیٹ_ماڈل} میں دکھایا گیا ہے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{MOSFETsmallSignalHighFrequencyModel}
-\caption{بلند تعددی باریک اشاراتی ماسفیٹ پائے ماڈل}
+\caption{بلند تعددی باریک اشاراتی ماسفیٹ پائے ریاضی نمونہ}
 \label{شکل_باریک_اشاراتی_بلند_تعددی_ماسفیٹ_ماڈل}
 \end{figure}
 کم \عددی{v_{DS}} کی صورت میں غیر افزائندہ ماسفیٹ کے گیٹ کے  نیچے \اصطلاح {الٹا خطہ} سورس سے ڈرین تک تقریباً یکساں شکل کا ہوتا ہے۔گیٹ اور \اصطلاح {الٹا خطہ} مل کر کپیسٹر \عددی{\tfrac{\epsilon W L}{d}} کو جنم دیتے ہیں۔اس کپیسٹر کا آدھا حصہ \عددی{C_{gs}} اور آدھا \عددی{C_{gd}} ہے یعنی
@@ -1366,43 +1366,43 @@ C_{gs}& \approx \left(\frac{2}{3}\right) \frac{\epsilon WL}{d}
 
 ان کے علاوہ گیٹ کا کچھ حصہ سورس کو اور کچھ حصہ ڈرین کو ڈھانپتا ہے  جس سے گیٹ اور سورس کے مابین غیر مطلوب کپیسٹر \عددی{C_{gsp}} اور اسی طرح گیٹ اور ڈرین کے مابین غیر مطلوب کپیسٹر \عددی{C_{gsp}} پیدا ہوتا ہے۔ڈرین اور سلیکان پتری کا مابین \عددی{pn} جوڑ پایا جاتا ہے جس کے کپیسٹر کو \عددی{C_{db}} سے ظاہر کیا جاتا ہے۔
 
-ماسفیٹ کے ماڈل میں \عددی{C_{gs}} گیٹ اور سورس کے درمیان دونوں اقسام کے کپیسٹروں کے مجموعے کو کہتے ہیں۔اسی طرح \عددی{C_{gd}} بھی دونوں اقسام کے کپیسٹروں کے مجموعے کو ظاہر کرتا ہے۔شکل \حوالہ{شکل_ماسفیٹ_ماڈل_اجزاء} میں ان تمام قسم کے کپیسٹروں کو دکھایا گیا ہے۔ساتھ ہی ساتھ مزاحمت \عددی{r_s} اور \عددی{r_d} بھی دکھائے گئے ہیں۔بیرونی سورس سرے اور اندرونی سورس کے درمیان \عددی{r_s} مزاحمت پایا جاتا ہے۔اسی طرح بیرونی ڈرین سرے اور اندرونی ڈرین کے درمیان \عددی{r_d} پایا جاتا ہے۔اس کتاب میں \عددی{C_{db}}، \عددی{r_s} اور \عددی{r_d} کو  استعمال نہیں کیا جائے گا۔
+ماسفیٹ کے ریاضی نمونے میں \عددی{C_{gs}} گیٹ اور سورس کے درمیان دونوں اقسام کے کپیسٹروں کے مجموعے کو کہتے ہیں۔اسی طرح \عددی{C_{gd}} بھی دونوں اقسام کے کپیسٹروں کے مجموعے کو ظاہر کرتا ہے۔شکل \حوالہ{شکل_ماسفیٹ_ماڈل_اجزاء} میں ان تمام قسم کے کپیسٹروں کو دکھایا گیا ہے۔ساتھ ہی ساتھ مزاحمت \عددی{r_s} اور \عددی{r_d} بھی دکھائے گئے ہیں۔بیرونی سورس سرے اور اندرونی سورس کے درمیان \عددی{r_s} مزاحمت پایا جاتا ہے۔اسی طرح بیرونی ڈرین سرے اور اندرونی ڈرین کے درمیان \عددی{r_d} پایا جاتا ہے۔اس کتاب میں \عددی{C_{db}}، \عددی{r_s} اور \عددی{r_d} کو  استعمال نہیں کیا جائے گا۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{mosfetCapacitors}
-\caption{ماسفیٹ ماڈل کے اجزاء}
+\caption{ماسفیٹ ریاضی نمونے کے اجزاء}
 \label{شکل_ماسفیٹ_ماڈل_اجزاء}
 \end{figure}
 
-دو جوڑ ٹرانزسٹر کے پائے ماڈلوں کی طرح ماسفیٹ کے باریک اشاراتی پائے ماڈل \تحریر{nMOSFET} اور \تحریر{pMOSFET} دونوں کے لئے یکساں قابل استعمال ہیں۔
+دو جوڑ ٹرانزسٹر کے پائے ریاضی نمونوں کی طرح ماسفیٹ کے باریک اشاراتی پائے ریاضی نمونے \تحریر{nMOSFET} اور \تحریر{pMOSFET} دونوں کے لئے یکساں قابل استعمال ہیں۔
 %=====================
-\جزوحصہ{باریک اشاراتی ماسفیٹ ٹی ماڈل}
-شکل \حوالہ{شکل_ماسفیٹ_ٹی_ماڈل} الف میں \عددیء{r_o} کو نظر انداز کرتے ہوئے ماسفیٹ کا \اصطلاح {ٹی ماڈل}\فرہنگ{ٹی ماڈل}\فرہنگ{ماڈل!ٹی}\حاشیہب{T model}\فرہنگ{T model} دکھایا گیا ہے۔اس ماڈل میں گیٹ اور سورس کے مابین مزاحمت نسب ہے جس کی قیمت \عددیء{\tfrac{1}{g_m}} ہے۔اس ماسفیٹ ماڈل کو پائے ماڈل سے یوں حاصل کیا جا سکتا ہے۔پائے ماڈل میں
+\جزوحصہ{باریک اشاراتی ماسفیٹ ٹی ریاضی نمونہ}
+شکل \حوالہ{شکل_ماسفیٹ_ٹی_ماڈل} الف میں \عددیء{r_o} کو نظر انداز کرتے ہوئے ماسفیٹ کا \اصطلاح {ٹی ریاضی نمونہ}\فرہنگ{ٹی ریاضی نمونہ}\فرہنگ{ریاضی نمونہ!ٹی}\حاشیہب{T model}\فرہنگ{T model} دکھایا گیا ہے۔اس ریاضی نمونے میں گیٹ اور سورس کے مابین مزاحمت نسب ہے جس کی قیمت \عددیء{\tfrac{1}{g_m}} ہے۔اس ماسفیٹ ریاضی نمونے کو پائے ریاضی نمونے سے یوں حاصل کیا جا سکتا ہے۔پائے ریاضی نمونے میں
 \begin{gather} 
 \begin{aligned}\label{مساوات_ماسفیٹ_ٹی_ماڈل_کے_برقی_رو}
 i_g&=0\\
 i_d&=i_s=i_{ds}=g_m v_{gs}
 \end{aligned}
 \end{gather}
-پائے جاتے ہیں جہاں \عددیء{i_d} اور \عددیء{i_s} ڈرین اور سورس کے برقی رو ہیں۔داخلی مزاحمت لامحدود ہے۔آئیں اب ٹی ماڈل پر نظر ڈالیں۔ٹی ماڈل میں \عددیء{i_d=g_m v_{gs}} ہے۔گیٹ اور سورس کے مابین مزاحمت نسب ہے جس پر برقی دباو \عددیء{v_{gs}} ہے۔یوں اُوہم کے قانون سے اس مزاحمت میں برقی رو کی مقدار
+پائے جاتے ہیں جہاں \عددیء{i_d} اور \عددیء{i_s} ڈرین اور سورس کے برقی رو ہیں۔داخلی مزاحمت لامحدود ہے۔آئیں اب ٹی ریاضی نمونے پر نظر ڈالیں۔ٹی ریاضی نمونے میں \عددیء{i_d=g_m v_{gs}} ہے۔گیٹ اور سورس کے مابین مزاحمت نسب ہے جس پر برقی دباو \عددیء{v_{gs}} ہے۔یوں اُوہم کے قانون سے اس مزاحمت میں برقی رو کی مقدار
 \begin{align*}
 \frac{\textrm{دباو برقی}}{\textrm{رو برقی}}=\frac{v_{gs}}{\frac{1}{g_m}}=g_m v_{gs}
 \end{align*} 
-ہو گی۔یہی برقی رو سورس پر ہو گی۔گیٹ \عددیء{G} کے جوڑ پر \عددیء{D} کی جانب سے \عددیء{g_m v_{gs}} برقی رو آتی ہے۔اس جوڑ سے اتنی ہی برقی رو مزاحمت سے گزرتے ہوئے \عددیء{S} رواں ہے۔یوں کرچاف کے قانون برائے برقی رو کی مدد سے گیٹ  پر برقی رو \عددیء{i_g=0} حاصل ہوتی ہے۔داخلی مزاحمت \عددیء{\tfrac{v_{gs}}{i_g}} کی قیمت \عددیء{i_g=0} کی بنا پر لامحدود حاصل ہوتی ہے۔ہم دیکھتے ہیں کہ ٹی ماڈل سے بھی بالکل وہی جوابات حاصل ہوتے ہیں جو پائے ماڈل سے حاصل ہوتے ہیں لہٰذا ماسفیٹ کے ادوار حل کرتے وقت ٹی ماڈل کو بھی استعمال کیا جا سکتا ہے۔ٹی ماڈل میں \عددیء{r_o} کی شمولیت شکل \حوالہ{شکل_ماسفیٹ_ٹی_ماڈل} ب میں دکھایا گیا ہے۔ 
+ہو گی۔یہی برقی رو سورس پر ہو گی۔گیٹ \عددیء{G} کے جوڑ پر \عددیء{D} کی جانب سے \عددیء{g_m v_{gs}} برقی رو آتی ہے۔اس جوڑ سے اتنی ہی برقی رو مزاحمت سے گزرتے ہوئے \عددیء{S} رواں ہے۔یوں کرچاف کے قانون برائے برقی رو کی مدد سے گیٹ  پر برقی رو \عددیء{i_g=0} حاصل ہوتی ہے۔داخلی مزاحمت \عددیء{\tfrac{v_{gs}}{i_g}} کی قیمت \عددیء{i_g=0} کی بنا پر لامحدود حاصل ہوتی ہے۔ہم دیکھتے ہیں کہ ٹی ریاضی نمونے سے بھی بالکل وہی جوابات حاصل ہوتے ہیں جو پائے ریاضی نمونے سے حاصل ہوتے ہیں لہٰذا ماسفیٹ کے ادوار حل کرتے وقت ٹی ریاضی نمونے کو بھی استعمال کیا جا سکتا ہے۔ٹی ریاضی نمونے میں \عددیء{r_o} کی شمولیت شکل \حوالہ{شکل_ماسفیٹ_ٹی_ماڈل} ب میں دکھایا گیا ہے۔ 
 
 %
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{mosfetTmodel}
-\caption{باریک اشاراتی ماسفیٹ ٹی ماڈل}
+\caption{باریک اشاراتی ماسفیٹ ٹی ریاضی نمونہ}
 \label{شکل_ماسفیٹ_ٹی_ماڈل}
 \end{figure}
 
-دو جوڑ ٹرانزسٹر کے ٹی ماڈل کی طرح  شکل \حوالہ{شکل_ماسفیٹ_ٹی_ماڈل} میں دکھائے گئے ماسفیٹ کے ٹی ماڈل \تحریر{nMOSFET} اور \تحریر{pMOSFET} دونوں کے لئے قابل استعمال ہیں۔
+دو جوڑ ٹرانزسٹر کے ٹی ریاضی نمونے کی طرح  شکل \حوالہ{شکل_ماسفیٹ_ٹی_ماڈل} میں دکھائے گئے ماسفیٹ کے ٹی ریاضی نمونے دونوں اقسام کے ماسفیٹ یعنی \تحریر{nMOSFET} اور \تحریر{pMOSFET} کے لئے قابل استعمال ہیں۔
  
 
 \جزوحصہ{یک سمتی اور بدلتے متغیرات کی علیحدگی}
-مندرجہ بالا تذکرہ سے ہم دیکھتے ہیں کہ برقی دباو اور برقی رو کے دو حصے (یعنی یک سمتی حصہ اور بدلتا حصہ) ہوتے ہے۔ماسفیٹ کے ادوار حل کرتے وقت ان دو حصوں کو علیحدہ علیحدہ حل کیا جاتا ہے۔پہلے بدلتے متغیرات کی قیمتیں صفر کرتے ہوئے یک سمتی حصہ حل کر کے نقطہ مائل حاصل کیا جاتا ہے اور پھر بدلتے حصے کو ماڈل کی مدد سے حل کیا جاتا ہے۔
+مندرجہ بالا تذکرہ سے ہم دیکھتے ہیں کہ برقی دباو اور برقی رو کے دو حصے (یعنی یک سمتی حصہ اور بدلتا حصہ) ہوتے ہے۔ماسفیٹ کے ادوار حل کرتے وقت ان دو حصوں کو علیحدہ علیحدہ حل کیا جاتا ہے۔پہلے بدلتے متغیرات کی قیمتیں صفر کرتے ہوئے یک سمتی حصہ حل کر کے نقطہ مائل حاصل کیا جاتا ہے اور پھر بدلتے حصے کو ریاضی نمونے کی مدد سے حل کیا جاتا ہے۔
 %=========
 \ابتدا{مثال}
 مساوات \حوالہ{مساوات_میدانی_رو_کے_حصے} میں \عددی{\tfrac{k_n v_{gs}^2}{2}} نا پسندیدہ حصہ ہے۔اگر داخلی اشارہ \عددی{v_{gs}=V_p \cos \omega t} ہو تب نا پسندیدہ جزو میں \عددی{\cos ^2 \omega t=\tfrac{1+\cos (2 \omega t)}{2}} استعمال کرتے ہوئے  \عددی{\tfrac{k_n V_p^2}{4} \left[1+\cos (2 \omega t) \right]} لکھا جا سکتا ہے جو داخلی اشارے کے دگنی تعدد کا جزو  ہے۔یہی اصل اشارے کی شکل \اصطلاح {بگاڑتا} ہے۔خارجی اشارے میں دگنی تعدد اور اصل تعدد کے اجزاء کے حیطوں کی نسبت حاصل کریں۔اگر \عددی{V_t=\SI{1.4}{\volt}} اور \عددی{V_{GS}=\SI{4}{\volt}} ہوں تب داخلی اشارے کی چوٹی کی وہ حد حاصل کریں جس پر حاصل کردہ نسبت \عددی{\SI{1}{\percent}} ہو۔
@@ -1603,7 +1603,7 @@ A_v=\SI{-8.64}{\volt \per \volt}
 ان دو مثالوں سے آپ دیکھتے ہیں کہ \عددی{R_S} کی شمولیت سے \عددی{A_v} گھٹتا ہے لیکن چونکہ \عددی{R_S} کے استعمال سے نقطہ کارکردگی مستحکم ہوتا ہے لہٰذا \عددی{R_S} کا استعمال کیا جاتا ہے۔\عددی{R_S} کے متوازی لامحدود کپیسٹر نسب کرنے سے \عددی{A_v} پر \عددی{R_S} کے بُرے اثر کو ختم کیا جاتا ہے۔
 %===================
 \ابتدا{مثال}
-شکل \حوالہ{شکل_ماسفیٹ_افزائش_بطور_کسر_مزاحمت_الف} الف کے ایمپلیفائر کو ٹی ماڈل سے حل کریں۔ 
+شکل \حوالہ{شکل_ماسفیٹ_افزائش_بطور_کسر_مزاحمت_الف} الف کے ایمپلیفائر کو ٹی ریاضی نمونے سے حل کریں۔ 
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{gainAsResistorRatioA}
@@ -1611,7 +1611,7 @@ A_v=\SI{-8.64}{\volt \per \volt}
 \label{شکل_ماسفیٹ_افزائش_بطور_کسر_مزاحمت_الف}
 \end{figure}
 
-حل:شکل  ب میں ٹی ماڈل استعمال کرتے ہوئے اس کا باریک اشاراتی مساوی دور دکھایا گیا ہے۔ٹی ماڈل استعمال کرتے وقت اس حقیقت کو بروئے کار لائیں کہ گیٹ پر برقی رو صفر رہتی ہے۔شکل میں \عددیء{i_g=0} لکھ کر اس حقیقت کی یاد دہانی کرائی گئی ہے۔داخلی جانب کرچاف کے قانون برائے برقی دباو کی مدد سے ہم لکھ سکتے ہیں۔
+حل:شکل  ب میں ٹی ریاضی نمونے استعمال کرتے ہوئے اس کا باریک اشاراتی مساوی دور دکھایا گیا ہے۔ٹی ریاضی نمونے استعمال کرتے وقت اس حقیقت کو بروئے کار لائیں کہ گیٹ پر برقی رو صفر رہتی ہے۔شکل میں \عددیء{i_g=0} لکھ کر اس حقیقت کی یاد دہانی کرائی گئی ہے۔داخلی جانب کرچاف کے قانون برائے برقی دباو کی مدد سے ہم لکھ سکتے ہیں۔
 \begin{align*}
 i_s=\frac{v_i}{\frac{1}{g_m}+R_S}
 \end{align*}
@@ -1776,8 +1776,8 @@ i_{DS}=I_{DSS} \left(1-\frac{v_{GS}}{V_p} \right)^2 \left(1+\frac{v_{DS}}{V_A} \
 \caption{جوڑدار مثبت فیٹ کی ساخت}
 \label{شکل_جوڑدار_مثبت_فیٹ_ساخت}
 \end{figure}
-\جزوحصہ{باریک اشاراتی ماڈل}
-چونکہ \تحریر{JFET} اور \تحریر{MOSFET} کی کارکردگی یکساں ہے لہٰذا ان کے پست تعددی اور بلند تعددی پائے ماڈل بھی یکساں ہیں۔یہاں
+\جزوحصہ{باریک اشاراتی ریاضی نمونہ}
+چونکہ \تحریر{JFET} اور \تحریر{MOSFET} کی کارکردگی یکساں ہے لہٰذا ان کے پست تعددی اور بلند تعددی پائے ریاضی نمونے بھی یکساں ہیں۔یہاں
 \begin{align} \label{مساوات_افزائش_فیٹ}
 g_m &=\left(\frac{-2  I_{DSS}}{V_p} \right) \left(1-\frac{V_{GS}}{V_p} \right) \\
 &=\left(\frac{-2  I_{DSS}}{V_p} \right)  \sqrt{\frac{I_D}{I_{DSS}}}
@@ -2463,7 +2463,7 @@ g_{m2}=\sqrt{ 2 \times 0.003 \times 0.00073}=\SI{2.09}{\milli \siemens}
 \end{align*}
 حاصل ہوتا ہے۔یہاں رک کر تسلی کر لیں کہ دونوں ماسفیٹ افزائندہ خطے میں ہی ہیں۔ 
 
-ان قیمتوں کے ساتھ پائے ماڈل استعمال کرتے ہوئے زنجیری ایمپلیفائر کا مساوی دور شکل \حوالہ{شکل_ماسفیٹ_زنجیری_مشترک_محاصل_مشترک_گیٹ_مساوی} میں دکھایا گیا ہے جس کو دیکھ کر ہم
+ان قیمتوں کے ساتھ پائے ریاضی نمونہ استعمال کرتے ہوئے زنجیری ایمپلیفائر کا مساوی دور شکل \حوالہ{شکل_ماسفیٹ_زنجیری_مشترک_محاصل_مشترک_گیٹ_مساوی} میں دکھایا گیا ہے جس کو دیکھ کر ہم
 \begin{align*}
 v_{g1}&=v_i\\
 v_{g2}&=0\\
@@ -2576,7 +2576,7 @@ r=\frac{1}{k_n' \frac{W}{L} \left(v_{GS}-V_t \right)}=\SI{445}{\ohm}
 \انتہا{سوال}
 %========
 \ابتدا{سوال}
-\تحریر{pMOSFET} کا \عددی{\mu_p \approx 0.4 \mu_n} ہوتا ہے۔سوال \حوالہ{سوال_ماسفیٹ_ماسفیٹ-کی_مزاحمت_الف} میں بقایا معلومات تبدیل کئے بغیر \تحریر{pMOSFET} کی مزاحمت نہایت کم \عددی{V_{SD}} پر حاصل کریں۔
+\تحریر{pMOSFET} کا \عددی{\mu_p \approx 0.4 \mu_n} ہوتا ہے۔سوال \حوالہ{سوال_ماسفیٹ_ماسفیٹ-کی_مزاحمت_الف} میں بقایا معلومات تبدیل کئے بغیر، نہایت کم \عددی{V_{SD}} پر   \تحریر{pMOSFET} کی مزاحمت حاصل کریں۔
 
 جواب: \عددی{\SI{1114}{\ohm}}
 \انتہا{سوال}
