--- a/tex/electronicsOPAMP.tex
+++ b/tex/electronicsOPAMP.tex
@@ -119,7 +119,7 @@ v_0 &=A_d \times v_d \\
 &=\SI{0}{\volt}
 \end{aligned}$
 \end{enumerate}
-یہاں آپ نے دیکھا کہ دونوں داخلی سروں پر برابر برقی دباو مہیا کرنے سے حسابی ایمپلیفائر صفر وولٹ خارج کرتا ہے۔دونوں داخلی سروں پر برابر مہیا کردہ برقی دباو کو \اصطلاح{مشترکہ برقی دباو}\فرہنگ{مشترکہ برقی دباو}\فرہنگ{common mode voltage}\حاشیہب{common mode voltage}  کہتے ہیں۔حسابی ایمپلیفائر مشترکہ برقی دباو کو رد کرتا ہے۔
+یہاں آپ نے دیکھا کہ دونوں داخلی سروں پر برابر برقی دباو مہیا کرنے سے حسابی ایمپلیفائر صفر وولٹ خارج کرتا ہے۔ دونوں داخلی سروں پر برابر مہیا کردہ برقی دباو کو \اصطلاح{مشترکہ برقی دباو}\فرہنگ{مشترکہ برقی دباو}\فرہنگ{common mode voltage}\حاشیہب{common mode voltage}  کہتے ہیں۔ حسابی ایمپلیفائر مشترکہ برقی دباو کو رد کرتا ہے۔
 
 
 یہاں یہ بتلاتا چلوں کہ کسی بھی داخلی برقی دباو کو \اصطلاح{مشترکہ برقی دباو} \عددی{v_{CM}} اور \اصطلاح{تفرقی برقی دباو}\فرہنگ{تفرقی!برقی دباو}\فرہنگ{differential mode voltage}\حاشیہب{differential mode voltage} \عددی{v_d} میں تقسیم کیا جا سکتا ہے۔پانچویں جزو میں \عددی{v_1 = \SI{2.05}{\volt}} اور \عددی{v_2 = \SI{2.03}{\volt}} کو یوں بیان کیا جا سکتا ہے کہ حسابی ایمپلیفائر کو 
@@ -135,19 +135,19 @@ v_0 &=A_d \times v_d \\
 
 	اس مثال کے پہلے دو حصوں میں آپ نے دیکھا کہ اگر داخلی برقی دباو کو حسابی ایمپلیفائر کے \اصطلاح{مثبت داخلی سرے}\فرہنگ{مثبت داخلی سرا}\حاشیہب{non-inverting input}  پر مہیا کیا جائے تو اس سے حاصل خارجی برقی دباو کی علامت تبدیل نہیں ہوتی۔یعنی اگر مثبت برقی دباو مہیا کی جائے تو مثبت برقی دباو ہی خارج کی جاتی ہے۔اس کے برعکس اگر برقی دباو کو حسابی ایمپلیفائر کے \اصطلاح{منفی داخلی سرے}\فرہنگ{منفی داخلی سرا}\حاشیہب{inverting input}  پر مہیا کیا جائے تو اس سے حاصل خارجی برقی دباو کی علامت تبدیل ہو جاتی ہے۔یعنی اگر مثبت برقی دباو مہیا کی جائے تو منفی برقی دباو خارج کی جاتی ہے۔
 
-\حصہ{ حسابی ایمپلیفائر کا مساوی دور}
+\حصہ{ حسابی ایمپلیفائر کا مساوی دور یا ریاضی نمونہ}
 حسابی ایمپلیفائر کا مساوی دور شکل \حوالہ{شکل_حسابی_ایمپلیفائر_کا_مساوی_دور} میں دکھایا\حاشیہد{اس شکل میں تفرقی برقی دباو کا مثبت سرا نچلی جانب ہے۔} گیا ہے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{opampEquivalentCircuit}
-\caption{حسابی ایمپلیفائر کا مساوی دور}
+\caption{حسابی ایمپلیفائر کا مساوی دور (ریاضی نمونہ)}
 \label{شکل_حسابی_ایمپلیفائر_کا_مساوی_دور}
 \end{figure}
 جیسا کہ شکل سے واضح ہے داخلی جانب سے حسابی ایمپلیفائر بالکل ایک مزاحمت \عددی{R_i} کی طرح معلوم ہوتا ہے جبکہ خارجی جانب  یہ  \اصطلاح{تابع منبع دباو}\فرہنگ{تابع منبع دباو}\حاشیہب{depended voltage source}\فرہنگ{depended voltage source}جس کے ساتھ سلسلہ وار مزاحمت \عددی{R_o} جڑی ہو معلوم ہوتا ہے۔تابع منبع دباو،  داخلی جانب مہیا اشارہ \عددی{v_d} کے تابع ہے۔
 
-	حسابی ایمپلیفائر کے صنعت کاروں کی کوشش ہوتی ہے کہ حسابی ایمپلیفائر کے \اصطلاح{داخلی مزاحمت}\فرہنگ{داخلی مزاحمت} \عددی{R_i} کی قیمت زیادہ سے زیادہ جبکہ  \اصطلاح{خارجی مزاحمت}\فرہنگ{خارجی مزاحمت} \عددی{R_o} کی قیمت کم سے کم ہو۔اسی طرح کوشش کی جاتی ہے کہ \اصطلاح{تفرقی افزائش برقی دباو}\فرہنگ{تفرقی!افزائش برقی دباو}  \عددی{A_d} کی قیمت زیادہ سے زیادہ ہو۔جدول \حوالہ{جدول_حسابی_ایمپلیفائر_عمومی_مقداریں} میں آپ کے اندازے کی خاطر ایک عام دستیاب حسابی ایمپلیفائر\حاشیہد{عام دستیاب ایمپلیفائر کی قیمت بازار میں فروخت ہونے والی  تندور کی دو روٹیوں کے لگ بھگ ہے} کے  ماڈل کے اجزاء دئے گئے ہیں۔
+	حسابی ایمپلیفائر کے صنعت کاروں کی کوشش ہوتی ہے کہ حسابی ایمپلیفائر کے \اصطلاح{داخلی مزاحمت}\فرہنگ{داخلی مزاحمت} \عددی{R_i} کی قیمت زیادہ سے زیادہ جبکہ  \اصطلاح{خارجی مزاحمت}\فرہنگ{خارجی مزاحمت} \عددی{R_o} کی قیمت کم سے کم ہو۔اسی طرح کوشش کی جاتی ہے کہ \اصطلاح{تفرقی افزائش برقی دباو}\فرہنگ{تفرقی!افزائش برقی دباو}  \عددی{A_d} کی قیمت زیادہ سے زیادہ ہو۔جدول \حوالہ{جدول_حسابی_ایمپلیفائر_عمومی_مقداریں} میں آپ کے اندازے کی خاطر ایک عام دستیاب حسابی ایمپلیفائر\حاشیہد{عام دستیاب ایمپلیفائر کی قیمت بازار میں فروخت ہونے والی  تندور کی دو روٹیوں کے لگ بھگ ہے} کے  \اصطلاح{ریاضی نمونے}\فرہنگ{ریاضی نمونہ}\فرہنگ{نمونہ!ریاضی}\حاشیہب{model}\فرہنگ{model} کے اجزاء دئے گئے ہیں۔
 \begin{table}[ht]
-\caption{عام دستیاب حسابی ایمپلیفائر کی مقررہ مقداریں}
+\caption{عام دستیاب حسابی ایمپلیفائر کے ریاضی نمونے کی مقررہ مقداریں}
 \label{جدول_حسابی_ایمپلیفائر_عمومی_مقداریں}
 \centering
 \begin{tabular}{l l}
@@ -225,11 +225,11 @@ R_i &=\infty\\
 R_o &=0
 \end{aligned}
 \end{gather}
-ایسا کرتے وقت \عددی{\approx} اور\عددی{\to} کے علامات کی جگہ \عددی{=}کی علامت استعمال کی گئی ہے۔ان مساوات کے پہلے جزو میں خطی خطہ لکھ کر اس بات کی یاد دہانی کرائی جاتی ہے کہ داخلی سرے صرف اس صورت برابر برقی دباو پر رہتے ہیں جب تک ایمپلیفائر خطی خطے میں رہے۔اس بات کی وضاحت مثال \حوالہ{مثال_حسابی_خطی_غیر_خطی_خطے} میں ہو گی۔ان مساوات کو مد نظر رکھتے ہوئے ہم شکل \حوالہ{شکل_حسابی_ایمپلیفائر_کا_مساوی_دور}  کو دوبارہ بناتے ہیں۔ایسا کرنے سے شکل \حوالہ{شکل_کامل_حسابی_ایمپلیفائر_کا_مساوی_دور} حاصل ہوتا ہے جو کہ \اصطلاح{کامل} حسابی ایمپلیفائر\فرہنگ{کامل حسابی ایمپلیفائر}\حاشیہب{ideal} کا مساوی دور ہے۔
+ایسا کرتے وقت \عددی{\approx} اور\عددی{\to} کے علامات کی جگہ \عددی{=}کی علامت استعمال کی گئی ہے۔ان مساوات کے پہلے جزو میں خطی خطہ لکھ کر اس بات کی یاد دہانی کرائی جاتی ہے کہ داخلی سرے صرف اس صورت برابر برقی دباو پر رہتے ہیں جب تک ایمپلیفائر خطی خطے میں رہے۔اس بات کی وضاحت مثال \حوالہ{مثال_حسابی_خطی_غیر_خطی_خطے} میں ہو گی۔ان مساوات کو مد نظر رکھتے ہوئے ہم شکل \حوالہ{شکل_حسابی_ایمپلیفائر_کا_مساوی_دور}  کو دوبارہ بناتے ہیں۔ایسا کرنے سے شکل \حوالہ{شکل_کامل_حسابی_ایمپلیفائر_کا_مساوی_دور} حاصل ہوتا ہے جو کہ \اصطلاح{کامل} حسابی ایمپلیفائر\فرہنگ{کامل حسابی ایمپلیفائر}\حاشیہب{ideal} کا مساوی دور یا \اصطلاح{ریاضی نمونہ}\فرہنگ{ریاضی نمونہ}\فرہنگ{نمونہ!ریاضی}\حاشیہب{model}\فرہنگ{model}  ہے۔
 \begin{figure} \label{شکل_حسابی_کامل_ماڈل}
 \centering
 \includegraphics[scale=0.90]{idealOpampEquivalentCircuit}
-\caption{کامل حسابی ایمپلیفائر کا مساوی دور}
+\caption{کامل حسابی ایمپلیفائر کا مساوی دور یا ریاضی نمونہ}
 \label{شکل_کامل_حسابی_ایمپلیفائر_کا_مساوی_دور}
 \end{figure}
 	اس شکل سے واضح ہے کہ داخلی سروں پر برقی رو صفر ایمپیئر ہے، داخلی مزاحمت لامحدود جبکہ خارجی مزاحمت صفر اُوہم ہے۔
@@ -237,7 +237,7 @@ R_o &=0
 \ابتدا{مثال}
 \begin{itemize}
 \item
-جدول \حوالہ{جدول_حسابی_ایمپلیفائر_عمومی_مقداریں} میں دیے مقدار اور حسابی ایمپلیفائر کا غیر کامل مساوی دور استعمال کرتے ہوئے \عددی{v_s=\SI{1}{\volt}} پر  شکل \حوالہ{شکل_منفی_ایمپلیفائر} میں \عددی{v_o} کی قیمت حاصل کریں۔\عددی{R_1=\SI{1}{\kilo \ohm}} اور \عددی{R_1=\SI{10}{\kilo \ohm}} ہیں۔
+جدول \حوالہ{جدول_حسابی_ایمپلیفائر_عمومی_مقداریں} میں دیے مقدار اور حسابی ایمپلیفائر کا غیر کامل مساوی دور (ریاضی نمونہ) استعمال کرتے ہوئے \عددی{v_s=\SI{1}{\volt}} پر  شکل \حوالہ{شکل_منفی_ایمپلیفائر} میں \عددی{v_o} کی قیمت حاصل کریں۔\عددی{R_1=\SI{1}{\kilo \ohm}} اور \عددی{R_1=\SI{10}{\kilo \ohm}} ہیں۔
 \item
 حسابی ایمپلیفائر کا کامل مساوی دور اور جدول \حوالہ{جدول_حسابی_ایمپلیفائر_عمومی_مقداریں} میں دیے گئے \عددی{A_d} کی قیمت استعمال کرتے ہوئے  دوبارہ  \عددی{v_o} کی قیمت حاصل کریں۔
 \item
@@ -247,7 +247,7 @@ R_o &=0
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{opampModelUsageExample}
-\caption{حسابی ایمپلیفائر کے مساوی دور کا استعمال}
+\caption{حسابی ایمپلیفائر کے مساوی دور (ریاضی نمونے) کا استعمال}
 \label{شکل_حسابی_ماڈل_استعمال}
 \end{figure}
 %
@@ -310,7 +310,7 @@ v_o=\frac{-A_d v_s}{1+\frac{R_1}{R_2}\left(1+A_d \right)} \approx \frac{-A_d v_s
 
 اس مثال میں حسابی ایمپلیفائر کے ساتھ بیرونی جوڑے گئے مزاحمت \عددی{R_1} اور \عددی{R_2} کی قیمتیں حسابی ایمپلیفائر کے اندرونی مزاحمت \عددی{R_i} سے بہت کم اور اندرونی مزاحمت \عددی{R_o} سے بہت زیادہ تھیں۔مزید یہ کہ \عددی{A_d} کی قیمت کو لامحدود تصور کرتے ہوئے زیادہ آسانی سے جواب حاصل ہوتا ہے۔
 
-جب بھی حسابی ایمپلیفائر کے ساتھ بیرونی جڑے مزاحمت کی قیمت \عددی{R_i} سے بہت کم اور \عددی{R_o} سے بہت زیادہ ہو، ایسی صورت میں غیر کامل اور کامل مساوی ادوار دونوں کے استعمال سے یکساں جوابات حاصل ہوتے ہیں۔چونکہ کامل دور استعمال کرتے ہوئے جواب زیادہ آسانی سے حاصل ہوتا ہے لہٰذا ایسی صورت میں کامل مساوی دور ہی استعمال کیا جاتا ہے۔مزید یہ کہ \عددی{A_d \to \infty} تصور کرنے سے مسئلہ حل کرنا نہایت آسان ہو جاتا ہے۔ان تین حقائق کو یہاں بیان کرتے ہیں۔
+جب بھی حسابی ایمپلیفائر کے ساتھ بیرونی جڑے مزاحمت کی قیمت \عددی{R_i} سے بہت کم اور \عددی{R_o} سے بہت زیادہ ہو، ایسی صورت میں غیر کامل اور کامل مساوی ادوار دونوں کے استعمال سے یکساں جوابات حاصل ہوتے ہیں۔چونکہ کامل دور استعمال کرتے ہوئے جواب زیادہ آسانی سے حاصل ہوتا ہے لہٰذا ایسی صورت میں کامل مساوی دور (ریاضی نمونہ) ہی استعمال کیا جاتا ہے۔مزید یہ کہ \عددی{A_d \to \infty} تصور کرنے سے مسئلہ حل کرنا نہایت آسان ہو جاتا ہے۔ان تین حقائق کو یہاں بیان کرتے ہیں۔
 \begin{gather}
 \begin{aligned} \label{مساوات_حسابی_کامل_دور_یقینی}
 R_{\textup{بیرونی}}&<< R_i\\
@@ -321,7 +321,7 @@ A_d & \to \infty
 حسابی ایمپلیفائر کے استعمال میں بیرونی مزاحمتوں کی قیمتیں تعین کرتے وقت اس بات کو یقینی بنایا جاتا ہے کہ یہ مساوات \حوالہ{مساوات_حسابی_کامل_دور_یقینی} پر پورا اتریں۔آئیں اب ایسے ادوار دیکھیں جو مساوات \حوالہ{مساوات_حسابی_کامل_دور_یقینی} پر پورا اترتے ہوں۔
 
 \ابتدا{مثال}
-شکل \حوالہ{شکل_منفی_ایمپلیفائر} میں حسابی ایمپلیفائر کا کامل مساوی دور استعمال کرتے ہوئے داخلی مزاحمت کی مساوات حاصل کریں۔
+شکل \حوالہ{شکل_منفی_ایمپلیفائر} میں حسابی ایمپلیفائر کا کامل مساوی دور (ریاضی نمونہ) استعمال کرتے ہوئے داخلی مزاحمت کی مساوات حاصل کریں۔
 
 حل:
  شکل \حوالہ{شکل_حسابی_ماڈل_استعمال} ب  میں کامل دور استعمال کرتے ہوئے اسی کو دوبارہ دکھایا گیا ہے۔منفی داخلی سرے  پر کرچاف کے قانون برائے برقی رو استعمال کرتے ہوئے اس میں \عددی{v_o=A_d v_d} یعنی \عددی{v_o=-A_d v_1} ڈالتے ہیں۔
@@ -347,17 +347,16 @@ R_{\textup{داخلی}}=\frac{v_s}{i_s}=R_1+\frac{R_2}{1+A_d}
 حسابی ایمپلیفائر کو استعمال کرتے خارجی اشارہ کا کچھ حصہ لے کر اسے دوبارہ داخلی اشارہ کے طور استعمال کیا جاتا ہے۔ایسے ادوار کو \اصطلاح{واپسی ادوار}  کہتے ہیں اور ایسے واپس کردہ اشارے کو \اصطلاح{واپسی اشارہ}\حاشیہب{feedback signal}  کہتے ہیں۔اس بات کی وضاحت جلد ہو گی۔
 
 \جزوحصہ{منفی ایمپلیفائر}
-
-	شکل \حوالہ{شکل_منفی_ایمپلیفائر} میں دکھائے دور کو مثال بناتے ہوئے ہم حسابی ایمپلیفائر پر مبنی ادوار حل کرنا سیکھتے ہیں۔اس دور کو \اصطلاح{منفی ایمپلیفائر}\فرہنگ{منفی ایمپلیفائر}\فرہنگ{amplifier!inverting}\حاشیہب{inverting amplifier}  کہتے ہیں۔
+شکل \حوالہ{شکل_منفی_ایمپلیفائر} میں دکھائے دور کو مثال بناتے ہوئے ہم حسابی ایمپلیفائر پر مبنی ادوار حل کرنا سیکھتے ہیں۔ 
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{invertingAmplifier}
 \caption{منفی ایمپلیفائر}
 \label{شکل_منفی_ایمپلیفائر}
 \end{figure}
-	اس شکل میں حسابی ایمپلیفائر کے داخلی سروں پر برقی دباو کو \عددی{v_k}  اور \عددی{v_n} جبکہ خارجی سرے پر برقی دباو کو \عددی{v_o} کہا گیا ہے۔اس کتاب میں یہی علامتیں استعمال کی جائیں گی۔
+شکل میں حسابی ایمپلیفائر کے داخلی سروں پر برقی دباو کو \عددی{v_k}  اور \عددی{v_n} جبکہ خارجی سرے پر برقی دباو کو \عددی{v_o} کہا گیا ہے۔اس کتاب میں یہی علامتیں استعمال کی جائیں گی۔اس دور کو \اصطلاح{منفی ایمپلیفائر}\فرہنگ{منفی ایمپلیفائر}\فرہنگ{amplifier!inverting}\حاشیہب{inverting amplifier}  کہتے ہیں۔
 
-	ایسے  ادوار حل کرنے کی خاطر ہم حسابی ایمپلیفائر کے داخلی سروں پر \اصطلاح{کرچاف کے قوانین}\فرہنگ{کرچاف کے قوانین}\حاشیہب{Kirchoff's laws}  کا سہارا لیتے ہیں۔\اصطلاح{جوڑ}\فرہنگ{جوڑ}\حاشیہب{node}  \عددی{v_n} سے تین شاخیں نکلتی ہیں۔شکل میں ان شاخوں میں برقی رو کو \عددی{i_1} ، \عددی{i_2} اور \عددی{i_3} کہا گیا ہے۔\اصطلاح{کرچاف} کا قانون برائے برقی رو\حاشیہب{Kirchoff's current law}  کہتا ہے کہ کسی بھی جوڑ پر اندر کی جانب کل برقی رو اس جوڑ پر باہر کی جانب کل برقی رو کے برابر ہو گی۔چونکہ ہم نے جوڑ پر تمام برقی رو کو باہر کی جانب نکلتے تصور کیا ہے لہٰذا اس صورت میں ان کا مجموعہ صفر ہو گا یعنی
+ایسے  ادوار حل کرنے کی خاطر ہم حسابی ایمپلیفائر کے داخلی سروں پر \اصطلاح{کرچاف کے قوانین}\فرہنگ{کرچاف کے قوانین}\حاشیہب{Kirchoff's laws}  کا سہارا لیتے ہیں۔\اصطلاح{جوڑ}\فرہنگ{جوڑ}\حاشیہب{node}  \عددی{v_n} سے تین شاخیں نکلتی ہیں۔شکل میں ان شاخوں میں برقی رو کو \عددی{i_1} ، \عددی{i_2} اور \عددی{i_3} کہا گیا ہے۔کرچاف کا قانون برائے برقی رو\حاشیہب{Kirchoff's current law}  کہتا ہے کہ کسی بھی جوڑ پر اندر کی جانب کل برقی رو اس جوڑ پر باہر کی جانب کل برقی رو کے برابر ہو گی۔چونکہ ہم نے جوڑ پر تمام برقی رو کو باہر کی جانب نکلتے تصور کیا ہے لہٰذا اس صورت میں ان کا مجموعہ صفر ہو گا یعنی
 \begin{align} \label{مساوات_منفی_منفی_مداخل_کے_جوڑ_پر_رو}
 i_1+i_2+i_3 = 0
 \end{align}
@@ -729,7 +728,6 @@ v_{o2}=A_{v2} A_{v1} v_{s1}
 \begin{align}
 A_v=\frac{v_{o2}}{v_{s1}}=A_{v1} A_{v2}
 \end{align}
-
 یہ ایک اہم نتیجہ ہے جس کے مطابق ایمپلیفائر سلسلہ وار جوڑنے سے ان کی افزائش آپس میں ضرب ہوتی ہے۔زنجری ایمپلیفائر میں مزید کڑیاں اسی طرح سلسلہ وار جوڑی جا سکتی ہیں۔
 \begin{figure}
 \centering
@@ -850,7 +848,7 @@ A_v=1+\frac{0}{\infty} =1
 
 طبعی متغیرات\حاشیہب{variables} مثلاً  کمیت، حرارت وغیرہ  کی برقیاتی پیمائش سے پہلے انہیں عموماً  \اصطلاح{مبدل توانائی}\فرہنگ{مبدل توانائی}\فرہنگ{transducer}\حاشیہب{transducer}  کے مدد سے برقی اشارات میں تبدیل کیا جاتا ہے اور ان برقی اشارات کو پیمایشی آلہ\فرہنگ{پیمایشی آلہ}\حاشیہب{measuring instrument}  سے ناپا جاتا ہے۔
 
-	جیسا کہ آپ جانتے ہیں کہ کسی بھی دور کا تھونن  مساوی دور\فرہنگ{تھونن دور}\حاشیہب{Thevenin circuit} بنایا جا سکتا ہے جسے ایک عدد منبع برقی دباو اور ایک عدد مزاحمت کی شکل دی جاتی ہے۔مبدل توانائی کا تھونن دور شکل \حوالہ{شکل_وسطی_دور_حساس_اشارہ} الف میں بائیں جانب نقطہ دار لکیر میں گھیرا دکھایا گیا ہے جہاں \عددی{v_s} اس کی تھونن برقی دباو اور \عددی{R_S}  اس کی تھونن مزاحمت ہے۔پیمایشی آلہ داخلی سروں پر کسی قسم کا برقی اشارہ خارج نہیں کرتا بلکہ ان سروں پر یہ صرف اشارہ حاصل کرنے کی صلاحیت رکھتا ہے لہٰذا اس کے داخلی جانب کا تھونن دور صرف ایک عدد مزاحمت \عددی{R_M}  پر مبنی ہوتا ہے جیسے شکل-الف میں دائیں جانب دکھایا گیا ہے۔شکل-الف میں مبدل توانائی کے خارجی سروں کو پیمایشی آلہ کے داخلی سروں کے ساتھ جوڑا گیا ہے تا کہ مبدل توانائی کا اشارہ \عددی{v_s} ناپا جا سکے۔پیمایشی آلہ داخلی سروں  پر لاگو برقی دباو \عددی{v_m} ناپتا ہے۔
+	جیسا کہ آپ جانتے ہیں کہ کسی بھی دور کا \اصطلاح{تھونن  مساوی} دور\فرہنگ{تھونن دور}\حاشیہب{Thevenin circuit} بنایا جا سکتا ہے جسے ایک عدد منبع برقی دباو اور ایک عدد مزاحمت کی شکل دی جاتی ہے۔مبدل توانائی کا تھونن دور شکل \حوالہ{شکل_وسطی_دور_حساس_اشارہ} الف میں بائیں جانب نقطہ دار لکیر میں گھیرا دکھایا گیا ہے جہاں \عددی{v_s} اس کی تھونن برقی دباو اور \عددی{R_S}  اس کی تھونن مزاحمت ہے۔پیمایشی آلہ داخلی سروں پر کسی قسم کا برقی اشارہ خارج نہیں کرتا بلکہ ان سروں پر یہ صرف اشارہ حاصل کرنے کی صلاحیت رکھتا ہے لہٰذا اس کے داخلی جانب کا تھونن دور صرف ایک عدد مزاحمت \عددی{R_M}  پر مبنی ہوتا ہے جیسے شکل-الف میں دائیں جانب دکھایا گیا ہے۔شکل-الف میں مبدل توانائی کے خارجی سروں کو پیمایشی آلہ کے داخلی سروں کے ساتھ جوڑا گیا ہے تا کہ مبدل توانائی کا اشارہ \عددی{v_s} ناپا جا سکے۔پیمایشی آلہ داخلی سروں  پر لاگو برقی دباو \عددی{v_m} ناپتا ہے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{bufferingWeakSignal}
@@ -1280,7 +1278,8 @@ v_0&=\left( 1+\frac{R_0}{R_m}\right)\left(\frac{R_j }{R_{j1}}v_{j1}+\frac{R_j }{
 
 حسابی ایمپلیفائر پر تبصرہ کرتے ہوئے \اصطلاح{آلاتی ایمپلیفائر}\فرہنگ{آلاتی ایمپلیفائر}\فرہنگ{amplifier!instrumentation}\حاشیہب{instrumentation amplifier} کا ذکر کرنا لازم ہے۔\اصطلاح{آلاتی ایمپلیفائر} باریک اور حساس اشارات کے حصول کے لئے استعمال کیا جاتا ہے۔موجودہ دور میں ہر قسم کے طبعی متغیرات کو برقی اشارات میں تبدیل کر کے ان پر کمپیوٹر کی مدد سے غور کیا جاتا ہے۔آپ \اصطلاح{برقی قلب نگار}\فرہنگ{برقی!قلب نگار}\فرہنگ{ecg}\حاشیہب{ecg} سے بخوبی واقف ہوں گے جو دل کے کارکردگی کے اشارات کھینچتا ہے۔\اصطلاح{برقی قلب نگار} کو \اصطلاح{آلاتی ایمپلیفائر} کے مدد سے ہی بنایا جاتا ہے۔\حاشیہد{آج مورخہ 21 مارچ 2014 کو میری بیٹی عفت بریخنہ  نے انجنیئرنگ کے آخری سال کے پڑھائی کے دوران آلاتی ایمپلیفائر سے برقی قلب نگار بناتے ہوئے دل کی دھڑکن کے اشارات حاصل کئے۔}
 
-ان حساس اشارات کے حصول کے لئے زیادہ سے زیادہ \اصطلاح{داخلی برقی رکاوٹ}\فرہنگ{داخلی برقی رکاوٹ}\حاشیہب{input impedance}  والے ادوار استعمال کئے جاتے ہیں۔ایسے جگہوں پر عموماً \اصطلاح{آلاتی ایمپلیفائر} استعمال کیا جاتا ہے جس کا داخلی برقی رکاوٹ لامحدود تصور کیا جا سکتا ہے۔\اصطلاح{آلاتی ایمپلیفائر}  کو شکل \حوالہ{شکل_آلاتی_ایمپلیفائر} میں دکھایا گیا ہے۔
+ان حساس اشارات کے حصول کے لئے زیادہ سے زیادہ \اصطلاح{داخلی برقی رکاوٹ}\فرہنگ{داخلی برقی رکاوٹ}\حاشیہب{input impedance}  والے ادوار استعمال کئے جاتے ہیں۔ایسے جگہوں پر عموماً \اصطلاح{آلاتی ایمپلیفائر} استعمال کیا جاتا ہے جس کا داخلی برقی رکاوٹ لامحدود تصور کیا جا سکتا ہے۔آلاتی ایمپلیفائر  کو شکل \حوالہ{شکل_آلاتی_ایمپلیفائر} میں دکھایا گیا ہے۔
+
 \begin{figure} \label{شکل_حسابی_آلاتی_ایمپلیفائر}
 \centering
 \includegraphics[scale=0.90]{instrumentationAmplifier}
@@ -1375,8 +1374,8 @@ CMRR=\frac{A_d}{A_m}=\infty
 \end{align*}
 حاصل ہوتا ہے۔
 \انتہا{مثال}
-
-اس مثال میں آلاتی ایمپلیفائر نے مشترکہ اشارے کو مکمل رد کرتے ہوئے تفرق اشارے کو \عددی{201} گنا بڑھایا۔یہاں اس بات پر توجہ دیتے ہوئے ذھن نشین کریں کہ مزاحمتوں کے قیمتیں جس طرح بھی رکھی جائیں \عددی{v_{o2}} اور \عددی{v_{o1}} میں کسی صورت بھی مشترکہ اشارہ بڑھتا نہیں۔یہ جوں کا توں ان دو خارجی سروں  پر پایا جاتا ہے۔آلاتی ایمپلیفائر کا دوسرا حصہ یعنی \اصطلاح{منفی کار} \عددی{v_{o2}} سے \عددی{v_{o1}} منفی کرتے ہوئے مشترکہ اشارے کو مکمل طور رد کر دیتا ہے۔تفرق اشارے کو آلاتی ایمپلیفائر کے دونوں حصے بڑھانے کی صلاحیت رکھتے ہیں۔اگلے مثال میں ان حقائق پر مزید غور کیا جائے گا۔
+%======================
+اس مثال میں آلاتی ایمپلیفائر نے مشترکہ اشارے کو مکمل رد کرتے ہوئے تفرق اشارے کو \عددی{201} گنا بڑھایا۔ یہاں اس بات پر توجہ دیتے ہوئے ذھن نشین کریں کہ مزاحمتوں کے قیمتیں جس طرح بھی رکھی جائیں \عددی{v_{o2}} اور \عددی{v_{o1}} میں کسی صورت بھی مشترکہ اشارہ بڑھتا نہیں۔ یہ جوں کا توں ان دو خارجی سروں  پر پایا جاتا ہے۔ آلاتی ایمپلیفائر کا دوسرا حصہ یعنی \اصطلاح{منفی کار} \عددی{v_{o2}} سے \عددی{v_{o1}} منفی کرتے ہوئے مشترکہ اشارے کو مکمل طور رد کر دیتا ہے۔ تفرق اشارے کو آلاتی ایمپلیفائر کے دونوں حصے بڑھانے کی صلاحیت رکھتے ہیں۔اگلے مثال میں ان حقائق پر مزید غور کیا جائے گا۔
 
 آلاتی ایمپلیفائر میں دونوں مزاحمت جنہیں \عددی{R_2} لکھا گیا ہے کے قیمتیں برابر رکھی جاتی ہیں۔البتہ مزاحمت کے قیمتوں میں غلطی کی بنا پر ان کی قیمت
  \عددی{\left(1 - \epsilon \right) R_2} تا  \عددی{\left(1 + \epsilon \right) R_2} ممکن ہوتی ہیں۔مزاحمت کے قیمت میں \عددی{\SI{\mp 1}{\percent}} غلطی کی صورت میں \عددی{\epsilon =0.01} کے برابر ہو گا ۔شکل \حوالہ{شکل_آلاتی_ایمپلیفائر_مثال} میں آلاتی ایمپلیفائر کو دوبارہ دکھاتے ہوئے ان حقائق کو واضح کیا گیا ہے جہاں ایک مزاحمت کو \عددی{R_2} جبکہ دوسرے کو \عددی{R_2'} لکھا گیا ہے۔اسی طرح\عددی{R_3} اور \عددی{R_4} کو بھی دکھایا گیا ہے۔
@@ -1918,11 +1917,8 @@ A=\num{60000} \hspace{5mm} R_i=\SI{100}{\mega \ohm} \hspace{5mm} R_o=\SI{200}{\o
 \end{figure}
 
 جوابات:
-\begin{itemize}
-\item
-داخلی مزاحمت: \عددیء{\SI{10}{\kilo \ohm}}، \عددیء{\SI{10}{\kilo \ohm}}، \عددیء{\SI{10}{\kilo \ohm}}، \عددیء{\SI{10}{\kilo \ohm}}، \عددیء{\SI{0}{ \ohm}} اور \عددی{\SI{10}{\kilo \ohm}} 
+داخلی مزاحمت: \عددیء{\SI{10}{\kilo \ohm}}، \عددیء{\SI{10}{\kilo \ohm}}، \عددیء{\SI{10}{\kilo \ohm}}، \عددیء{\SI{10}{\kilo \ohm}}، \عددیء{\SI{0}{ \ohm}} اور \عددی{\SI{10}{\kilo \ohm}} ؛\\
 خارجی اشارہ: \عددیء{\SI{-10}{\volt}}، \عددیء{\SI{-10}{\volt}}، \عددیء{\SI{-10}{\volt}}، \عددیء{\SI{-10}{\volt}}، \عددیء{\SI{-12}{\volt}} اور \عددیء{\SI{0}{\volt}}
-\end{itemize}
 \انتہا{سوال}
 %==================================
 \ابتدا{سوال} \شناخت{سوال_سادہ_منفی_ایمپلیفائر}
@@ -1959,6 +1955,7 @@ A=\num{60000} \hspace{5mm} R_i=\SI{100}{\mega \ohm} \hspace{5mm} R_o=\SI{200}{\o
 \item
 ایک حسابی ایمپلیفائر جس کی میلان برقی رو \عددی{\SI{100}{\nano \ampere}} کے لگ بھگ ہے کی مکمل درست میلان برقی رو حاصل کرنے کی خاطر شکل کو استعمال کیا جاتا ہے۔قابل ناپ خارجی اشارہ حاصل کرنے کی خاطر مزاحمت کی وہ قیمت تجویز کریں جس پر \عددی{v_o=\SI{1.5}{\volt}} کے لگ بھگ حاصل ہو۔
 \end{itemize}
+
 جوابات: \عددیء{\SI{200}{\nano \ampere}}،\عددی{\SI{201.66}{\nano \ampere}}، داخلی سروں سے باہر جانب، \عددی{\SI{15}{\mega \ohm}}
 \انتہا{سوال}
 %===============================
@@ -1988,6 +1985,7 @@ A=\num{60000} \hspace{5mm} R_i=\SI{100}{\mega \ohm} \hspace{5mm} R_o=\SI{200}{\o
 \item 
 توقع کی جاتی ہے کہ بقایا \عددی{v_o=\SI{0.19}{\volt}} \اصطلاح{داخلی انحرافی برقی دباو} کی وجہ سے ہے۔استعمال کئے گئے حسابی ایمپلیفائر کی داخلی انحرافی برقی دباو \عددی{V_{OS}} حاصل کریں۔
 \end{itemize}
+
 جوابات: \عددیء{\SI{0.2}{\volt}}،  \عددیء{\SI{990}{\ohm}}، \عددیء{I_B=\SI{100}{\nano \ampere}} \عددی{\abs{V_{OS}}=\SI{1.88}{\milli \volt}}
 \انتہا{سوال}
 %==============================
@@ -2003,8 +2001,8 @@ A=\num{60000} \hspace{5mm} R_i=\SI{100}{\mega \ohm} \hspace{5mm} R_o=\SI{200}{\o
 \caption{ویٹ سٹون چکور}
 \label{شکل__سوال_ویٹ_سٹون_چکور}
 \end{figure}
-جواب:
-ویٹ سٹون چکور کا
+
+جواب:ویٹ سٹون چکور کا
 \begin{align*}
 V_2-V_1=\frac{\Delta R}{4 \left(R+\frac{\Delta R}{2} \right)}  V_r
 \end{align*}
@@ -2116,6 +2114,7 @@ v_{s1}=1.2 V_t \cos \omega_t t
 \caption{بلند برقی دباو کے اشارے کا حصول}
 \label{شکل_سوال_بلند_برقی_دباو_اشارہ}
 \end{figure}
+
 جوابات:\عددی{R_1=6R=500 R_2} اور \عددی{R=\SI{8.33}{\mega\ohm}}
 \انتہا{سوال}
 %=================
