--- a/tex/electronicsOscillators.tex
+++ b/tex/electronicsOscillators.tex
@@ -93,7 +93,7 @@ R=\SI{276}{\ohm}
 \حصہ{مزاحمت-کپیسٹر \عددیء{RC} مرتعش}
 شکل \حوالہ{شکل_مزاحمت_کپیسٹر_مرتعش} الف میں ٹرانزسٹر ایمپلیفائر پر مبنی مرتعش دکھایا گیا ہے جس میں کلکٹر پر پائے جانے والے اشارے \عددیء{X_0} سے واپس کار  \عددیء{X_f} پیدا کرتا ہے۔ٹرانزسٹر اپنے  بیس پر پائے جانے والے اشارے کے حیطے کو بڑھا کر جبکہ اس کے زاویہ میں \عددیء{\SI{180}{\degree}}  کے تبدیلی کے ساتھ اسے کلکٹر پر خارج کرتا ہے۔یوں بنیادی ایمپلیفائر اور واپس کار کے دائرے میں ایک چکر کے بعد کل زاویہ میں تبدیلی کو \عددیء{\SI{0}{\degree}} رکھنے کی خاطر واپس کار کو بھی \عددیء{\SI{180}{\degree}} کی تبدیلی پیدا کرنا ہو گی۔جیسا اوپر مثال میں دکھایا گیا، مزاحمت-کپیسٹر \عددیء{RC} کے کڑیاں استعمال کرتے ہوئے ایسا کرنا ممکن ہے۔شکل \حوالہ{شکل_مزاحمت_کپیسٹر_مرتعش} الف میں مزاحمت اور کپیسٹر کو  شکل \حوالہ{شکل_مزاحمت_کپیسٹر_زاویہ_میں_تبدیلی} الف سے قدر مختلف طرز پر جوڑا گیا ہے۔ 
 
-بنیادی ایمپلیفائر \عددیء{Q}، \عددیء{R_1}، \عددیء{R_2}، \عددیء{R_c}، \عددیء{R_e} اور \عددیء{C_e} پر مشتمل ہے۔ مرتعش کے خارجی تعدد پر کپیسٹر \عددیء{C_e} بطور قصر دور کام کرتا ہے۔بنیادی ایمپلیفائر میں واپس کار شامل کرنے سے مرتعش حاصل ہوتا ہے۔واپس کار تین عدد کپیسٹر اور تین عدد مزاحمت سے حاصل کیا گیا ہے۔شکل  ب میں ٹرانزسٹر کا پائے \عددیء{\pi} ماڈل استعمال کرتے ہوئے اس مرتعش کا مساوی دور دکھایا گیا ہے جس میں \عددیء{R_e} کو قصر دو کیا گیا ہے۔جیسے آپ دیکھ سکتے ہیں \عددیء{r_{be}}، \عددیء{R_1} اور \عددیء{R_2} متوازی جڑے ہیں۔ ان متوازی جڑے مزاحمت کی کل قیمت کو \عددیء{R_m} لکھا گیا ہے۔یوں \عددیء{R_m} اور \عددیء{R'} سلسلہ وار جڑے ہیں- حقیقت میں \عددیء{r_{be}} کی قیمت \عددیء{R_1} اور \عددیء{R_2} کے قیمتوں سے نہایت کم ہوتی ہے اور یوں \عددیء{R_m} کی قیمت تقریباً \عددیء{r_{be}} کے ہی برابر ہوتی ہے یعنی \عددیء{R_m \approx r_{be}} ہوتا ہے۔اگر \عددیء{R'} کی قیمت یوں منتخب کی جائے کہ \عددیء{R'+R_m=R} ہو تب ہم دیکھتے ہیں کہ واپسی دور تین یکساں  \عددیء{RC} حصوں پر مشتمل ہوتا ہے۔اگرچہ واپسی دور کے تین کپیسٹروں کی قیمت آپس میں برابر یا تین مزاحمتوں کی قیمت آپس میں برابر رکھنا لازم نہیں، البتہ ایسا رکھنے سے مرتعش پر ترسیلی غور نسبتاً آسان ہو جاتا ہے۔ہم ایسا ہی کرتے ہیں۔
+بنیادی ایمپلیفائر \عددیء{Q}، \عددیء{R_1}، \عددیء{R_2}، \عددیء{R_c}، \عددیء{R_e} اور \عددیء{C_e} پر مشتمل ہے۔ مرتعش کے خارجی تعدد پر کپیسٹر \عددیء{C_e} بطور قصر دور کام کرتا ہے۔بنیادی ایمپلیفائر میں واپس کار شامل کرنے سے مرتعش حاصل ہوتا ہے۔واپس کار تین عدد کپیسٹر اور تین عدد مزاحمت سے حاصل کیا گیا ہے۔شکل  ب میں ٹرانزسٹر کا پائے \عددیء{\pi} ریاضی نمونہ استعمال کرتے ہوئے اس مرتعش کا مساوی دور دکھایا گیا ہے جس میں \عددیء{R_e} کو قصر دو کیا گیا ہے۔جیسے آپ دیکھ سکتے ہیں \عددیء{r_{be}}، \عددیء{R_1} اور \عددیء{R_2} متوازی جڑے ہیں۔ ان متوازی جڑے مزاحمت کی کل قیمت کو \عددیء{R_m} لکھا گیا ہے۔یوں \عددیء{R_m} اور \عددیء{R'} سلسلہ وار جڑے ہیں- حقیقت میں \عددیء{r_{be}} کی قیمت \عددیء{R_1} اور \عددیء{R_2} کے قیمتوں سے نہایت کم ہوتی ہے اور یوں \عددیء{R_m} کی قیمت تقریباً \عددیء{r_{be}} کے ہی برابر ہوتی ہے یعنی \عددیء{R_m \approx r_{be}} ہوتا ہے۔اگر \عددیء{R'} کی قیمت یوں منتخب کی جائے کہ \عددیء{R'+R_m=R} ہو تب ہم دیکھتے ہیں کہ واپسی دور تین یکساں  \عددیء{RC} حصوں پر مشتمل ہوتا ہے۔اگرچہ واپسی دور کے تین کپیسٹروں کی قیمت آپس میں برابر یا تین مزاحمتوں کی قیمت آپس میں برابر رکھنا لازم نہیں، البتہ ایسا رکھنے سے مرتعش پر ترسیلی غور نسبتاً آسان ہو جاتا ہے۔ہم ایسا ہی کرتے ہیں۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{phaseShiftOscillator}
@@ -385,7 +385,7 @@ g_m&=\frac{\mu C r}{\mu M-L}
 جس لمحہ مرتعش کو برقی طاقت \عددیء{V_{DD}} مہیا کیا جائے اس لمحہ \عددیء{C_g} پر صفر برقی دباو پایا جاتا ہے۔یوں  \عددیء{nJFET} زیادہ \عددیء{i_{DS}} گزرنے دیتا ہے جس سے اس کی \عددیء{g_m} کی قیمت بھی زیادہ ہوتی ہے۔زیادہ \عددیء{g_m} کی وجہ سے دور کا ارتعاش پذیر ہونا ممکن ہوتا ہے۔تصور  کریں کہ ایسا ہی ہوتا ہے۔\عددیء{g_m} کی زیادہ قیمت کی وجہ سے ارتعاشی لہر کا حیطہ بڑھتا جاتا ہے جس سے \عددیء{C_g} پر برقی دباو \عددیء{V_p} بھی بڑھتا جاتا ہے جو کہ گیٹ کو زیادہ سے زیادہ منفی کرتے ہوئے \عددیء{i_{DS}} کی قیمت کو کم کرتا ہے۔کم \عددیء{i_{DS}} کی وجہ سے \عددیء{g_m} کی قیمت بھی کم ہوتی ہے۔آخر کار دور ایسی توازن اختیار  کر لیتا ہے جہاں ارتعاشی لہر کا حیطہ برقرار رہتا ہے۔ 
 
 \حصہ{ٹرانزسٹر ہمسُر مرتعش}
-حصہ \حوالہ{حصہ_فیٹ_ہمسر_مرتعش} میں \عددیء{nJFET} کا کم تعددی ماڈل استعمال کرتے  ہوئے مرتعش کو حل کرنا دکھایا گیا جس میں ٹرانسفارمر کو بطورِ مشترکہ امالہ تصور کیا گیا۔اس حصے میں دو جوڑ ٹرانزسٹر کا بلند تعددی ماڈل اور ٹرانسفارمر کے مساوات استعمال کرتے ہوئے \اصطلاح{ہمسر مرتعش}\فرہنگ{ہمسر مرتعش}\حاشیہب{tuned oscillator}\فرہنگ{tuned oscillator} کا حل دکھایا جائے گا۔ظاہر ہے  کہ فیٹ پر مبنی مرتعش کو بھی اسی طرح حل کیا جا سکتا ہے۔بلند تعدد پر ٹرانزسٹر (یا فیٹ) کے بلند تعدد ماڈل ہی سے درست جوابات حاصل ہوتے ہیں لہٰذا بلند تعدد پر چلنے والے مرتعش کو حل کرتے ہوئے ٹرانزسٹر (یا فیٹ) کا بلند تعدد ماڈل استعمال کرنا ضروری ہے۔
+حصہ \حوالہ{حصہ_فیٹ_ہمسر_مرتعش} میں \عددیء{nJFET} کا کم تعددی ریاضی نمونہ استعمال کرتے  ہوئے مرتعش کو حل کرنا دکھایا گیا جس میں ٹرانسفارمر کو بطورِ مشترکہ امالہ تصور کیا گیا۔اس حصے میں دو جوڑ ٹرانزسٹر کا بلند تعددی ریاضی نمونہ اور ٹرانسفارمر کے مساوات استعمال کرتے ہوئے \اصطلاح{ہمسر مرتعش}\فرہنگ{ہمسر مرتعش}\حاشیہب{tuned oscillator}\فرہنگ{tuned oscillator} کا حل دکھایا جائے گا۔ظاہر ہے  کہ فیٹ پر مبنی مرتعش کو بھی اسی طرح حل کیا جا سکتا ہے۔بلند تعدد پر ٹرانزسٹر (یا فیٹ) کے بلند تعدد ریاضی نمونہ ہی سے درست جوابات حاصل ہوتے ہیں لہٰذا بلند تعدد پر چلنے والے مرتعش کو حل کرتے ہوئے ٹرانزسٹر (یا فیٹ) کا بلند تعدد ریاضی نمونہ استعمال کرنا ضروری ہے۔
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{transistorTunedOscillator}
@@ -400,7 +400,7 @@ g_m&=\frac{\mu C r}{\mu M-L}
 \label{شکل_ٹرانزسٹر_ہمسر_مرتعش_مساوی}
 \end{figure}
 %
-شکل \حوالہ{شکل_ٹرانزسٹر_ہمسر_مرتعش} الف میں \اصطلاح{ٹرانزسٹر ہمسُر مرتعش} دکھایا گیا ہے۔ٹرانزسٹر کا بلند تعددی ماڈل استعمال کرتے ہوئے شکل  ب میں اسی کا مساوی دور دکھایا گیا ہے جس میں \عددیء{C_B} اور \عددیء{C_E} کو لامحدود تصور کیا گیا ہے۔\اصطلاح{مسئلہ ملر}\فرہنگ{مسئلہ ملر}\فرہنگ{Miller theorem}\حاشیہب{Miller theorem} کی مدد سے \عددیء{C_{bc}} کا مساوی ملر کپیسٹر \عددیء{C_M}استعمال کرتے ہیں۔یوں \عددیء{C_{be}} اور \عددیء{C_M} متوازی جڑ جاتے ہیں۔شکل \حوالہ{شکل_ٹرانزسٹر_ہمسر_مرتعش_مساوی} الف میں ایسا دکھایا گیا ہے جہاں شکل کو قدر بہتر طرز پر بنایا گیا ہے۔ٹرانسفارمر کے \عددیء{n_1} جانب برقی رکاوٹ کا \عددیء{n_2} جانب عکس لیتے ہیں۔ایسا کرتے وقت برقی رکاوٹ کو \عددیء{\left(\frac{n_2}{n_1} \right)^2} سے ضرب دیا جاتا ہے۔یوں متوازی جڑے مزاحمت \عددیء{r_{be}} اور \عددیء{R_B} کو \عددیء{R_p} لکھتے ہوئے ٹرانسفارمر کی دوسری جانب منتقل کرتے \عددیء{R_p'} حاصل ہوتا ہے جہاں
+شکل \حوالہ{شکل_ٹرانزسٹر_ہمسر_مرتعش} الف میں \اصطلاح{ٹرانزسٹر ہمسُر مرتعش} دکھایا گیا ہے۔ٹرانزسٹر کا بلند تعددی ریاضی نمونہ استعمال کرتے ہوئے شکل  ب میں اسی کا مساوی دور دکھایا گیا ہے جس میں \عددیء{C_B} اور \عددیء{C_E} کو لامحدود تصور کیا گیا ہے۔\اصطلاح{مسئلہ ملر}\فرہنگ{مسئلہ ملر}\فرہنگ{Miller theorem}\حاشیہب{Miller theorem} کی مدد سے \عددیء{C_{bc}} کا مساوی ملر کپیسٹر \عددیء{C_M}استعمال کرتے ہیں۔یوں \عددیء{C_{be}} اور \عددیء{C_M} متوازی جڑ جاتے ہیں۔شکل \حوالہ{شکل_ٹرانزسٹر_ہمسر_مرتعش_مساوی} الف میں ایسا دکھایا گیا ہے جہاں شکل کو قدر بہتر طرز پر بنایا گیا ہے۔ٹرانسفارمر کے \عددیء{n_1} جانب برقی رکاوٹ کا \عددیء{n_2} جانب عکس لیتے ہیں۔ایسا کرتے وقت برقی رکاوٹ کو \عددیء{\left(\frac{n_2}{n_1} \right)^2} سے ضرب دیا جاتا ہے۔یوں متوازی جڑے مزاحمت \عددیء{r_{be}} اور \عددیء{R_B} کو \عددیء{R_p} لکھتے ہوئے ٹرانسفارمر کی دوسری جانب منتقل کرتے \عددیء{R_p'} حاصل ہوتا ہے جہاں
 \begin{align*}
 R_p'=\left(\frac{n_2}{n_1} \right)^2 R_p
 \end{align*}
@@ -561,7 +561,7 @@ C=\frac{C_1 C_2}{C_1 + C_2}
 \حصہ{ہارٹلے اور کالپٹس مرتعش}
 شکل \حوالہ{شکل_مرتعش_ہارٹلے_کالپٹس} میں ٹرانزسٹر ایمپلیفائر استعمال کرتے ہوئے ہارٹلے اور کالپٹس مرتعش بنائے گئے ہیں۔شکل  الف میں واپس کار یعنی \عددیء{L_1}، \عددیء{L_2} اور \عددیء{C} کی شمولیت سے بنیادی ایمپلیفائر مرتعش میں تبدیل ہو جاتا ہے۔شکل \حوالہ{شکل_عمومی_مرتعش} کے ساتھ موازنہ کرنے سے آپ دیکھ سکتے ہیں کہ \عددیء{L_1} دراصل \عددیء{X_1} ہے، \عددیء{L_2} دراصل \عددیء{X_2} ہے جبکہ \عددیء{C} دراصل \عددیء{X_3} ہے۔\عددیء{C_b} اور \عددیء{C_c} اس بات کو یقینی بناتے ہیں کہ  واپس کار کی شمولیت سے بنیادی ایمپلیفائر کے نقطہ مائل پر کوئی اثر نہیں ہو گا۔شکل  ب میں \عددیء{C_c} کی ضرورت نہیں چونکہ \عددیء{C_1}، \عددیء{C_2} اور \عددیء{C_b} کی موجودگی میں اس راستے یک سمتی رو کا گزر ممکن نہیں۔\عددیء{C_e} قصری کپیسٹر\حاشیہب{bypass capacitor} ہے جبکہ \عددیء{C_c} اور \عددیء{C_b} جفتی کپیسٹر\حاشیہب{coupling capacitors} ہیں۔چالو تعدد پر \عددیء{C_e}، \عددیء{C_b} اور \عددیء{C_c} کو لامحدود تصور کیا جاتا ہے۔
 
-بلند تعدد پر ان اشکال کو حل کرتے ہوئے ٹرانزسٹر کے بلند تعددی ماڈل استعمال ہو گا۔ایسا کرتے وقت ماڈل کے مختلف جزو کو بھی واپس کار کا حصہ تصور کیا جا سکتا ہے۔مثلاً نہایت بلند تعدد کالپٹس مرتعش تخلیق دیتے وقت ٹرانزسٹر کے بلند تعدد ماڈل کے جزو \عددیء{C_{be}} اور \عددیء{C_{bc}} کا مساوی ملر کپیسٹر \عددیء{C_M}\حاشیہب{Miller capacitance} کے مجموعے کو بطور \عددیء{C_1} استعمال کیا جاتا ہے (یعنی \عددیء{C_1=C_{be}+C_M})۔
+بلند تعدد پر ان اشکال کو حل کرتے ہوئے ٹرانزسٹر کے بلند تعددی ریاضی نمونہ استعمال ہو گا۔ایسا کرتے وقت ریاضی نمونے کے مختلف جزو کو بھی واپس کار کا حصہ تصور کیا جا سکتا ہے۔مثلاً نہایت بلند تعدد کالپٹس مرتعش تخلیق دیتے وقت ٹرانزسٹر کے بلند تعدد ریاضی نمونے کے جزو \عددیء{C_{be}} اور \عددیء{C_{bc}} کا مساوی ملر کپیسٹر \عددیء{C_M}\حاشیہب{Miller capacitance} کے مجموعے کو بطور \عددیء{C_1} استعمال کیا جاتا ہے (یعنی \عددیء{C_1=C_{be}+C_M})۔
 %
 \begin{figure}
 \centering
@@ -574,7 +574,7 @@ C=\frac{C_1 C_2}{C_1 + C_2}
 
 %=====================
 \ابتدا{مثال}
-ٹرانزسٹر کا پست تعددی ماڈل استعمال کرتے ہوئے شکل \حوالہ{شکل_مرتعش_ہارٹلے_کالپٹس} الف کو حل کریں۔حل کرتے وقت بنیادی ایمپلیفائر کے داخلی مزاحمت کو لامحدود تصور کرتے ہوئے نظر انداز کریں۔
+ٹرانزسٹر کا پست تعددی ریاضی نمونہ استعمال کرتے ہوئے شکل \حوالہ{شکل_مرتعش_ہارٹلے_کالپٹس} الف کو حل کریں۔حل کرتے وقت بنیادی ایمپلیفائر کے داخلی مزاحمت کو لامحدود تصور کرتے ہوئے نظر انداز کریں۔
 
 حل:شکل \حوالہ{شکل_مرتعش_ہارٹلے_مساوی_پست_تعدد_داخلی_مزاحمت_لامحدود} الف میں اس کا باریک اشاراتی مساوی دور دکھایا گیا ہے جس میں \عددیء{R_1 \mathbin{\|} R_2} کو \عددیء{R_b} لکھا گیا ہے۔بنیادی ایمپلیفائر کا داخلی مزاحمت \عددیء{R_b \mathbin{\|} r_{be}}  کے برابر ہے جو \عددیء{j \omega L_1} کے متوازی جڑا ہے۔\عددیء{\abs{j \omega L_1} \gg R_b \mathbin{\|} r_{be}} تصور کرتے ہوئے  شکل  ب حاصل ہوتا ہے۔
 \begin{figure}
@@ -630,7 +630,7 @@ g_m R_c=\abs{A_v}=\frac{L_2}{L_1}
 \ابتدا{مثال}
 شکل \حوالہ{شکل_مرتعش_کالپٹس} الف میں ٹرانزسٹر پر مبنی کالپٹس مرتعش دکھایا گیا ہے جس میں ٹرانزسٹر کے کلکٹر پر امالہ \عددیء{L_{\infty}} نسب کیا گیا ہے۔اس امالہ کی قیمت مرتعش کے تعدد پر لامحدود تصور کی جاتی ہے۔مرتعش کو حل کریں۔
 
-حل:شکل  ب میں ٹرانزسٹر کا بلند تعدد ماڈل استعمال کرتے ہوئے مرتعش کا مساوی دور دکھایا گیا ہے جہاں مسئلہ ملر کی مدد سے \عددیء{C_{bc}} کا مساوی \عددیء{C_M} دکھایا گیا ہے۔متوازی جڑے مزاحمت \عددیء{R_1}، \عددیء{R_2} اور \عددیء{r_{be}} کو \عددیء{R_m} جبکہ متوازی جڑے کپیسٹر \عددیء{C_{be}}، \عددیء{C_{M}} اور \عددیء{C_1} کو \عددیء{C_1'} لکھتے ہوئے شکل  پ حاصل کی گئی ہے۔حقیقت میں \عددیء{r_{be}} کی قیمت\عددیء{R_1} اور \عددیء{R_2} سے بہت کم ہوتی ہے اور \عددیء{R_m \approx r_{be}} لیا جا سکتا ہے۔  
+حل:شکل  ب میں ٹرانزسٹر کا بلند تعدد ریاضی نمونہ استعمال کرتے ہوئے مرتعش کا مساوی دور دکھایا گیا ہے جہاں مسئلہ ملر کی مدد سے \عددیء{C_{bc}} کا مساوی \عددیء{C_M} دکھایا گیا ہے۔متوازی جڑے مزاحمت \عددیء{R_1}، \عددیء{R_2} اور \عددیء{r_{be}} کو \عددیء{R_m} جبکہ متوازی جڑے کپیسٹر \عددیء{C_{be}}، \عددیء{C_{M}} اور \عددیء{C_1} کو \عددیء{C_1'} لکھتے ہوئے شکل  پ حاصل کی گئی ہے۔حقیقت میں \عددیء{r_{be}} کی قیمت\عددیء{R_1} اور \عددیء{R_2} سے بہت کم ہوتی ہے اور \عددیء{R_m \approx r_{be}} لیا جا سکتا ہے۔  
 \begin{figure}
 \centering
 \includegraphics[scale=0.90]{colpittsRadioFreqOscillator}
@@ -810,7 +810,7 @@ R_1&=\SI{6.25}{\kilo \ohm}, \hspace{5mm} R_2=\SI{25}{\kilo \ohm}, \hspace{5mm} \
 \انتہا{سوال}
 %================
 \ابتدا{سوال}\شناخت{سوال_مرتعش_پست_کالپٹس}
-شکل \حوالہ{شکل_مرتعش_ہارٹلے_کالپٹس} ب میں \عددیء{R_c} کی جگہ لامحدود \عددیء{L} نسب کیا جاتا ہے۔\عددیء{R_B} کو نظر انداز کرتے اور ٹرانزسٹر کا پست تعددی مساوی پائے ماڈل استعمال کرتے ہوئے اسے حل کریں۔
+شکل \حوالہ{شکل_مرتعش_ہارٹلے_کالپٹس} ب میں \عددیء{R_c} کی جگہ لامحدود \عددیء{L} نسب کیا جاتا ہے۔\عددیء{R_B} کو نظر انداز کرتے اور ٹرانزسٹر کا پست تعددی مساوی پائے ریاضی نمونہ استعمال کرتے ہوئے اسے حل کریں۔
 
 جوابات:\عددیء{\omega_o=\tfrac{1}{\sqrt{LC}}} جہاں \عددیء{C=\tfrac{C_1 C_2}{C_1+C_2}} کے برابر ہے جبکہ \عددیء{\beta =\tfrac{C_2}{C_1}} حاصل ہوتا ہے۔
 \انتہا{سوال}
@@ -822,7 +822,7 @@ R_1&=\SI{6.25}{\kilo \ohm}, \hspace{5mm} R_2=\SI{25}{\kilo \ohm}, \hspace{5mm} \
 \انتہا{سوال}
 %==============
 \ابتدا{سوال}\شناخت{سوال_ہارٹلے_مرتعش_پست_تعدد}
-شکل \حوالہ{شکل_مرتعش_ہارٹلے_کالپٹس} کے کالپٹس مرتعش میں ٹرانزسٹر کا پست تعددی ماڈل استعمال کرتے ہوئے حل کریں۔ایسا کرتے ہوئے بنیادی ایمپلیفائر کی داخلی مزاحمت  لامحدود تصور کریں۔
+شکل \حوالہ{شکل_مرتعش_ہارٹلے_کالپٹس} کے کالپٹس مرتعش میں ٹرانزسٹر کا پست تعددی ریاضی نمونہ استعمال کرتے ہوئے حل کریں۔ایسا کرتے ہوئے بنیادی ایمپلیفائر کی داخلی مزاحمت  لامحدود تصور کریں۔
 
 جوابات:\عددی{\omega_o=\tfrac{1}{\sqrt{LC}}} جہاں \عددیء{C=\tfrac{C_1 C_2}{C_1+C_2}} کے برابر ہے ، \عددیء{g_m R_c=\tfrac{C_1}{C_2}}۔ ان مساوات کا مساوات \حوالہ{مساوات_مرتعش_عمومی_افزائش} اور مساوات \حوالہ{مساوات_مرتعش_کالپٹس_قدرتی_تعدد} کے ساتھ موازنہ کریں۔
 \انتہا{سوال}
