--- a/tex/electronicsPreface.tex
+++ b/tex/electronicsPreface.tex
@@ -2,6 +2,8 @@
 \باب{دیباچہ}
 برقی آلات اور عددی ادوار کے بعد مماثل برقیات میری تیسری کتاب ہے۔یہ کتاب بھی اس امید کے ساتھ لکھی گئی ہے کہ یہ ایک دن برقی انجنیئرنگ کی نصابی کتاب کے طور پر پڑھائی جائے گی۔امید کی جاتی ہے کہ اب بھی طلبہ و طالبات اس سے استفادہ حاصل کر سکیں گے۔
 
+اس کتاب میں تقریباً \عددی{503} اشکال اور \عددی{174} حل شدہ مثال دئے گئے ہیں۔اس کے علاوہ  مشق کے لئے  \عددی{175} سوالات  بمع جوابات بھی دیے گئے ہیں۔
+
 یہ کتاب \تحریر{Ubuntu} استعمال  کرتے ہوئے \تحریر{XeLatex} میں تشکیل دی گئی۔پرزہ جات کے خط \تحریر{Octave} جبکہ ادوار کو \تحریر{gEDA} کی مدد سے بنایا گیا ہے۔ کئی ادوار پر \تحریر{GnuCap} کی مدد سے غور کیا گیا۔میں ان سافٹ ویر لکھنے والوں کا دل سے شکر گزار ہوں۔میں طلبہ و طالبات سے گزارش  کرتا ہوں کہ وہ آگے بڑھیں اور اس قسم کے سافٹ ویر لکھیں یا ان کا ترجمہ علاقائی زبانوں میں کریں۔
 
 میں یہاں ان تمام خواتین و حضرات کا شکریہ ادا کرنا چاہتا ہوں جنہوں نے اس کتاب کے مکمل ہونے میں میری مدد کی۔ 
