--- a/tex/khalidUrduBooksElectronics.sty
+++ b/tex/khalidUrduBooksElectronics.sty
@@ -42,9 +42,13 @@
 
 
 \newfontfamily\arabicfont[Scale=1.0,Script=Arabic]{Scheherazade}
-\newfontfamily\urdufont[Scale=1.0,Script=Arabic]{XB Tabriz}
+\newfontfamily\urduTechTermsfont[Scale=1.0,Script=Arabic]{XB Tabriz Bold}
+\newfontfamily\urdufont[Scale=1.25,WordSpace=60.0,Script=Arabic]{Jameel Noori Nastaleeq}
+\setlength{\parskip}{5mm plus 4mm minus 3mm}
 
-\newfontfamily\AcaciasHand{AcaciasHand}
+%\newfontfamily\urdufont[Scale=1.0,Script=Arabic]{XB Tabriz}
+
+%\newfontfamily\AcaciasHand{AcaciasHand}
 
 \setcounter{secnumdepth}{3} 
 
