--- a/tex/myUrduCommandsElectronics.tex
+++ b/tex/myUrduCommandsElectronics.tex
@@ -16,7 +16,8 @@
 \newcommand*{\تحریر}[1]{\textenglish{#1}}	% english text in urduMode
 \newcommand*{\موٹا}[1]{\textbf{#1}}
 \newcommand*{\ترچھا}[1]{{\textit{#1}}}
-\newcommand*{\اصطلاح}[1]{{\color{red}{#1}}}
+%\newcommand*{\اصطلاح}[1]{{\color{red}{#1}}}
+\newcommand{\اصطلاح}[1]{{\urduTechTermsfont{#1}}}
 
 %end commands cannot be redefined and as such these two are not usable
 \providecommand*{\ابتدا}[1]{\begin{#1}}
